--- a/ᎠᎹ.mw
+++ b/ᎠᎹ.mw
@@ -1,6 +1,6 @@
 [[File:Water droplet blue bg05.jpg|thumb|300px|ᏓᏓᏛᎾᏍᏗᏍᎬ ᎪᎭᏍᎬ ᎠᎹ]]
-[[File:Lake-huron-ipperwash-beach.jpg|right|thumb|300px|ᎠᎹ ᎭᏫᎾᏗᏢ [[Lake Huron|ᎥᏓᎵ Huron]], freshwater ᎥᏓᎵ ᎠᏰᎵ ᎯᎠ ᎠᏫᏒᏗ ᎧᏃᎮᎭ ᎠᎴ ᎨᎾᏓ.]]
-'''ᎠᎹ''' (ᎭᏫᎾᏗᏢ Ꮝ ᎤᏓᏅᎦᎸᏓ ᎤᏙᏢᏒ) ᎨᏒᎢ [[taste|ᏄᏍᏛ ᎠᎩᏍᏗ]] ᎦᏲᎵᎨ, [[odor|ᎦᏩᏒᎩ]] ᎦᏲᎵᎨ ᏗᎧᏃᏗ Ꮎ ᎨᏒᎢ ᎤᎵᏍᎨᏛ ᏂᎦᏛ ᎤᎾᏅᏛ ᏚᏙᏢᏒ [[life|ᎥᎴᏂᏙᎲ]] ᎠᎴ ᎨᏒᎢ ᎤᎾᏅᏛ ᎾᏍᎩ ᎾᏍᏇ ᏥᏄᏍᏗ ᎯᎠ ''ᎢᎬᏩᎾᏓᎴᎩ [[solvent|ᏰᎵᏊ ᏧᎬᏩᎶᏗ]]''. ᎾᏍᎩ ᎦᎾᏄᎪᎦ [[color|ᏗᎧᏃᏗ]] ᎦᏲᎵᎨ ᎯᎠ ᎤᏰᎸᎭ ᎠᎦᏙᎵ ᎭᏫᎾᏗᏢ ᎤᏍᏗ ᎤᎪᏗᏗ, ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎾᏍᎩ ᏰᎵᏇ ᎾᏍᏋ ᎠᎪᎲᎢ ᎾᏍᏋ [[blue|ᏌᎪᏂᎨ]] ᎭᏫᎾᏗᏢ ᎡᏆ ᎤᎪᏗᏗ ᎠᎴ ᎬᏙᏗ ᎠᏏᎾᏍᏛ ᎪᎱᏍᏗ ᏗᎬᏔᏂᏓᏍᏗ<ref>[http://www.deepocean.net/deepocean/index.php?science07.php The Color of Water: Visibility Under Water]</ref>. ᎬᏩᎶᏒᏍᏗ ᏗᎧᏃᏗ ᎾᎿ [[Earth|ᎡᎶᎯ]], ᎠᎹ ᎬᏂᎨᏒ ᏂᏚᏍᏗ ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᏚᏙᏢᏒ. ᎾᏍᎩ ᎦᎾᏄᎪᎦ ᎾᏍᎩ ᎤᎪᏗᏗ ᎭᏫᎾᏗᏢ ᎯᎠ [[ocean|ᎠᎺᏉᎯ]] ᎠᎴ ᎦᏚᎢ [[ice cap|ᎤᏁᏍᏓᎳ ᎠᎵᏍᏚᎶ]], ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᏥᏄᏍᏗ [[cloud|ᎤᎶᎩᎸ]], [[rain|ᎠᎦᏍᎬ ᎠᎹ]], [[river|ᎤᏪᏴ]], freshwater [[aquifer]], ᎠᎴ [[sea ice|ᎠᎺᏉᎯ ᎤᏁᏍᏓᎳ]]. ᎠᎹ ᎭᏫᎾᏗᏢ ᎾᏍᎩ ᎯᎠ ᏗᏂᏰᎸ ᎦᏌᏆᎸ ᎠᏓᏅᏍᏗ ᏗᎬᏩᎶᏒ [[water cycle|ᎠᏓᏠᎯᏍᏗ]] [[evaporation|ᏙᎢ]], [[precipitation (meteorology)|ᏑᎾᎴᎢ]], ᎠᎴ [[runoff (water)|runoff]] ᎯᎠ [[sea|ᎠᎺᏉᎯ]]. ᎤᏓᏅᎦᎸᏓ ᎠᎹ ᎨᏒᎢ [[Water#Water and human health|ᎤᎵᏍᎨᏛ ᏴᏫ ᎠᏰᎸ ᏄᏛᎿᏕᎬ]] ᎠᎴ ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎢᎦᏛᎭ ᎯᎠ ᎡᎶᎯ ᎾᏍᎩ ᎨᏒᎢ ᎭᏫᎾᏗᏢ ᏍᏆᎳᎢ ᎠᏓᏁᏗ.
+[[File:Lake-huron-ipperwash-beach.jpg|right|thumb|300px|ᎠᎹ ᎭᏫᎾᏗᏢ [[Lake Huron|ᎥᏓᎵ Huron]], [[freshwater|ᎢᏤᎢ ᎠᎹ]] ᎥᏓᎵ ᎠᏰᎵ ᎯᎠ ᎠᏫᏒᏗ ᎧᏃᎮᎭ ᎠᎴ ᎨᎾᏓ.]]
+'''ᎠᎹ''' (ᎭᏫᎾᏗᏢ Ꮝ ᎤᏓᏅᎦᎸᏓ ᎤᏙᏢᏒ) ᎨᏒᎢ [[taste|ᏄᏍᏛ ᎠᎩᏍᏗ]] ᎦᏲᎵᎨ, [[odor|ᎦᏩᏒᎩ]] ᎦᏲᎵᎨ ᏗᎧᏃᏗ Ꮎ ᎨᏒᎢ ᎤᎵᏍᎨᏛ ᏂᎦᏛ ᎤᎾᏅᏛ ᏚᏙᏢᏒ [[life|ᎥᎴᏂᏙᎲ]] ᎠᎴ ᎨᏒᎢ ᎤᎾᏅᏛ ᎾᏍᎩ ᎾᏍᏇ ᏥᏄᏍᏗ ᎯᎠ ''ᎢᎬᏩᎾᏓᎴᎩ [[solvent|ᏰᎵᏊ ᏧᎬᏩᎶᏗ]]''. ᎾᏍᎩ ᎦᎾᏄᎪᎦ [[color|ᏗᎧᏃᏗ]] ᎦᏲᎵᎨ ᎯᎠ ᎤᏰᎸᎭ ᎠᎦᏙᎵ ᎭᏫᎾᏗᏢ ᎤᏍᏗ ᎤᎪᏗᏗ, ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎾᏍᎩ ᏰᎵᏇ ᎾᏍᏋ ᎠᎪᎲᎢ ᎾᏍᏋ [[blue|ᏌᎪᏂᎨ]] ᎭᏫᎾᏗᏢ ᎡᏆ ᎤᎪᏗᏗ ᎠᎴ ᎬᏙᏗ ᎠᏏᎾᏍᏛ ᎪᎱᏍᏗ ᏗᎬᏔᏂᏓᏍᏗ<ref>[http://www.deepocean.net/deepocean/index.php?science07.php The Color of Water: Visibility Under Water]</ref>. ᎬᏩᎶᏒᏍᏗ ᏗᎧᏃᏗ ᎾᎿ [[Earth|ᎡᎶᎯ]], ᎠᎹ ᎬᏂᎨᏒ ᏂᏚᏍᏗ ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᏚᏙᏢᏒ. ᎾᏍᎩ ᎦᎾᏄᎪᎦ ᎾᏍᎩ ᎤᎪᏗᏗ ᎭᏫᎾᏗᏢ ᎯᎠ [[ocean|ᎠᎺᏉᎯ]] ᎠᎴ ᎦᏚᎢ [[ice cap|ᎤᏁᏍᏓᎳ ᎠᎵᏍᏚᎶ]], ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᏥᏄᏍᏗ [[cloud|ᎤᎶᎩᎸ]], [[rain|ᎠᎦᏍᎬ ᎠᎹ]], [[river|ᎤᏪᏴ]], ᎢᏤᎢ ᎠᎹ [[aquifer]], ᎠᎴ [[sea ice|ᎠᎺᏉᎯ ᎤᏁᏍᏓᎳ]]. ᎠᎹ ᎭᏫᎾᏗᏢ ᎾᏍᎩ ᎯᎠ ᏗᏂᏰᎸ ᎦᏌᏆᎸ ᎠᏓᏅᏍᏗ ᏗᎬᏩᎶᏒ [[water cycle|ᎠᏓᏠᎯᏍᏗ]] [[evaporation|ᏙᎢ]], [[precipitation (meteorology)|ᏑᎾᎴᎢ]], ᎠᎴ [[runoff (water)|runoff]] ᎯᎠ [[sea|ᎠᎺᏉᎯ]]. ᎤᏓᏅᎦᎸᏓ ᎠᎹ ᎨᏒᎢ [[Water#Water and human health|ᎤᎵᏍᎨᏛ ᏴᏫ ᎠᏰᎸ ᏄᏛᎿᏕᎬ]] ᎠᎴ ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎢᎦᏛᎭ ᎯᎠ ᎡᎶᎯ ᎾᏍᎩ ᎨᏒᎢ ᎭᏫᎾᏗᏢ ᏍᏆᎳᎢ ᎠᏓᏁᏗ.
 
 == Chemical ᎠᎴ ᏄᎵᏂᎬᎬ properties ==
 {| class="toccolours" border="1" style="float: right; clear: right; margin: 0 0 1em 1em; border-collapse: collapse;"
@@ -51,7 +51,7 @@
 
 ᎠᎹ ᎾᏍᎩ ᎾᏍᏇ ᏧᏠᎯᏍᏗ ᎯᎠ ᎦᏙᎯ ᎠᎴ ᎡᎪᎢ ᎾᎾᎯ [[aquifer]]. ᎪᎯ [[groundwater|ᎠᎹ ᎭᏫᎾᏗᏢ ᎦᏙᎯ]] ᎣᏂᏯᎨᏍᏙᏗ ᎠᏕᏴᎠᏍᎬ ᎦᏐᎯ ᎯᎠ ᎦᏚᎢ ᎭᏫᎾᏗᏢ [[spring (water)|ᎠᎹ ᎦᏄᎪᎬ]], ᎠᎴ ᎤᏟ ᎢᎦᎢ ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᎭᏫᎾᏗᏢ [[hot spring|ᎤᏗᎴᎩ ᎠᎹ ᎦᏄᎪᎬ]] ᎠᎴ [[geyser|ᎤᏗᎴᎩ ᎠᎹ ᎦᎾᏄᎪᎬ]]. ᎠᎹ ᎭᏫᎾᏗᏢ ᎦᏙᎯ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎠᎲᏏᏓᏍᏗ ᏗᏟᎶᏍᏔᏅ ᎭᏫᎾᏗᏢ [[water well|ᎠᏔᎴᏒ ᎠᎹᏱ]].
 
-ᎢᎬᏂᏏᏍᎩ ᎠᎹ ᏰᎵᏇ ᎢᎦᎢ ᎨᏒ ᎤᎪᏗᏗ ᏄᏓᎴᎿᎥ ᏗᎧᏃᏗ, ᎾᏍᎩ ᏰᎵᏇ ᏄᏍᏛ ᎠᎩᏍᏗ ᎠᎴ ᎦᏩᏒᎬ ᎤᏙᎯᏳ ᏧᏓᎴᎿᎢᎭ. ᎭᏫᎾᏗᏢ ᏯᏛᎾ ᎤᏙᎯᏳ, ᎠᏂᏴᏫ ᎠᎴ ᏐᎢ ᎡᎿᎢ ᎡᎥ ᎤᎭ ᎤᏙᎷᏩᏛᏓ ᎤᎾᏤᎵ ᎣᏓᏅᏛ ᎾᏍᏋ ᏰᎵᏆ ᎢᏯᏛᏁᏗ ᎠᎪᎵᏰᏗ ᎯᎠ drinkability ᎠᎹ: ᎡᎿᎢ ᎡᎥ ᏂᎦᎥᏊ ᏂᎦᎸᏉᏛᎾ ᎯᎠ ᏄᏍᏛ ᎠᎩᏍᏗ [[salty|ᎠᎹ]] [[sea water|ᎠᎺᏉᎯ ᎠᎹ]] ᎠᎴ ᎯᎠ ᎤᏲᎢ [[swamp|ᎠᎹᏳᎸᏗ ᏌᎷᏱ]] ᎠᎴ ᎠᏑᏰᏍᏗ ᎯᎠ ᎤᏟ ᎢᎦᎢ ᎤᏓᎾᎦᎸᏓ ᎠᎹ ᎣᏓᎸ ᎠᎹ ᎦᏄᎪᎬ ᎠᎴ aquifer.
+ᎢᎬᏂᏏᏍᎩ ᎠᎹ ᏰᎵᏇ ᎢᎦᎢ ᎨᏒ ᎤᎪᏗᏗ ᏄᏓᎴᎿᎥ ᏗᎧᏃᏗ, ᎾᏍᎩ ᏰᎵᏇ ᏄᏍᏛ ᎠᎩᏍᏗ ᎠᎴ ᎦᏩᏒᎬ ᎤᏙᎯᏳ ᏧᏓᎴᎿᎢᎭ. ᎭᏫᎾᏗᏢ ᏯᏛᎾ ᎤᏙᎯᏳ, ᎠᏂᏴᏫ ᎠᎴ ᏐᎢ ᎡᎿᎢ ᎡᎥ ᎤᎭ ᎤᏙᎷᏩᏛᏓ ᎤᎾᏤᎵ ᎣᏓᏅᏛ ᎾᏍᏋ ᏰᎵᏆ ᎢᏯᏛᏁᏗ ᎠᎪᎵᏰᏗ ᎯᎠ drinkability ᎠᎹ: ᎡᎿᎢ ᎡᎥ ᏂᎦᎥᏊ ᏂᎦᎸᏉᏛᎾ ᎯᎠ ᏄᏍᏛ ᎠᎩᏍᏗ [[salty|ᎠᎹ-ᎢᏳᏍᏗ]] [[sea water|ᎠᎺᏉᎯ ᎠᎹ]] ᎠᎴ ᎯᎠ ᎤᏲᎢ [[swamp|ᎠᎹᏳᎸᏗ ᏌᎷᏱ]] ᎠᎴ ᎠᏑᏰᏍᏗ ᎯᎠ ᎤᏟ ᎢᎦᎢ ᎤᏓᎾᎦᎸᏓ ᎠᎹ ᎣᏓᎸ ᎠᎹ ᎦᏄᎪᎬ ᎠᎴ aquifer.
 
 === ᎤᎦᎾᏭ ᎢᎦᎢ ᎤᏝᏅᏛ ᎢᎬᏁᏗ ᎠᎴ ᎤᎦᎾᏭ ᏙᎢ ===
 ᎠᎹ ᎾᏍᎩ ᎾᏍᏇ ᎤᎭ ᎯᎠ ᏩᎦᎸᎳᏗᏴ [[specific heat capacity|ᏗᎪᏍᎩ ᎤᎦᎾᏭ ᎢᎦᎢ ᎤᏝᏅᏛ ᎢᎬᏁᏗ]] ᏂᎦᎵᏍᏗᏍᎬᎫ ᎤᎾᏅᏛ chemical ᎠᏑᏰᎲᎯ, ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ ᎦᎸᎳᏗ [[heat of vaporization|ᎤᎦᎾᏭ  ᏙᎢ]], ᎢᏧᎳ ᎤᏍᏆᎸᎲ ᎯᎠ ᎤᏁᏉᏨᎯ [[hydrogen bonding|ᎯᏠᎨᏃ ᎠᏚᏓᎸᏙ]] ᎠᏰᎵ Ꮝ ᎠᏍᏓᏩᏛᏍᏗ. ᎾᏍᎩ ᎯᎠ ᏔᎵ ᏓᎦᏘᎴᎬ properties ᎠᎵᏍᎪᎸᏙᏗ ᎠᎹ ᏄᎶᏒᏍᏛᎾ ᎡᎶᎯ ᎤᏤᎵ [[climate|ᏄᏍᏛ ᎤᏴᎸ ᎠᎴ ᎤᎦᎾᏮ]] ᎾᎥᎢ ᎤᎵᏍᎪᎸᏔᏅ ᎡᏆ ᎠᏓᏁᏐᎳᏕᏗ ᎭᏫᎾᏗᏢ ᏄᏁᏌᏴᏢ.
@@ -112,7 +112,7 @@
 
 === ᏴᏫ ᎬᏔᏂᏓᏍᏗ ᎠᎹ ===
 [[File:Sprinkler03.jpg|thumb|250px|left|ᎠᎹ ᎤᎳᏂᎬᎬ ᎭᏫᎾᏗᏢ  sprinkler]] 
-[[File:TapWater-china.JPG|thumb|right|150px| ᏦᏬᏰᏂ ᎬᏗ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎠᎹ [[pump|ᎦᏌᏙᏯᏍᎩ]] ᎭᏫᎾᏗᏢ [[China|ᎠᎦᎾᏫᏗᏍᎩ]].]]
+[[File:TapWater-china.JPG|thumb|right|150px| ᏦᏬᏰᏂ ᎬᏗ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎠᎹ [[pump|ᎦᏌᏙᏯᏍᎩ]] ᎭᏫᎾᏗᏢ [[China|ᏓᎶᏂᎨᏍᏛ]]]]
 ᎠᏂᏴᏫ ᎬᏙᏗ ᎠᎹ ᎭᏫᎾᏗᏢ ᏧᏓᎴᏅᏓ ᎦᏟᏌᏅ ᏫᎦᎶᎯᏍᏗ.  ᎬᏩᏚᏫᏛ 72% ᎯᎠ ᎦᎵᏦᎯᏓ ᎠᏎᏊᎢ ᎦᏟᏌᏅ ᎤᎪᏗᏗ ᎯᎠ [[human|ᏴᏫ]] ᎠᏰᎸ ᎨᏒᎢ ᎪᏢᏅᎯ ᎠᎹ. ᎤᏯᎾᏛᏁᏗ ᏗᏙᎳᏤᎩ, ᎯᎠ ᎠᏰᎸ ᎧᏁᎦ ᎢᏯᏛᏁᏗ ᎠᏰᎵ ᏌᏊ ᎠᎴ ᎦᎵᏉᎩ [[litre]] ᎠᎹ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ [[day|ᎢᎦ]] ᏗᏓᏅᏗᏍᏙᏗ [[dehydration]], ᎯᎠ ᏚᏳᎪᏛ ᎢᎦᎢ ᎨᏒ ᎠᎵᏍᎦᏍᏙᏗ ᎾᎿ ᎯᎠ ᎤᏩᎾᏕᏍᎩ ᎠᎵᏂᎬᏁᏗᎢ, ᏄᏁᏌᏴᏢ, ᎤᎯᏌᏛ, ᎠᎴ ᏐᎢ ᎦᏃᏢᎩ ᏄᎬᏫᏳᏒ. ᎤᎪᏗᏗ ᎪᎯ ᎨᏒᎢ ingested ᏗᎬᏩᎶᏒ ᎤᏂᎩᏍᏘ ᎠᎴ ᎠᎵᏍᏓᏴᏗ ᏐᎢ ᎬᎾᏬᏍᎬ ᎠᎾᏗᏔᏍᎬ straight ᎠᎹ (ᎤᏗᎴᎩ ᎤᎦᎶᎬ ᎠᎴᏂᏙᎲ ᎢᏳᏓᎵᎭ ᎬᏔᏅᎯ ᎭᏫᎾᏗᏢ ᎢᎾᎨ ᏗᏓᏅᏗᏍᏙᏗ dehydration, ᎠᎴ ᎤᏠᏯᏍᏗ.) ᎾᏍᎩ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᏧᎸᏌᏓ ᎯᎳᎪ ᎤᏣᏘ ᎠᎹ intake ᎨᏒᎢ ᎤᏚᎳᏗ ᏄᎵᏍᏔᏅ ᎾᎥᎢ ᏅᏩᏙᎯᏯᏛ ᏴᏫ. ᏱᏂᎬᏛᎾ, ᎾᏍᎩᎾᎢ ᎾᏍᎩ ᎦᎪ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᎭ ᏧᏓᎵ ᏗᎦᏎᏍᏙᏗ, ᎾᏍᎩ ᎨᏒᎢ ᎤᏟ ᎬᏰᎸᏗ ᎤᏦᏍᏗ ᎠᏗᏔᏍᏗ ᎦᏟᏐᏗᎩ ᎤᏣᏘ ᎠᎹ, ᎠᎴ (ᎾᏍᎩ ᎨᏒᎢ ᎭᏫᎾᏗᏢ ᎤᎦᎾᏩ ᎤᎯᏌᏛ ᏙᏯᏗᎳ ᏄᏍᏗᏓᏅ ᎠᎴ ᎾᎯᏳᎢ exercising) ᎦᏂᏰᎬ ᎠᏗᏔᏍᏗ ᎦᏟᏐᏗᎩ ᎤᏍᏗ. ᏴᏫ ᏰᎵᏇ ᎠᏗᏔᏍᏗ ᎢᏅ ᎤᏟ ᎢᎦᎢ ᎠᎹ ᎬᎾᏬᏍᎬ ᎾᏍᎩ ᎢᏳᎵᏍᏙᏗ ᎾᎯᏳᎢ exercising, ᏱᏂᎬᏛᎾ, ᏓᏂᎲᏍᎬ ᎠᏂ ᎾᎾᎢ ᎠᏁᎸᏙᏗ [[water intoxication|ᎠᎹ ᎠᏓᎵᎦᎵᏍᏗᏍᎩ]], ᎦᏙ ᎤᏍᏗ ᏰᎵᏇ ᎾᏍᏋ ᎤᎲᏲᎵᏍᏗ. ᎯᎠ "ᏯᏛᎾ ᎤᏙᎯᏳ" Ꮎ ᎠᏏᏴᏫ ᎢᏳᏗᎾ ᎤᏲᏨᎯ ᏧᏁᎳ ᏗᏓᎨᏗ ᎠᎹ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎢᎦ ᏝᏰᎵ ᎾᏍᏋ ᎤᏍᏓᏩᏛᏒ ᎦᏐᎯ ᎠᏏᎾᏍᏛ ᏗᏓᎴᎲᏍᎬ.<ref>[http://ajpregu.physiology.org/cgi/content/full/283/5/R993 "Drink at least eight glasses of water a day." Really? Is there scientific evidence for "8 × 8"?] ᎾᎥᎢ Heinz Valdin, ᏗᎦᎸᏫᏍᏓᏁᏗ ᎤᎾᏙᏢᎯ, Dartmouth ᎦᏃᏢᎩ ᏅᏬᏘ ᏗᏕᎶᏆᏍᏗ, Lebanon, [[New Hampshire|ᎠᏤ ᎭᎻᏒ]] </ref> ᎾᎿᎢ ᎠᎴ ᏐᎢ ᎢᏰᎵᏍᏗᎢ ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎠ ᎢᏳᎵᏍᏙᏗ ᎠᎹ ᎾᎿ ᏄᏓᎨᏒ ᎤᏲᎱᏎᎸ ᎠᎴ ᏨᏕᎨᏫ Ꮎ ᎤᎭ ᏭᏪᏙᎢ dispelled.<ref>[http://www.factsmart.org/h2o/h2o.htm [[Drinking Water|ᎠᎾᏗᏔᏍᎬ ᎠᎹ]] - [[How Much|ᎯᎳᎫ]]?], Factsmart.org ᎤᏂᏏᎳᏛ ᏄᏍᏗᏓᏅ ᎠᎴ ᏫᏓᏎᎸᎢ ᎭᏫᏂᏗᏢ </ref>
 
 ᎯᎠ ᎣᏂᏴᎯᎨᏍᏙᏗ ᎠᎵᏍᏓᏴᏗ ᏩᏎᎸᎯ intake ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᎾᎥᎢ ᎯᎠ ᎢᏧᎳ ᎠᏴ [[National Research Council|ᎬᎾᏕᎾ ᏅᎠᏯᏍᏗ ᏗᏂᎳᏫᎩ]] ᎦᎸᏉᏔᏅ 2.7 liters ᎠᎹ ᏂᎦᏛ ᎦᏟᏌᏅ (ᎠᏠᏯᏍᏗᏍᎩ ᎠᎵᏍᏓᏴᏗ ᏙᏧᏓᎴᏅ) ᎾᏍᎩᎾᎢ ᎠᏂᎨᏴ ᎠᎴ 3.7 liters ᎾᏍᎩᎾᎢ [[men|ᎠᏂᏍᎦᏯ]] <ref> [http://www.iom.edu/report.asp?id=18495 Dietary Reference Intakes: Water, Potassium, Sodium, Chloride, and Sulfate], ᎠᎵᏍᏓᏴᏗ ᎠᎴ ᎠᏓᏍᏕᎸᏗ ᏒᏓᎷᎦ</ref>. ᎠᎹ ᎨᏒᎢ ᎤᎴᎾᎯᏛ ᏂᏛᎴᏅᏓ ᎯᎠ ᎠᏰᎸ ᎭᏫᎾᏗᏢ [[urine|ᎠᏗᎧᏓ]] ᎠᎴ [[feces|ᎦᎳᏅᎯ]], ᏗᎬᏩᎶᏒ [[sweat|ᎠᎵᎠᎷ]]ᎪᎯᏳᏙᏗ, ᎠᎴ ᎾᎥᎢ ᏗᏓᏲᎯᏍᏗ [[water vapor|ᎠᎹ ᎥᏝ ᎪᎱᏍᏗ]] ᎭᏫᎾᏗᏢ ᎯᎠ ᎧᏬᎳᏕᏍᎬ.
@@ -167,15 +167,15 @@ Lakesides ᎠᎴ beaches ᎠᎴ ᎤᏂᎸᏉᏗ ᏚᏙᏢᏒᎢ ᎾᏍᎩᎾᎢ 
 ᎾᎿ ᎯᎠ ᏐᎢ ᎤᏬᏰᏂ, [[Iraq]] ᎠᎴ [[Syria]] ᎠᎦᎦᏎᏍᏔᏅ ᎬᏙᏗ ᎠᏓᏅᏖᏗ ᎯᎠ ᎠᏁᏍᎨᎲ ᎯᎠ [[Atatürk Dam|Atatürk ᎠᏓᎦᏴᎵᎨ]] ᎭᏫᎾᏗᏢ [[Turkey|ᎬᎾ]] ᎠᎴ projected ᎢᏯᏛᏁᎵᏓᏍᏗ 22 ᎠᏓᎦᏴᎵᎨ ᎾᎿ ᎯᎠ [[Tigris]] ᎠᎴ [[Euphrates]] ᎤᏪᏴ <ref>[http://news.bbc.co.uk/1/shared/spl/hi/world/03/world_forum/water/html/turkey.stm "Turkey - water hot spots."] ''BBC News.''</ref>. ᎧᎵ ᏗᏙᎳᎩ ᎯᎠ BBC, ᎯᎠ ᏙᎪᏩᎸ 'ᎠᎹ-ᎧᏂᎬᎩ' ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏔᏂᏗ ᎦᏙᎯ ᎤᏛᏒ ᎢᎦᏘᎭᎢ ᏂᏛᎴᏅᏓ ᏦᎢ ᎭᏫᎾᏗᏢ 1955 ᏧᏁᎳ ᎭᏫᎾᏗᏢ 1990 ᎬᏙᏗ ᏄᏓᎴ ᎦᎵᏉᎩ utugi uwasv ᎾᏍᏋ ᎦᏟᏌᏅᎯ ᎭᏫᏂᏗᏢ 20 ᏧᏕᏘᏴᏓ, ᎠᏠᏯᏍᏗᏍᎩ ᏦᎢ [[Nile]] ᎠᏰᎵ ᏚᎾᏙᏢᏒ (ᎯᎠ Nile ᎨᏒᎢ shared ᎾᎥᎢ ᏐᏁᎳ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ).
 
 === ᎠᎹ ᎭᏫᎾᏗᏢ ᏓᎶᏂᎦᏍᏛ ===
-[[File:200407-sandouping-sanxiadaba-4.med.jpg|thumb|300px|ᏦᎢ ᏰᎵ ᎤᏝᏅᏛ ᎠᏓᎦᏴᎵᎨ, ᎠᎩᏍᎬᎢ, upstream ᎠᏍᏆᎨᏂ, 26 ᎫᏰᏉᏂ, 2004]] ᎭᏫᎾᏗᏢ ᏓᎶᏂᎦᏍᏛ, [[Vietnam]] ᎠᎴ [[Cambodia]] ᎠᎴ ᎡᎯᏍᏛ ᎾᎥᎢ [[China|ᎠᎦᎾᏫᏗᏍᎩ]] ᎤᏤᎵ ᎠᎴ [[Laos]]' ᎠᏁᎸᏙᏗ ᎠᎨᏔᏗᏍᏗ ᎯᎠ ᎤᏍᏉᎳᏗᏍᎬ ᎠᎹ. ᎠᎦᎾᏫᏗᏍᎩ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎠᏛᏅᎢᏍᏗᏍᎩ ᎯᎠ [[Three Gorges Dam|ᏦᎢ ᏰᎵ ᎤᏝᏅᏛ ᎠᏓᎦᏴᎵᎨ]] ᎠᏎᎸᎯ ᎾᎿ ᎯᎠ [[Yangtze River|Yangtze ᎤᏪᏴ]], ᎦᏙ ᎤᏍᏗ ᏯᏓᎢᏗᏏ ᏗᏙᎳᎩ ᏌᏊ ᎯᎠ ᎡᎶᎯ ᎤᏤᎵ ᎤᏔᏂᎢᏍᏗ ᎠᏓᎦᏴᎵᎨ, causing ᎤᎪᏗᏗ ᎠᎾᏓᏟᏏᏍᎬ ᎠᎴ environmental ᏗᎦᏎᏍᏙᏗ. ᎾᏍᎩ ᎾᏍᎩ ᎾᏍᏇ ᎤᎭ ᎠᏎᎸᎯ ᎤᏥᏍᏆᏙᏏᏰᏛ ᎠᎹ ᏂᏛᎴᏅᏓ ᎯᎠ Yangtze ᎯᎠ dwindling [[Yellow River|ᏓᎶᏂᎨ ᎤᏪᏴ]], ᎦᏙ ᎤᏍᏗ ᎨᎳᏍᏙᏗ ᎠᎦᎾᏫᏗᏍᎩ ᎤᏤᎵ ᎤᎪᏗᏗ ᎤᎵᏍᎨᏛ ᏓᎦᎶᎩᏍᎬ ᎤᏔᏂᏗ ᎦᏙᎯ.
+[[File:200407-sandouping-sanxiadaba-4.med.jpg|thumb|300px|ᏦᎢ ᏰᎵ ᎤᏝᏅᏛ ᎠᏓᎦᏴᎵᎨ, ᎠᎩᏍᎬᎢ, upstream ᎠᏍᏆᎨᏂ, 26 ᎫᏰᏉᏂ, 2004]] ᎭᏫᎾᏗᏢ ᏓᎶᏂᎦᏍᏛ, [[Vietnam]] ᎠᎴ [[Cambodia]] ᎠᎴ ᎡᎯᏍᏛ ᎾᎥᎢ [[China|ᏓᎶᏂᎨᏍᏛ]] ᎤᏤᎵ ᎠᎴ [[Laos]]' ᎠᏁᎸᏙᏗ ᎠᎨᏔᏗᏍᏗ ᎯᎠ ᎤᏍᏉᎳᏗᏍᎬ ᎠᎹ. ᎠᎦᎾᏫᏗᏍᎩ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎠᏛᏅᎢᏍᏗᏍᎩ ᎯᎠ [[Three Gorges Dam|ᏦᎢ ᏰᎵ ᎤᏝᏅᏛ ᎠᏓᎦᏴᎵᎨ]] ᎠᏎᎸᎯ ᎾᎿ ᎯᎠ [[Yangtze River|Yangtze ᎤᏪᏴ]], ᎦᏙ ᎤᏍᏗ ᏯᏓᎢᏗᏏ ᏗᏙᎳᎩ ᏌᏊ ᎯᎠ ᎡᎶᎯ ᎤᏤᎵ ᎤᏔᏂᎢᏍᏗ ᎠᏓᎦᏴᎵᎨ, causing ᎤᎪᏗᏗ ᎠᎾᏓᏟᏏᏍᎬ ᎠᎴ environmental ᏗᎦᏎᏍᏙᏗ. ᎾᏍᎩ ᎾᏍᎩ ᎾᏍᏇ ᎤᎭ ᎠᏎᎸᎯ ᎤᏥᏍᏆᏙᏏᏰᏛ ᎠᎹ ᏂᏛᎴᏅᏓ ᎯᎠ Yangtze ᎯᎠ dwindling [[Yellow River|ᏓᎶᏂᎨ ᎤᏪᏴ]], ᎦᏙ ᎤᏍᏗ ᎨᎳᏍᏙᏗ ᎠᎦᎾᏫᏗᏍᎩ ᎤᏤᎵ ᎤᎪᏗᏗ ᎤᎵᏍᎨᏛ ᏓᎦᎶᎩᏍᎬ ᎤᏔᏂᏗ ᎦᏙᎯ.
 
-[[File:Ganges River Delta, Bangladesh, India.jpg|thumb|left|Ganges [[river delta|ᎤᏪᏴ ᎦᏙᎯ]], Bangladesh ᎠᎴ ᎠᎹ ᎦᏄᎪᎬ]]ᎯᎠ [[Ganges]] ᎨᏒᎢ disputed ᎠᏰᎵ [[India|ᎠᎹ ᎦᏄᎪᎬ]] ᎠᎴ [[Bangladesh]]. ᎯᎠ ᎠᎹ ᎠᎾᏗᏒᎯᎯ ᎠᎴ ᎠᎴᏂᏙᎲ ᏄᎵᏍᏛ depleted ᎠᎴ polluted, ᎾᎯᏳᎢ ᎯᎠ [[glacier|ᎤᏴᏢ]] ᎨᎳᏍᏙᏗ ᎯᎠ ᎦᎸᏉᏗ [[Hinduism|Hindu]] ᎤᏪᏴ ᎨᏒᎢ ᎧᏂᎬᎾᎥ ᎢᏯᏍᎪᎯᏧᏈ ᏧᎾᎳᏏᏕᎾ ᎠᏂᏏᏴᏫᎭ ᏑᏕᏘᏴᏓ ᎢᎬᏂᏏᏍᎩ [[global warming|global ᎤᎦᎾᏭ]] ᎠᎴ [[deforestation]] ᎭᏫᎾᏗᏢ ᎯᎠ [[Himalayas]] causing ᎭᏫᎾᏗᏢ ᎤᏪᏴᎢ ᎦᏛᎢ ᎾᎾᎯ ᎯᎠ Ganges ᎤᏪᏴ ᎤᎧᏲᏗ ᎦᎸᎳᏗᏢ. ᎨᎢ, ᎠᎹ ᎦᏄᎪᎬ ᎠᎨᏔᏗᏍᏗ ᎯᎠ ᎠᏕᏴᎠᏍᎬ Bangladesh ᎬᏙᏗ ᎯᎠ [[Farakka Barrage]], 10 km ᎾᎿ ᎯᎠ ᎠᏴᏫᏯ ᎠᏍᏆᎨᏂ ᎯᎠ ᎠᏟᎶᏛ ᎬᎪᏛ. ᎢᏳᎳᎪᏗ ᎯᎠ ᎣᏂᏱᏳ 1990s, ᎠᎹ ᎦᏄᎪᎬ ᎬᏔᏅᎯ ᎯᎠ barrage ᎤᏥᏍᏆᏙᏏᏰᏛ ᎯᎠ ᎤᏪᏴ [[Calcutta|ᎤᏓᏂᏝᏅ]] ᎠᎴᏫᏍᏙᏗ ᎯᎠ ᎦᏚᎲᎢ ᎤᏤᎵ ᏥᏳ ᏗᏔᎳᏗᏍᏗ ᎤᎧᏲᏗ ᎦᎸᎳᏗᏢ ᎾᎯᏳᎨᏒ ᎯᎠ ᎤᎧᏲᏗ ᎢᏳ ᎤᏕᏘᏴᏌᏗᏒ. ᎪᎯ ᏗᎦᏘᎸᏍᏗ Bangladeshi ᏗᏂᎶᎩᏍᎩ ᎠᎹ ᎠᎴ [[silt|ᎦᎳᏅᎯ]], ᎠᎴ ᎠᎦᏍᎦᏂ ᎯᎠ [[Sundarban]] wetlands ᎠᎴ [[mangrove]] ᎠᏙᎯ ᎢᎾᎨ ᎾᎾᎢ ᎯᎠ ᎤᏪᏴ ᎤᏤᎵ ᎦᏙᎯ utvyolistanvhi threatened. ᎯᎠ ᏔᎵ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᎤᎭ ᎾᏊ ᎤᏬᏪᎳᏅᎩ ᏓᏓᏁᏤᎸ ᎠᏓᏲᏔᎡᏗ ᎯᎠ ᎠᎹ ᎤᏟ ᎢᎦᎢ ᎢᎦᏘᎭ. ᎠᎹ ᎢᎦ ᎣᏏ, ᏱᏂᎬᏛᎾ, ᎤᎾᎵᏃᎯᏴᎯ ᎤᎪᏗᏗ ᎠᎦᏎᏍᏙᏗ ᎢᎬᏁᏗ, ᎬᏙᏗ ᎦᎸᎳᏗ ᎤᏩᎾᏕᏍᎩ [[arsenic|ᎠᏍᎩᎾᏗᏍᏗ]] ᎠᎴ untreated ᏗᏓᏲᎯᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏪᏴ ᎠᎹ <ref>[http://news.bbc.co.uk/1/shared/spl/hi/world/03/world_forum/water/html/river_ganges.stm "Ganges river: Water Hot Spots."] ''BBC News.''</ref>.
+[[File:Ganges River Delta, Bangladesh, India.jpg|thumb|left|Ganges [[river delta|ᎤᏪᏴ ᎦᏙᎯ]], Bangladesh ᎠᎴ ᎠᎹ ᎦᏄᎪᎬ]] ᎯᎠ [[Ganges]] ᎨᏒᎢ disputed ᎠᏰᎵ [[India|ᎢᏅᏗᎾ]] ᎠᎴ [[Bangladesh]]. ᎯᎠ ᎠᎹ ᎠᎾᏗᏒᎯᎯ ᎠᎴ ᎠᎴᏂᏙᎲ ᏄᎵᏍᏛ depleted ᎠᎴ polluted, ᎾᎯᏳᎢ ᎯᎠ [[glacier|ᎤᏴᏢ]] ᎨᎳᏍᏙᏗ ᎯᎠ ᎦᎸᏉᏗ [[Hinduism|Hindu]] ᎤᏪᏴ ᎨᏒᎢ ᎧᏂᎬᎾᎥ ᎢᏯᏍᎪᎯᏧᏈ ᏧᎾᎳᏏᏕᎾ ᎠᏂᏏᏴᏫᎭ ᏑᏕᏘᏴᏓ ᎢᎬᏂᏏᏍᎩ [[global warming|global ᎤᎦᎾᏭ]] ᎠᎴ [[deforestation]] ᎭᏫᎾᏗᏢ ᎯᎠ [[Himalayas]] causing ᎭᏫᎾᏗᏢ ᎤᏪᏴᎢ ᎦᏛᎢ ᎾᎾᎯ ᎯᎠ Ganges ᎤᏪᏴ ᎤᎧᏲᏗ ᎦᎸᎳᏗᏢ. ᎨᎢ, ᎠᎹ ᎦᏄᎪᎬ ᎠᎨᏔᏗᏍᏗ ᎯᎠ ᎠᏕᏴᎠᏍᎬ Bangladesh ᎬᏙᏗ ᎯᎠ [[Farakka Barrage]], 10 km ᎾᎿ ᎯᎠ ᎠᏴᏫᏯ ᎠᏍᏆᎨᏂ ᎯᎠ ᎠᏟᎶᏛ ᎬᎪᏛ. ᎢᏳᎳᎪᏗ ᎯᎠ ᎣᏂᏱᏳ 1990s, ᎠᎹ ᎦᏄᎪᎬ ᎬᏔᏅᎯ ᎯᎠ barrage ᎤᏥᏍᏆᏙᏏᏰᏛ ᎯᎠ ᎤᏪᏴ [[Calcutta|ᎤᏓᏂᏝᏅ]] ᎠᎴᏫᏍᏙᏗ ᎯᎠ ᎦᏚᎲᎢ ᎤᏤᎵ ᏥᏳ ᏗᏔᎳᏗᏍᏗ ᎤᎧᏲᏗ ᎦᎸᎳᏗᏢ ᎾᎯᏳᎨᏒ ᎯᎠ ᎤᎧᏲᏗ ᎢᏳ ᎤᏕᏘᏴᏌᏗᏒ. ᎪᎯ ᏗᎦᏘᎸᏍᏗ Bangladeshi ᏗᏂᎶᎩᏍᎩ ᎠᎹ ᎠᎴ [[silt|ᎦᎳᏅᎯ]], ᎠᎴ ᎠᎦᏍᎦᏂ ᎯᎠ [[Sundarban]] wetlands ᎠᎴ [[mangrove]] ᎠᏙᎯ ᎢᎾᎨ ᎾᎾᎢ ᎯᎠ ᎤᏪᏴ ᎤᏤᎵ ᎦᏙᎯ ᎤᏢᏲᎵᏍᏔᏅᎯ threatened. ᎯᎠ ᏔᎵ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᎤᎭ ᎾᏊ ᎤᏬᏪᎳᏅᎩ ᏓᏓᏁᏤᎸ ᎠᏓᏲᏔᎡᏗ ᎯᎠ ᎠᎹ ᎤᏟ ᎢᎦᎢ ᎢᎦᏘᎭ. ᎠᎹ ᎢᎦ ᎣᏏ, ᏱᏂᎬᏛᎾ, ᎤᎾᎵᏃᎯᏴᎯ ᎤᎪᏗᏗ ᎠᎦᏎᏍᏙᏗ ᎢᎬᏁᏗ, ᎬᏙᏗ ᎦᎸᎳᏗ ᎤᏩᎾᏕᏍᎩ [[arsenic|ᎠᏍᎩᎾᏗᏍᏗ]] ᎠᎴ untreated ᏗᏓᏲᎯᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏪᏴ ᎠᎹ <ref>[http://news.bbc.co.uk/1/shared/spl/hi/world/03/world_forum/water/html/river_ganges.stm "Ganges river: Water Hot Spots."] ''BBC News.''</ref>.
 
 === ᎠᎹ ᎭᏫᎾᏗᏢ ᎤᎦᎾᏭ ᎠᎺᎵᎨ ===
-ᎯᎠ [[Guaraní Aquifer]], ᎤᏂᎷᏨ ᎠᏰᎵ ᎯᎠ [[Mercosur]] ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ [[Argentina]], [[Brazil]], [[Bolivia]] ᎠᎴ [[Paraguay]], ᎬᏙᏗ  ᎦᏟᏌᏅ ᎪᏪᎵ ᎬᏩᏚᏫᏛ 40000 km³, ᎨᏒᎢ ᎤᎵᏍᎨᏛ ᏗᏓᎴᎲᏍᎬ ᎢᏤᎢ, drinkable ᎠᎹ, ᎾᏍᎩᎾᎢ ᏂᎦᏛ ᏅᎩ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ. 
+ᎯᎠ [[Guaraní Aquifer]], ᎤᏂᎷᏨ ᎠᏰᎵ ᎯᎠ [[Mercosur]] ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ [[Argentina]], [[Brazil|ᏓᎶᏂᎨᏍᏛ]], [[Bolivia]] ᎠᎴ [[Paraguay]], ᎬᏙᏗ  ᎦᏟᏌᏅ ᎪᏪᎵ ᎬᏩᏚᏫᏛ 40000 km³, ᎨᏒᎢ ᎤᎵᏍᎨᏛ ᏗᏓᎴᎲᏍᎬ ᎢᏤᎢ, drinkable ᎠᎹ, ᎾᏍᎩᎾᎢ ᏂᎦᏛ ᏅᎩ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ. 
 
-=== Privatisation ᎠᎹ ᏚᎾᏓᏡᎬᎢ ===
-[[Privatisation]] ᎠᎹ ᏚᎾᏓᏡᎬᎢ ᎤᎭ ᏭᏪᏙᎢ contested ᎾᎿ ᎯᎸᏍᎩ ᎢᏳᏓᎵᎭ, ᎤᏍᏆᎸᎲ ᎤᏲᎢ ᎢᎦ ᎣᏏ ᎯᎠ ᎠᎹ, ᎧᏁᏉᏤᎩ ᏚᏂᎬᏩᎶᏔᏅ, ᎠᎴ ᎤᏠᏯᏍᏗ. ᎭᏫᎾᏗᏢ [[Bolivia]] ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎯᎠ ᎧᏁᎢᏍᏔᏅ privatization ᎠᎹ ᏚᎾᏓᏡᎬᎢ ᎾᎥᎢ ᎯᎠ [[IMF]] ᎨᏒᎩ ᏚᎾᏠᏒ ᎾᎥᎢ [[Cochabamba protests of 2000|ᎤᏂᎸᏉᏗ ᏗᎦᏘᎸᏍᏗ ᎭᏫᎾᏗᏢ Cochabamba ᎭᏫᎾᏗᏢ 2000]], ᎦᏙ ᎤᏍᏗ ousted [[Bechtel]], ᏴᏩᏁᎬ ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ ᎠᏍᏓᏯ ᏕᎫᎪᏛ ᏚᎳᏏᏔᏅᎩ ᎭᏫᎾᏗᏢ San Francisco. [[SUEZ]] ᎤᎭ ᎤᏂᎩᏍᏔᏅ ᎧᏂᎬᎾᎥ ᏂᏛᎴᏅᏓ ᎤᎦᎾᏭ ᎠᎺᎵᎨ, ᎤᏍᏆᎸᎲ ᎤᏠᏱ ᏗᎦᏘᎸᏍᏗ (ᎭᏫᎾᏗᏢ [[Buenos Aires]] ᎭᏫᎾᏗᏢ [[Argentina]], ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ ᎭᏫᎾᏗᏢ [[Santa Fe, Argentina|Santa ᎣᏍᏛᏗᏍᏗ]]; ᎭᏫᎾᏗᏢ [[Córdoba, Argentina|Córdoba]], consumers ᎤᎩᏒᎩ ᎯᎠ ᏕᎦᎳᏅᏛ ᏗᎦᏘᎸᏍᏗ ᎠᎹ ᏓᎬᏩᎶᏛ ᎠᏌᎳᏙᏗ ᏥᏄᏍᏗ ᎤᏣᏘ ᏥᏄᏍᏗ 500 ᏌᏊ ᎢᎦᏛ ᎤᏃᏍᏛ mandated ᎾᎥᎢ Suez). ᎭᏫᎾᏗᏢ ᎤᎦᎾᏭ ᎠᎴ ᎠᏰᎵ ᎠᎺᎵᎨ, Suez ᎤᎭ ᎠᎹ ᎤᏁᎳᎩ ᎡᎵᏒᎢ ᎭᏫᎾᏗᏢ Argentina, Bolivia, Brazil ᎠᎴ ᎠᏂᏍᏆᏂᎢ. "Bolivian ᎠᏰᎵ ᎤᎾᏒᎧᎵ ᎢᏳᏩᏂᏌᏛ Suez ᎾᏍᎩᎾᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᏓᎾᎵᎪᏗᏍᎬ ᏰᎵᏊ ᎦᎵᏦᏕ ᎠᎿᎥ ᎠᎹ ᎤᎵᏍᏕᎸᏗ ᏥᏄᏍᏗ mandated ᎾᎥᎢ Ꮝ ᏓᏓᏁᏤᎸ ᎠᎴ ᎾᏍᎩᎾᎢ ᏓᎫᏮᎶᏗᏍᎬ ᏥᏄᏍᏗ ᎤᏣᏘ ᏥᏄᏍᏗ $455 ᏗᎵᎪᏔᏅᎯ, ᎠᎴ ᎬᏩᏚᏫᏛ ᏦᎢ ᎢᏧᏩᎪᏗ ᎯᎠ ᎢᎦᏘᎭ ᎢᎬᏁᎸ ᏏᏅᏙ ᏂᎦᎵᏍᏔᏂᏒ ᎠᏓᏠᏍᎬ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎠᏓᎦᏘᏕᎯ", ᎧᎵ ᏗᏙᎳᎩ ᎯᎠ ''[[Mercury News|ᏗᎦᏣᏄᎶ ᎤᎾᏣ ᏗᏤᎢ]]'' <ref> [http://www.mercurynews.com/mld/mercurynews/news/world/13969197.htm "Bolivia's water wars coming to end under Morales."] ''[[Mercury News|ᏗᎦᏣᏄᎶ ᎤᎾᏣ ᏗᏤᎢ]]''. February 26, 2006.</ref>. [[South Africa|ᏧᎦᎾᏮ ᎬᎿᎦᏍᏛ]] ᎾᏍᎩ ᎾᏍᏇ ᎪᏢᏅᎯ ᎠᏓᏅᏍᏗ privatize ᎠᎹ, ᎤᏦᎠᏎᏗ ᎠᏓᎴᏂᏍᎬ ᎥᏳᎩ ᎤᏲᏨᎯ 200.<ref> [http://news.bbc.co.uk/2/hi/talking_point/2957550.stm "Water privatisation: ask the experts."] ''BBC News''. December 10, 2004</ref>
+=== Privatization ᎠᎹ ᏚᎾᏓᏡᎬᎢ ===
+[[Privatization]] ᎠᎹ ᏚᎾᏓᏡᎬᎢ ᎤᎭ ᏭᏪᏙᎢ contested ᎾᎿ ᎯᎸᏍᎩ ᎢᏳᏓᎵᎭ, ᎤᏍᏆᎸᎲ ᎤᏲᎢ ᎢᎦ ᎣᏏ ᎯᎠ ᎠᎹ, ᎧᏁᏉᏤᎩ ᏚᏂᎬᏩᎶᏔᏅ, ᎠᎴ ᎤᏠᏯᏍᏗ. ᎭᏫᎾᏗᏢ [[Bolivia]] ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎯᎠ ᎧᏁᎢᏍᏔᏅ privatization ᎠᎹ ᏚᎾᏓᏡᎬᎢ ᎾᎥᎢ ᎯᎠ [[IMF]] ᎨᏒᎩ ᏚᎾᏠᏒ ᎾᎥᎢ [[Cochabamba protests of 2000|ᎤᏂᎸᏉᏗ ᏗᎦᏘᎸᏍᏗ ᎭᏫᎾᏗᏢ Cochabamba ᎭᏫᎾᏗᏢ 2000]], ᎦᏙ ᎤᏍᏗ ousted [[Bechtel]], ᏴᏩᏁᎬ ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ ᎠᏍᏓᏯ ᏕᎫᎪᏛ ᏚᎳᏏᏔᏅᎩ ᎭᏫᎾᏗᏢ San Francisco. [[SUEZ]] ᎤᎭ ᎤᏂᎩᏍᏔᏅ ᎧᏂᎬᎾᎥ ᏂᏛᎴᏅᏓ ᎤᎦᎾᏭ ᎠᎺᎵᎨ, ᎤᏍᏆᎸᎲ ᎤᏠᏱ ᏗᎦᏘᎸᏍᏗ (ᎭᏫᎾᏗᏢ [[Buenos Aires]] ᎭᏫᎾᏗᏢ [[Argentina]], ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ ᎭᏫᎾᏗᏢ [[Santa Fe, Argentina|Santa ᎣᏍᏛᏗᏍᏗ]]; ᎭᏫᎾᏗᏢ [[Córdoba, Argentina|Córdoba]], consumers ᎤᎩᏒᎩ ᎯᎠ ᏕᎦᎳᏅᏛ ᏗᎦᏘᎸᏍᏗ ᎠᎹ ᏓᎬᏩᎶᏛ ᎠᏌᎳᏙᏗ ᏥᏄᏍᏗ ᎤᏣᏘ ᏥᏄᏍᏗ 500 ᏌᏊ ᎢᎦᏛ ᎤᏃᏍᏛ mandated ᎾᎥᎢ Suez). ᎭᏫᎾᏗᏢ ᎤᎦᎾᏭ ᎠᎴ ᎠᏰᎵ ᎠᎺᎵᎨ, Suez ᎤᎭ ᎠᎹ ᎤᏁᎳᎩ ᎡᎵᏒᎢ ᎭᏫᎾᏗᏢ Argentina, Bolivia, Brazil ᎠᎴ ᎠᏂᏍᏆᏂᎢ. "Bolivian ᎠᏰᎵ ᎤᎾᏒᎧᎵ ᎢᏳᏩᏂᏌᏛ Suez ᎾᏍᎩᎾᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᏓᎾᎵᎪᏗᏍᎬ ᏰᎵᏊ ᎦᎵᏦᏕ ᎠᎿᎥ ᎠᎹ ᎤᎵᏍᏕᎸᏗ ᏥᏄᏍᏗ mandated ᎾᎥᎢ Ꮝ ᏓᏓᏁᏤᎸ ᎠᎴ ᎾᏍᎩᎾᎢ ᏓᎫᏮᎶᏗᏍᎬ ᏥᏄᏍᏗ ᎤᏣᏘ ᏥᏄᏍᏗ $455 ᏗᎵᎪᏔᏅᎯ, ᎠᎴ ᎬᏩᏚᏫᏛ ᏦᎢ ᎢᏧᏩᎪᏗ ᎯᎠ ᎢᎦᏘᎭ ᎢᎬᏁᎸ ᏏᏅᏙ ᏂᎦᎵᏍᏔᏂᏒ ᎠᏓᏠᏍᎬ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎠᏓᎦᏘᏕᎯ", ᎧᎵ ᏗᏙᎳᎩ ᎯᎠ ''[[Mercury News|ᏗᎦᏣᏄᎶ ᎤᎾᏣ ᏗᏤᎢ]]'' <ref> [http://www.mercurynews.com/mld/mercurynews/news/world/13969197.htm "Bolivia's water wars coming to end under Morales."] ''[[Mercury News|ᏗᎦᏣᏄᎶ ᎤᎾᏣ ᏗᏤᎢ]]''. February 26, 2006.</ref>. [[South Africa|ᏧᎦᎾᏮ ᎬᎿᎦᏍᏛ]] ᎾᏍᎩ ᎾᏍᏇ ᎪᏢᏅᎯ ᎠᏓᏅᏍᏗ privatize ᎠᎹ, ᎤᏦᎠᏎᏗ ᎠᏓᎴᏂᏍᎬ ᎥᏳᎩ ᎤᏲᏨᎯ 200.<ref> [http://news.bbc.co.uk/2/hi/talking_point/2957550.stm "Water privatization: ask the experts."] ''BBC News''. December 10, 2004</ref>
 
 === Regulating ᎠᎹ ᏗᏗᎦᎴᏴ ===
 [[File:Photo of two people reflected in a fish pond.JPG|right|thumb|255px|ᏔᎵ ᏴᏫ [[reflection (physics)|reflected]] ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᎹ   [[fish pond|ᎠᏣᏗ ᎥᏓᎵ]] ]]
@@ -212,7 +212,7 @@ Lakesides ᎠᎴ beaches ᎠᎴ ᎤᏂᎸᏉᏗ ᏚᏙᏢᏒᎢ ᎾᏍᎩᎾᎢ 
 * OA Jones, JN Lester ᎠᎴ N Voulvoulis, ᎠᏅᏬᏗ: ᎠᏓᎾᏄᎳᏗ ᎠᎾᏗᏔᏍᎬ ᎠᎹ? ''TRENDS ᎭᏫᎾᏗᏢ Biotechnology'' 23(4): 163, 2005
 * ᏂᏚᏢᏫᏎᎲᎾ, F (ᎦᎾᏄᎪᏫᏒ), ᎠᎹ, ᏂᎦᏛ ᎧᏃᎮᏍᎩ, ᎠᏏᏴᏫ ᏗᏂᎴᏱᏗᏍᎩ, ᎢᏤ York, 1972-1982
 * [http://twt.mpei.ac.ru/mas/worksheets/VTP_wsp.mcd Property of Water and Water Steam w Thermodynamic Surface]
-* PH Gleick ᎠᎴ ᎤᎾᎵᎪᎯ, ᎯᎠ ᎡᎶᎯ ᎤᏤᎵ ᎠᎹ: ᎯᎠ ᎠᏓᏠᎯᏍᏗ ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᎾᎿ Freshwater ᏧᎬᏩᎶᏗ ᎦᎷᎩ. ᎠᎽᏰᎵ ᏗᏂᎴᏱᏗᏍᎩ, ᏩᏏᏓᏂ, DC. (ᎦᎴᏴᏔᏅᎯ ᏂᎦᎥᎢ ᏔᎵ ᏧᏕᏘᏴᏓ, ᎠᏓᎴᏂᏍᎬ ᎭᏫᎾᏗᏢ 1998.)
+* PH Gleick ᎠᎴ ᎤᎾᎵᎪᎯ, ᎯᎠ ᎡᎶᎯ ᎤᏤᎵ ᎠᎹ: ᎯᎠ ᎠᏓᏠᎯᏍᏗ ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᎾᎿ ᎢᏤᎢ ᎠᎹ ᏧᎬᏩᎶᏗ ᎦᎷᎩ. ᎠᎽᏰᎵ ᏗᏂᎴᏱᏗᏍᎩ, ᏩᏏᏓᏂ, DC. (ᎦᎴᏴᏔᏅᎯ ᏂᎦᎥᎢ ᏔᎵ ᏧᏕᏘᏴᏓ, ᎠᏓᎴᏂᏍᎬ ᎭᏫᎾᏗᏢ 1998.)
 
 === ᏓᏓᏚᎬ ᎪᏪᎵ ===
 <references/>
