--- a/ᎠᏰᎵ_ᏚᎾᏙᏢᏩᏗᏒ_ᏙᎪᏪᎸ.mw
+++ b/ᎠᏰᎵ_ᏚᎾᏙᏢᏩᏗᏒ_ᏙᎪᏪᎸ.mw
@@ -11,7 +11,7 @@
 *[[Albania]]
 *[[Algeria]]
 *[[Andorra]]
-*[[Angola]]
+*[[Angola|ᎠᏂᎪᎳ]]
 *[[Antigua ᎠᎴ Barbuda]]
 *[[Argentina]]
 *[[Armenia]]
@@ -35,6 +35,7 @@
 *[[Iran]]
 *[[Iraq]]
 *[[Ireland]]
+*[[Israel|ᎢᏍᏩᎵ]]<ref>[http://home.earthlink.net/~deanna1jc/moondoves_spiral_maindictionary.htm "ᏲᏁᎦ–ᏣᎳᎦ ᎠᏁᏢᏔᏅᎯ." ''Moondoves Spiral.'' (2 ᏅᏓᏕᏆ 2010)
 
 ==Ꭳ==
 *[[Oman|ᎣᎹᏂ]]
@@ -194,7 +195,7 @@
 *[[Qatar]]
 
 ==R==
-*[[Romania]]
+*[[Romania|ᎶᎹᏂᏯ]]
 *[[Rwanda]]
 
 ==Ꮝ==
