--- a/ᏗᎧᏃᎩᏛ.mw
+++ b/ᏗᎧᏃᎩᏛ.mw
@@ -1,33 +1,28 @@
-[[File:Music on top of Opera Garnier p1150815.jpg|thumb|ᏗᎪᏏᏐᏗ ᏗᎧᏃᎩᏛ ᏀᎾ ᎯᎠ [[Opéra Garnier]]]]
-'''ᏗᎧᏃᎩᏛ''' ᎨᏒᎢ [[art|ᏗᏟᎶᏍᏙᏗ]] ᎤᏙᏢᏒ Ꮎ ᎠᏓᏠᏯᏍᏙᏗ ᎤᎾᏙᏢᏅᎯ ᎠᎴ ᎤᏃᏴᎬ [[sound|ᎤᏃᏴᎬ]]ᎠᎴ [[silence|ᎡᎷᏪᎢ]]. ᎾᏍᎩ ᎨᏒᎢ ᎤᏠᏱᎭ ᎢᏳᏂᏪᏛ ᎭᏫᎾᏗᏢ ᏓᏓᎴᏂᏍᎬ [[pitch|ᎠᏗᏅᏗ]] (ᎦᏙ ᎤᏍᏗ ᎠᏠᏯᏍᏗ [[melody|ᎠᏟᎶᏍᏗ]] ᎠᎴ [[harmony|ᏅᏩᏙᎯᏯᏛ]]), [[rhythm|ᎪᏪᎵ ᎠᏔᏲᎯᎯ]] (ᎦᏙ ᎤᏍᏗ ᎠᏠᏯᏍᏗ [[tempo]] ᎠᎴ [[meter (music)|ᎠᏎᎯᎯ]]), ᎠᎴ ᎯᎠ ᎢᎦ ᎣᏏ ᎤᏃᏴᎬ (ᎦᏙ ᎤᏍᏗ ᎠᏠᏯᏍᏗ [[timbre|ᎠᏙᎯ]], [[articulation (music)|ᏧᏠᎯᏍᏗ]], [[dynamics (music)|ᏄᎵᏂᎬᎬ]], ᎠᎴ [[texture (music)|ᎤᏐᏅ]]). ᏗᎧᏃᎩᏛ ᎠᎾᏍᎬᏘ ᎾᏍᎩ ᎾᏍᏇ ᎠᏓᏠᏯᏍᏙᏗ ᎤᎾᏁᎶᏔᏅ [[form (music)|ᏚᏙᏢᏒ]] ᎭᏫᎾᏗᏢ ᎠᎴᏰᏑ ᏗᎬᏩᎶᏒ ᎯᎠ ᎠᏁᏍᎨᎲ [[pattern|ᏗᏟᎶᏍᏙᏗ]]ᎠᎴ [[combinations|ᎤᎾᏓᏟᏌᏅ]] ᏂᎬᏩᏍᏛ stimuli, ᏄᎬᏫᏳᏌᏕᎩ ᎤᏃᏴᎬ. ᏗᎧᏃᎩᏛ ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᎬᏔᏅᎯ ᎾᏍᎩᎾᎢ [[art|ᏗᏟᎶᏍᏙᏗ]]ᎦᎾᏄᎪᏫᏒ ᎠᎴ [[aesthetics|ᎤᏓᏅᏖᎢᏌᏛ]], [[communication|ᏗᏓᏛᎪᏔᏅ]], [[entertainment|ᎤᏓᏅᏘ ᏧᎾᎵᏃᎮᏗ]], ᎠᎴ ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᏂᏚᏰᎸᏛᎢ. ᎯᎠ [[Definitions of music|ᏩᏎᏍᏗ ᏀᎾ]] ᎦᏙ ᎤᏍᏗ ᎪᏪᎳᏅ ᎠᎪᎵᏰᏗ ᏗᎧᏃᎩᏛ ᏧᏓᎴᏀᎢ ᎧᎵ ᏗᏙᎳᎩ ᎥᎦᏔᎲᎢ ᎠᎴ ᎠᎾᏓᏟᏏᏍᎬ ᏄᏍᏗᏓᏅ. 
+[[File:Opivy2.jpg|thumb|220px|[[Operation Ivy|ᎠᏥᏰᎶᎲ ᎤᎸᏗ]], ᏍᎧ [[band|ᏗᏂᏤᎷᎯᏍᎩ]], [[Berkeley, ᎠᏕᎳᏧᏢᎢ]]]]
+[[File:Robert Johnson.jpg|thumb|220px|Robert Johnson [[guitar|ᏗᎧᏃᎩᏍᏗ]] ᏓᏁᎶᎲᎦ]]
+'''ᏗᎧᏃᎩᏛ''' ᎨᏒᎢ [[art|ᏗᏟᎶᏍᏙᏗ]] ᎤᏙᏢᏒ Ꮎ ᎠᏓᏠᏯᏍᏙᏗ ᎤᎾᏙᏢᏅᎯ ᎠᎴ ᎤᏃᏴᎬ [[sound|ᎤᏃᏴᎬ]] ᎠᎴ [[silence|ᎡᎷᏪᎢ]]. ᎾᏍᎩ ᎨᏒᎢ ᎤᏠᏱᎭ ᎢᏳᏂᏪᏛ ᎭᏫᎾᏗᏢ ᏓᏓᎴᏂᏍᎬ [[pitch|ᎠᏗᏅᏗ]] (ᎦᏙ ᎤᏍᏗ ᎠᏠᏯᏍᏗ [[melody|ᎠᏟᎶᏍᏗ]] ᎠᎴ [[harmony|ᏅᏩᏙᎯᏯᏛ]]), [[rhythm|ᎪᏪᎵ ᎠᏔᏲᎯᎯ]] (ᎦᏙ ᎤᏍᏗ ᎠᏠᏯᏍᏗ [[tempo]] ᎠᎴ [[meter (music)|ᎠᏎᎯᎯ]]), ᎠᎴ ᎯᎠ ᎢᎦ ᎣᏏ ᎤᏃᏴᎬ (ᎦᏙ ᎤᏍᏗ ᎠᏠᏯᏍᏗ [[timbre|ᎠᏙᎯ]], [[articulation (music)|ᏧᏠᎯᏍᏗ]], [[dynamics (music)|ᏄᎵᏂᎬᎬ]], ᎠᎴ [[texture (music)|ᎤᏐᏅ]]). ᏗᎧᏃᎩᏛ ᎠᎾᏍᎬᏘ ᎾᏍᎩ ᎾᏍᏇ ᎠᏓᏠᏯᏍᏙᏗ ᎤᎾᏁᎶᏔᏅ [[form (music)|ᏚᏙᏢᏒ]] ᎭᏫᎾᏗᏢ ᎠᎴᏰᏑ ᏗᎬᏩᎶᏒ ᎯᎠ ᎠᏁᏍᎨᎲ [[pattern|ᏗᏟᎶᏍᏙᏗ]] ᎠᎴ [[combinations|ᎤᎾᏓᏟᏌᏅ]] ᏂᎬᏩᏍᏛ stimuli, ᏄᎬᏫᏳᏌᏕᎩ ᎤᏃᏴᎬ. ᏗᎧᏃᎩᏛ ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᎬᏔᏅᎯ ᎾᏍᎩᎾᎢ [[art|ᏗᏟᎶᏍᏙᏗ]]ᎦᎾᏄᎪᏫᏒ ᎠᎴ [[aesthetics|ᎤᏓᏅᏖᎢᏌᏛ]], [[communication|ᏗᏓᏛᎪᏔᏅ]], [[entertainment|ᎤᏓᏅᏘ ᏧᎾᎵᏃᎮᏗ]], ᎠᎴ ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᏂᏚᏰᎸᏛᎢ. ᎯᎠ [[Definitions of music|ᏩᏎᏍᏗ ᏀᎾ]] ᎦᏙ ᎤᏍᏗ ᎪᏪᎳᏅ ᎠᎪᎵᏰᏗ ᏗᎧᏃᎩᏛ ᏧᏓᎴᏀᎢ ᎧᎵ ᏗᏙᎳᎩ ᎥᎦᏔᎲᎢ ᎠᎴ ᎠᎾᏓᏟᏏᏍᎬ ᏄᏍᏗᏓᏅ. 
 
 ᎭᏫᏂᏗᏢ "[[the arts|ᎯᎠ ᏗᎾᏟᎶᏍᏗᏍᎩ]]", ᏗᎧᏃᎩᏛ ᏰᎵᏇ ᎾᏍᏋ ᎠᏓᏁᎳᏅᎯ ᏥᏄᏍᏗ [[performing art|ᎢᏯᏛᏁᏗ ᏗᏟᎶᏍᏙᏗ]], [[fine art|ᎣᏌᏂ ᏗᏟᎶᏍᏙᏗ]], ᎠᎴ [[auditory art|ᎠᏛᎩᏍᎬ ᏗᏟᎶᏍᏙᏗ ᎤᏙᏢᏒ]]. 
 
-[[File:Filippino Lippi 001.jpg|thumb|right|ᏗᎪᏏᏐᏗ ᏗᎧᏃᎩᏛ, ᎾᎥᎢ [[Filippino Lippi]]]]
-[[File:Lorenzo Lippi 001.jpg|thumb|right|ᏗᎪᏏᏐᏗ ᏗᎧᏃᎩᏛ, ᎾᎥᎢ [[Lorenzo Lippi]]]]
-
 == ᏩᏎᏍᏗ ᏀᎾ ==
-{{main|Definition of music}}
-
+[[File:Filippino Lippi 001.jpg|thumb|220px|ᏗᎪᏏᏐᏗ ᏗᎧᏃᎩᏛ, ᎾᎥᎢ [[Filippino Lippi]]]]
 ᎯᎠ ᎠᏯᏖᎾ [[definition of music|ᏩᏎᏍᏗ ᏀᎾ  ᏗᎧᏃᎩᏛ]] ᎨᏒᎢ ᎤᎾᏙᏢᏅᎯ [[vibration|ᏐᎯ]]. ᏀᎾᎢ ᎠᎦᏎᏍᏙᏗ ᏧᎾᏟᎶᏍᏙᏗ ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎠᏯᏖᎾ ᏚᏙᎥ ᎦᏯᎸ ᏗᎧᏃᎩᏛ, ᎠᎴ ᏀᎢᏳᎢ ᏀᎾᎢ ᎪᎵᏍᏗ ᎥᎦᏔᎲᎢ ᏧᏓᎴᏅᏓ, ᎯᎠ ᏧᎬᏩᎶᏗ ᏂᎬᎿᏅ ᏗᎧᏃᎩᏛ ᎯᎠ ᏧᎬᏩᎶᏗ ᏂᎬᎿᏅ ᎤᏃᏴᎬ ᏥᏄᏍᏗ ᎥᏓᏅᏖᏍᎬ ᎠᎴ ᏧᎵᎬᏩᎳᏅᎯ ᎾᎥᎢ ᎠᏂᏴᏫ ᎠᎴ ᎡᎿᎢ ᎡᎥ (ᎯᎸᏍᎩ ᏥᏍᏆ ᎠᎴ ᎠᏂᏍᎧᏱ ᎾᏍᎩ ᎾᏍᏇ ᎪᏢᏗ ᏗᎧᏃᎩᏛ).
 
 ᏗᎧᏃᎩᏛ ᎨᏒᎢ ᎠᏏᏴᏫ ᎦᏬᎯᎵᏴᏓ ᏐᎯ ᎣᏂ ᏧᏩᎫᏛ ᎯᎠ ᎤᏠᏱ ᎠᎬᎭᎸᏓ ᏗᎧᏃᎩᏛ ᏫᎵ ᎦᎸᏉᏙᏗ ᏴᏫ ᏧᏓᎴᎿᎢᎭ. ᎾᏍᎩ ᎤᏁᎳᎩ ᎾᏍᎩ ᏝᏰᎵ ᎢᎦᎢ ᎨᏒ ᎠᏓᏖᎸᏍᎬ, ᎾᏍᎩ ᎨᏒᎢ ᎢᏳᏊ ᏂᎦᎵᏍᏗ ᎠᏎᎸ ᎢᏗᎬᏁᏗ ᎠᏒᎾᏍᏗ ᎠᎴ ᏧᎾᏍᏗ ᎯᎠ ᎠᏓᏖᎸᏍᎬ ᎯᎠ ᏍᎨ. ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎠᎬᎭᎸᏓ [[film score|ᏗᎧᏃᎩᏛ ᎪᏢᏅᎯ ᎾᏍᎩᎾᎢ  ᎤᎾᏛᏁᎶᏗ]] ᎨᏒᎢ ᎢᎬᏱᏗᏢ ᎠᏎᎸ ᎢᏗᎬᏁᏗ ᎧᏁᏉᎩ ᎯᎠ ᎠᏓᏖᎸᏍᎬ ᎠᎴ ᏄᏍᏛ ᎤᏓᏅᏛ ᎠᏂᏏᏴᏫᎭ ᏗᎧᏃᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏠᏗ.
 
 [[Greek philosophy|ᎠᎪᎢ ᏗᏕᎶᏆᏍᎩ]] ᎠᎴ ᎠᎦᏴᎵ ᎪᎷᏩᏛᏗ ᎧᏁᎢᏍᏔᏅᎯ ᏗᎧᏃᎩᏛ ᏥᏄᏍᏗ ᎢᏯᏛᏂ ᎠᏓᏅᏒᎯ ᎤᏩᎾᏕᏍᎩ ᏥᏄᏍᏗ [[melody|ᎠᏟᎶᏍᏗ]], ᎠᎴ ᎠᏁᏍᎦᏗ ᏥᏄᏍᏗ [[harmony|ᏅᏩᏙᎯᏯᏛ]]. [[Music theory|ᏗᎧᏃᎩᏛ ᎪᎷᏩᏛᏗ]], ᎭᏫᏂᏗᏢ ᎪᎯ ᎤᏔᏂᏗ ᎦᏙᎯ, ᎨᏒᎢ ᎤᎦᏎᏍᏔᏅᎩ ᎬᏙᏗ ᎯᎠ ᏧᏩᎫᏔᏅᏒ-ᏄᏍᏗᏓᏅ Ꮎ ᏗᎧᏃᎩᏛ ᎨᏒᎢ ᏄᏦᎠᏎᏛᎾ ᎠᎴ ᎢᏳᏓᎵᎭ ᎤᎵᎶᎲᏍᎩ ᎠᏛᎩ. ᏱᏂᎬᏛᎾ, ᎭᏫᎾᏗᏢ ᎯᎠ 20th ᏍᎪᎯᏧᏈ ᏧᏕᏘᏴᏗ, ᎪᏪᎶᏗ ᎤᏂᎦᏛᎲᏍᎩ ᎯᎠ ᎢᏰᎵᏍᏗ Ꮎ ᏗᎧᏃᎩᏛ ᎠᏰᎲ ᎾᏍᏋ ᎤᎵᎶᎲᏍᎩ ᎾᎥᎢ ᎪᏢᏗ ᏗᎧᏃᎩᏛ Ꮎ ᎤᏂᎦᏛᎲᏍᎩ ᎤᎶᏒᏍᏔᏅ, ᎤᎳᏏᎩ [[timbres|ᎠᏙᎯ]]. ᎯᎠ ᎬᏂᎨᏒ ᏄᏍᏛᎢ ᎢᎦᏛ ᎪᎯᏊ ᎢᏴ ᏥᎩ-ᎢᎦ [[Music genre|ᎠᏂᎶᏁᏍᎬ]] ᏯᏛᎿ ᏥᏄᏍᏗ [[grindcore|ᎠᏍᏙᏍᏗ ᎠᏰᎵ]] ᎠᎴ [[noise music|ᎤᏃᏴᎬ ᏗᎧᏃᎩᏛ]], ᎦᏙ ᎤᏍᏗ ᎠᎵᎮᎵᏍᏗ ᎤᏁᏉᏨᎯ ᎭᏫᎾᏗᏢ ᎦᏙᎯ ᎠᏍᏓᏩᏗᏒ, ᎠᏓᏎᎮᏗ Ꮎ ᎢᏧᎳᎭ ᎯᎠ ᎠᏚᎷᎳ ᎤᏃᏴᎬ ᏰᎵᏇ ᎾᏍᏋ ᎠᎦᏎᏍᏔᏅ ᏗᎧᏃᎩᏛ ᎢᏳᏃ ᎯᎠ ᏍᎨ ᎨᏒᎢ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎠᏗᏌᎭᏓᏛ.
 
-20th ᏍᎪᎯᏧᏈ ᏧᏕᏘᏴᏗ ᎪᏪᎶᏗ [[John Cage|ᏣᏂ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ]] ᎣᏏ ᎠᏰᎸᏗ ᎬᏙᏗ ᎯᎠ ᎢᏰᎵᏍᏗ Ꮎ ᏗᎧᏃᎩᏛ ᎠᏎ ᎤᏠᏯᏍᏗ ᎤᎵᎶᎲᏍᎩ, ᎬᎪᏩᏛᏗ ᎠᏟᎶᏍᏗ, ᎠᎴ ᎾᏍᎩ ᎠᏍᎦᏯ ᎤᏂᎦᏛᎲᏍᎩ ᎯᎠ ᎢᏰᎵᏍᏗ Ꮎ ᎾᏍᎩ ᏰᎵᏇ ᏗᏓᏛᎪᏔᏅ ᏂᎦᎥᏇ. ᎾᏍᎩᏍᎩᏂ ᏂᎨᏒᎾ, ᎾᏍᎩ ᎠᏍᎦᏯ ᎠᏘᏲᎯᎭ Ꮎ ᏂᎦᎵᏍᏗᏍᎬᎫ ᏚᏃᏴᎬ ᎢᏧᎳ ᏰᎵᏇ ᎠᏛᎩ ᏰᎵᏇ ᎾᏍᏋ ᏗᎧᏃᎩᏛ, ᎧᏁᎬᎢ, ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, "ᏀᎾᎢ ᎨᏒᎢ Ꮭ [[noise|ᎤᏃᏴᎬ]], ᎾᏍᎩ ᎤᏩᏒ ᎤᏃᏴᎬ,"[http://arted.osu.edu/160/03_cage.php]. ᎧᎵ ᏗᏙᎳᎩ musicologist [[Jean-Jacques Nattiez]] (1990 p.47-8,55): "ᎯᎠ ᎠᏟᎶᏛ ᎬᎪᏛ ᎠᏰᎵ ᏗᎧᏃᎩᏛ ᎠᎴ ᎤᏃᏴᎬ ᎨᏒᎢ ᏂᎪᎯᎸᎢ ᎥᎦᏔᎲᎢ ᎧᏁᎢᏍᏔᏅᎯ--ᎦᏙ ᎤᏍᏗ ᎪᏣᎸᏙᏗ Ꮎ, ᎢᏧᎳᎭ ᎭᏫᏂᏗᏢ ᏏᏴᏫ ᎤᎾᏙᏢᎯ, ᎪᎯ ᎠᏟᎶᏛ ᎬᎪᏛ ᎾᏛᏁ ᎾᏍᎩ ᏂᎨᏒᎾ ᏂᎪᎯᎸᎢ ᎠᎦᏛᎴᎯᏍᏗ ᏗᎬᏩᎶᏒ ᎯᎠ ᎤᏠᏱ ᏀᎾᎢ; ᎭᏫᎾᏗᏢ ᏍᏆᎳᎢ, ᏀᎾᎢ ᎨᏒᎢ ᎢᏅᎯ ᎢᏳᏓᎵ ᎪᎯᏳᏙᏗ.... ᎾᎥᎢ ᏂᎦᏛ ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᏀᎾᎢ ᎨᏒᎢ Ꮭ ᏏᏴᏫ ᎠᎴ ᎪᏣᎵᏗᏱ ᎥᎦᏔᎲᎢ ᎢᎬᏩᎾᏓᎴᎩ ᎠᏓᏅᏖᏗ ᎧᏁᎢᏍᏔᏅᎯ ᎦᏙ ᎤᏍᏗ ᏗᎧᏃᎩᏛ ᏄᎵᏂᎬᎬ ᎾᏍᏋ." 
+20th ᏍᎪᎯᏧᏈ ᏧᏕᏘᏴᏗ ᎪᏪᎶᏗ [[John Cage|ᏣᏂ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ]] ᎣᏏ ᎠᏰᎸᏗ ᎬᏙᏗ ᎯᎠ ᎢᏰᎵᏍᏗ Ꮎ ᏗᎧᏃᎩᏛ ᎠᏎ ᎤᏠᏯᏍᏗ ᎤᎵᎶᎲᏍᎩ, ᎬᎪᏩᏛᏗ ᎠᏟᎶᏍᏗ, ᎠᎴ ᎾᏍᎩ ᎠᏍᎦᏯ ᎤᏂᎦᏛᎲᏍᎩ ᎯᎠ ᎢᏰᎵᏍᏗ Ꮎ ᎾᏍᎩ ᏰᎵᏇ ᏗᏓᏛᎪᏔᏅ ᏂᎦᎥᏇ. ᎾᏍᎩᏍᎩᏂ ᏂᎨᏒᎾ, ᎾᏍᎩ ᎠᏍᎦᏯ ᎠᏘᏲᎯᎭ Ꮎ ᏂᎦᎵᏍᏗᏍᎬᎫ ᏚᏃᏴᎬ ᎢᏧᎳ ᏰᎵᏇ ᎠᏛᎩ ᏰᎵᏇ ᎾᏍᏋ ᏗᎧᏃᎩᏛ, ᎧᏁᎬᎢ, ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, "ᏀᎾᎢ ᎨᏒᎢ Ꮭ [[noise|ᎤᏃᏴᎬ]], ᎾᏍᎩ ᎤᏩᏒ ᎤᏃᏴᎬ,"[http://arted.osu.edu/160/03_cage.php]. ᎧᎵ ᏗᏙᎳᎩ musicologist [[Jean-Jacques Nattiez]]: "ᎯᎠ ᎠᏟᎶᏛ ᎬᎪᏛ ᎠᏰᎵ ᏗᎧᏃᎩᏛ ᎠᎴ ᎤᏃᏴᎬ ᎨᏒᎢ ᏂᎪᎯᎸᎢ ᎥᎦᏔᎲᎢ ᎧᏁᎢᏍᏔᏅᎯ--ᎦᏙ ᎤᏍᏗ ᎪᏣᎸᏙᏗ Ꮎ, ᎢᏧᎳᎭ ᎭᏫᏂᏗᏢ ᏏᏴᏫ ᎤᎾᏙᏢᎯ, ᎪᎯ ᎠᏟᎶᏛ ᎬᎪᏛ ᎾᏛᏁ ᎾᏍᎩ ᏂᎨᏒᎾ ᏂᎪᎯᎸᎢ ᎠᎦᏛᎴᎯᏍᏗ ᏗᎬᏩᎶᏒ ᎯᎠ ᎤᏠᏱ ᏀᎾᎢ; ᎭᏫᎾᏗᏢ ᏍᏆᎳᎢ, ᏀᎾᎢ ᎨᏒᎢ ᎢᏅᎯ ᎢᏳᏓᎵ ᎪᎯᏳᏙᏗ.... ᎾᎥᎢ ᏂᎦᏛ ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᏀᎾᎢ ᎨᏒᎢ Ꮭ ᏏᏴᏫ ᎠᎴ ᎪᏣᎵᏗᏱ ᎥᎦᏔᎲᎢ ᎢᎬᏩᎾᏓᎴᎩ ᎠᏓᏅᏖᏗ ᎧᏁᎢᏍᏔᏅᎯ ᎦᏙ ᎤᏍᏗ ᏗᎧᏃᎩᏛ ᏄᎵᏂᎬᎬ ᎾᏍᏋ."<ref>Jean-Jacques Nattiez, 1990 p.47-8,5</ref>
 
 [[Johann Wolfgang Goethe|Johann ᏩᏯ ᎤᏓᏂᏝᏅ Goethe]] ᎤᏬᎯᏳᏅ Ꮎ ᏧᎾᏟᎶᏍᏙᏗ ᎠᎴ ᏚᏙᏢᏒ ᎨᏒᎩ ᎯᎠ ᎠᎴᏅᏙᏗ ᏗᎧᏃᎩᏛ; ᎾᏍᎩ ᎠᏍᎦᏯ ᎤᏃᎮᎸᎩ Ꮎ "ᎠᏓᏁᎳᏅᎯ ᎨᏒᎢ ᎤᏁᏍᏓᎳ ᏗᎧᏃᎩᏛ."
 
 == ᎧᏃᎮᏍᎩ ==
-{{main|History of music}}
-
-[[File:Elam-tar.jpg|thumb|right|ᎢᏯᏓᏛᏁᎸ ᏓᎾᏁᎶᎲᏍᎬ ᏧᏠᎯᏍᏗ ᎪᎱᏍᏗ ᏗᎬᏔᏂᏓᏍᏗ, ᎠᏍᎪᏍᏗ ᎾᎾᎢ [[Susa]], 3rd ᎠᎴᏫᏍᏙᏗ BC. [[National Museum of Iran|Iran ᎬᎾᏕᎾ ᎤᏓᏂᏝᏅ]].]]
-ᎯᎠ ᎧᏃᎮᏍᎩ ᏗᎧᏃᎩᏛ ᏕᎪᏪᎸ ᎢᏳ ᎢᎪᎯ ᎯᎠ ᎪᏪᎳᏅᎯ ᎧᏁᏨ ᎠᎴ ᎨᏒᎢ ᏗᎧᏁᎸ ᎯᎠ ᏚᏙᎳᏩᏛᎲ ᎠᏂᏏᏴᏫᎭ ᎤᏠᏱ ᏴᏫ [[culture|ᎥᎦᏔᎲᎢ]].  ᎾᏍᎩ ᎤᏁᎳᎩ ᎯᎠ ᎢᎬᏱᏗᏢᏍᏗ ᎪᏪᎸ ᏗᎧᏃᎩᏛ ᎦᏃᏢᎩ ᎢᎦᏪᏛ ᎾᏍᏋ ᎠᏩᏛᏗ ᎭᏫᎾᏗᏢ ᎯᎠ [[Sama Veda]] [[India|ᏗᏓᏁᏍᎩ]] ᎠᎴ ᎭᏫᎾᏗᏢ 4,000 ᏑᏕᏘᏴᏓ ᎠᎦᏴᎵ ᏓᏍᏓᏅᏅ ᏚᎷᏨ ᏂᏛᎴᏅᏓ [[Ur]], ᎤᎪᏗᏗ ᎠᏆᏤᎵ ᎪᏪᎳᏅᎯ ᎪᏪᎸ ᎠᎴ ᏗᎦᏎᏍᏙᏗ ᏗᏓᏅᏓᏁᏗᏱ ᎬᏙᏗ ᎯᎠ ᎧᏃᎮᏍᎩ ᏗᎧᏃᎩᏛ ᎭᏫᎾᏗᏢ [[Western civilization|ᏭᏕᎵᎬᏗᏢ ᎠᏓᏅᏘᏐᏗ]]{{Fact|date=February 2007}}.  ᎪᎯ ᎠᏠᏯᏍᏗ ᏗᎧᏃᎩᏛ ᎦᏃᏢᎩ ᏗᎴᏪᎢᏍᏙᏗ ᏯᏛᎿ ᏥᏄᏍᏗ ᎠᎦᏴᎵ, ᏓᏓᎾᏅ, ᎤᎾᏰᎯᏍᏗ, ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ, ᎢᏰᎵᏍᏗᎢ, ᎠᎴ 20th ᏍᎪᎯᏧᏈ ᏧᏕᏘᏴᏗ ᏗᏓᎴᏂᏍᎬ ᏗᎧᏃᎩᏛ.  ᎯᎠ ᎧᏃᎮᏍᎩ ᏗᎧᏃᎩᏛ ᎭᏫᎾᏗᏢ ᏐᎢ ᎥᎦᏔᎲᎢ ᎤᎭ ᎾᏍᎩ ᎾᏍᏇ ᏭᏪᏙᎢ ᎪᏪᎵᎬᏂᎨᏒ ᎢᎬᏁᎯ ᎢᎦᏛ ᎢᎦᎢ ᎢᎦᏘ, ᎠᎴ ᎯᎠ ᎥᎦᏔᎲᎢ "[[world music|ᎡᎶᎯ ᏗᎧᏃᎩᏛ]]" (ᎠᎴ ᎯᎠ ᏠᎨᏏ "[[ethnomusicology]]") ᎤᎭ ᏗᏙᎳᎩ ᎤᏟ ᎢᎦᎢ ᎠᎴ ᎤᏟ ᎢᎦᎢ ᎤᏯᎸᎩ ᎤᎶᏐᏅ ᎭᏫᎾᏗᏢ ᏄᏍᏗᏓᏅ ᎦᏐᏆᎸ. ᎪᎯ ᎠᏠᏯᏍᏗ ᎯᎠ ᎪᏪᎵᎬᏂᎨᏒ ᎢᎬᏁᎯ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎧᏃᎮᎸᎯ ᏥᏄᏍᏗ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᏙᏯᏗᏢ ᎯᎠ ᎾᏓᏛᏂᏌᏁᎲ ᏭᏕᎵᎬᏗᏢ Europe, ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ ᎯᎠ ᎠᏍᎦᏯᎠ ᎠᎴ ᎡᎯᏯᎢ ᏗᎧᏃᎩᏛ ᏧᏓᎴᏅᏓ ᏐᎢ ᎥᎦᏔᎲᎢ. (ᎯᎠ ᎠᎴᏂᏍᎬ ''ᎡᎶᎯ ᏗᎧᏃᎩᏛ'' ᎤᎭ ᏭᏪᏙᎢ ᎢᎬᎾᏔᏅᎯ ᎠᏯᏖᎾ ᎠᏍᏓᏅᏅ ᏗᎧᏃᎩᏛ ᎪᏢᏅᎯ ᏙᏯᏗᏢ Europe ᎠᎴ European ᎾᏓᏛᏂᏌᏁᎲ, ᎾᏍᎩ ᎤᏁᎳᎩ Ꮝ ᎠᎴᏅᏘᏍᎬ ᎠᏔᏲᏍᏙᏗ, ᎭᏫᎾᏗᏢ ᎯᎠ ᏄᏍᏗᏓᏅ ᎯᎠ ᎡᎶᎯ ᏗᎧᏃᎩᏛ ᎢᏯᏛᏁᏗ ᎾᎾᎢ [[Wesleyan University|ᎦᎵᏓᏍᏛ ᏗᏕᎶᏆᏍᏗ]], ᏥᏄᏍᏛᎩ ᏥᏄᏍᏗ ᎠᎴᏂᏍᎬ ᎠᏠᏯᏍᏗᏍᎩ ᏂᎦᏛ ᏰᎵᏊ ᏗᎧᏃᎩᏛ ᎠᏂᎶᏁᏍᎬ, ᎠᏠᏯᏍᏗᏍᎩ European ᎧᏃᎮᎸᎯ. ᎭᏫᎾᏗᏢ ᏄᏍᏗᏓᏅ ᎦᏐᏆᎸ, ᎯᎠ ᎠᎴᏅᏗᏍᎬ ᎠᎴᏂᏍᎬ ᎾᏍᎩᎾᎢ ᎯᎠ ᎠᎦᏎᏍᏙᏗ ᎡᎶᎯ ᏗᎧᏃᎩᏛ, "ᎢᎦᎢ ᎢᎦᏘ musicology", ᏥᏄᏍᏛᎩ ᏅᎪᏢᎯᏌᏅ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏰᎵ ᎯᎠ ᏔᎵᏍᎪᎯᏁ ᏍᎪᎯᏧᏈ ᏧᏕᏘᏴᏗ ᎾᎥᎢ "ethnomusicology", ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᏙᎢ ᎠᎦᏎᏍᏔᏅ ᎧᎵ ᏗᏙᎳᏍᏔᏅ ᎠᏛᎯᏍᏙᏗ ᎾᎥᎢ ᎢᎦᏛ.) 
+[[File:Elam-tar.jpg|thumb|220px|ᎢᏯᏓᏛᏁᎸ ᏓᎾᏁᎶᎲᏍᎬ ᏧᏠᎯᏍᏗ ᎪᎱᏍᏗ ᏗᎬᏔᏂᏓᏍᏗ, ᎠᏍᎪᏍᏗ ᎾᎾᎢ [[Susa]], 3rd ᎠᎴᏫᏍᏙᏗ [[BCE|ᎤᏓᎷᎸ]]. [[National Museum of Iran|Iran ᎬᎾᏕᎾ ᎤᏓᏂᏝᏅ]].]]
+ᎯᎠ ᎧᏃᎮᏍᎩ ᏗᎧᏃᎩᏛ ᏕᎪᏪᎸ ᎢᏳ ᎢᎪᎯ ᎯᎠ ᎪᏪᎳᏅᎯ ᎧᏁᏨ ᎠᎴ ᎨᏒᎢ ᏗᎧᏁᎸ ᎯᎠ ᏚᏙᎳᏩᏛᎲ ᎠᏂᏏᏴᏫᎭ ᎤᏠᏱ ᏴᏫ [[culture|ᎥᎦᏔᎲᎢ]].  ᎾᏍᎩ ᎤᏁᎳᎩ ᎯᎠ ᎢᎬᏱᏗᏢᏍᏗ ᎪᏪᎸ ᏗᎧᏃᎩᏛ ᎦᏃᏢᎩ ᎢᎦᏪᏛ ᎾᏍᏋ ᎠᏩᏛᏗ ᎭᏫᎾᏗᏢ ᎯᎠ [[Sama Veda]] [[India|ᏗᏓᏁᏍᎩ]] ᎠᎴ ᎭᏫᎾᏗᏢ 4,000 ᏑᏕᏘᏴᏓ ᎠᎦᏴᎵ ᏓᏍᏓᏅᏅ ᏚᎷᏨ ᏂᏛᎴᏅᏓ [[Ur]], ᎤᎪᏗᏗ ᎠᏆᏤᎵ ᎪᏪᎳᏅᎯ ᎪᏪᎸ ᎠᎴ ᏗᎦᏎᏍᏙᏗ ᏗᏓᏅᏓᏁᏗᏱ ᎬᏙᏗ ᎯᎠ ᎧᏃᎮᏍᎩ ᏗᎧᏃᎩᏛ ᎭᏫᎾᏗᏢ [[Western civilization|ᏭᏕᎵᎬᏗᏢ ᎠᏓᏅᏘᏐᏗ]]. ᎪᎯ ᎠᏠᏯᏍᏗ ᏗᎧᏃᎩᏛ ᎦᏃᏢᎩ ᏗᎴᏪᎢᏍᏙᏗ ᏯᏛᎿ ᏥᏄᏍᏗ ᎠᎦᏴᎵ, ᏓᏓᎾᏅ, ᎤᎾᏰᎯᏍᏗ, ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ, ᎢᏰᎵᏍᏗᎢ, ᎠᎴ 20th ᏍᎪᎯᏧᏈ ᏧᏕᏘᏴᏗ ᏗᏓᎴᏂᏍᎬ ᏗᎧᏃᎩᏛ.  ᎯᎠ ᎧᏃᎮᏍᎩ ᏗᎧᏃᎩᏛ ᎭᏫᎾᏗᏢ ᏐᎢ ᎥᎦᏔᎲᎢ ᎤᎭ ᎾᏍᎩ ᎾᏍᏇ ᏭᏪᏙᎢ ᎪᏪᎵᎬᏂᎨᏒ ᎢᎬᏁᎯ ᎢᎦᏛ ᎢᎦᎢ ᎢᎦᏘ, ᎠᎴ ᎯᎠ ᎥᎦᏔᎲᎢ "[[world music|ᎡᎶᎯ ᏗᎧᏃᎩᏛ]]" (ᎠᎴ ᎯᎠ ᏠᎨᏏ "[[ethnomusicology]]") ᎤᎭ ᏗᏙᎳᎩ ᎤᏟ ᎢᎦᎢ ᎠᎴ ᎤᏟ ᎢᎦᎢ ᎤᏯᎸᎩ ᎤᎶᏐᏅ ᎭᏫᎾᏗᏢ ᏄᏍᏗᏓᏅ ᎦᏐᏆᎸ. ᎪᎯ ᎠᏠᏯᏍᏗ ᎯᎠ ᎪᏪᎵᎬᏂᎨᏒ ᎢᎬᏁᎯ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎧᏃᎮᎸᎯ ᏥᏄᏍᏗ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᏙᏯᏗᏢ ᎯᎠ ᎾᏓᏛᏂᏌᏁᎲ ᏭᏕᎵᎬᏗᏢ Europe, ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ ᎯᎠ ᎠᏍᎦᏯᎠ ᎠᎴ ᎡᎯᏯᎢ ᏗᎧᏃᎩᏛ ᏧᏓᎴᏅᏓ ᏐᎢ ᎥᎦᏔᎲᎢ. (ᎯᎠ ᎠᎴᏂᏍᎬ ''ᎡᎶᎯ ᏗᎧᏃᎩᏛ'' ᎤᎭ ᏭᏪᏙᎢ ᎢᎬᎾᏔᏅᎯ ᎠᏯᏖᎾ ᎠᏍᏓᏅᏅ ᏗᎧᏃᎩᏛ ᎪᏢᏅᎯ ᏙᏯᏗᏢ Europe ᎠᎴ European ᎾᏓᏛᏂᏌᏁᎲ, ᎾᏍᎩ ᎤᏁᎳᎩ Ꮝ ᎠᎴᏅᏘᏍᎬ ᎠᏔᏲᏍᏙᏗ, ᎭᏫᎾᏗᏢ ᎯᎠ ᏄᏍᏗᏓᏅ ᎯᎠ ᎡᎶᎯ ᏗᎧᏃᎩᏛ ᎢᏯᏛᏁᏗ ᎾᎾᎢ [[Wesleyan University|ᎦᎵᏓᏍᏛ ᏗᏕᎶᏆᏍᏗ]], ᏥᏄᏍᏛᎩ ᏥᏄᏍᏗ ᎠᎴᏂᏍᎬ ᎠᏠᏯᏍᏗᏍᎩ ᏂᎦᏛ ᏰᎵᏊ ᏗᎧᏃᎩᏛ ᎠᏂᎶᏁᏍᎬ, ᎠᏠᏯᏍᏗᏍᎩ European ᎧᏃᎮᎸᎯ. ᎭᏫᎾᏗᏢ ᏄᏍᏗᏓᏅ ᎦᏐᏆᎸ, ᎯᎠ ᎠᎴᏅᏗᏍᎬ ᎠᎴᏂᏍᎬ ᎾᏍᎩᎾᎢ ᎯᎠ ᎠᎦᏎᏍᏙᏗ ᎡᎶᎯ ᏗᎧᏃᎩᏛ, "ᎢᎦᎢ ᎢᎦᏘ musicology", ᏥᏄᏍᏛᎩ ᏅᎪᏢᎯᏌᏅ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏰᎵ ᎯᎠ ᏔᎵᏍᎪᎯᏁ ᏍᎪᎯᏧᏈ ᏧᏕᏘᏴᏗ ᎾᎥᎢ "ethnomusicology", ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᏙᎢ ᎠᎦᏎᏍᏔᏅ ᎧᎵ ᏗᏙᎳᏍᏔᏅ ᎠᏛᎯᏍᏙᏗ ᎾᎥᎢ ᎢᎦᏛ.) 
 
 ᎤᏂᎸᏉᏗ ᏧᎾᏣᏅᏙᏗ ᏗᎧᏃᎩᏛ ᏚᏟᎶᏍᏔᏅ ᎠᏯᏖᎾ ᏂᏛᎴᏅᏓ ᎥᎦᏔᎲᎢ ᎥᎦᏔᎲᎢ, ᎠᎴ ᏂᏛᎴᏅᏓ ᎠᎴᏫᏍᏙᏗ ᎠᎴᏫᏍᏙᏗ. ᏄᏓᎴᎿᎥ ᎥᎦᏔᎲᎢ ᎪᎯᏳᏙᏗ ᏄᏓᎴᎿᎥ [[Musical instrument|ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ]], ᎠᎴ techniques, ᎠᎴ ᎬᏔᏂᏓᏍᏗ ᎾᏍᎩᎾᎢ ᏗᎧᏃᎩᏛ. ᏗᎧᏃᎩᏛ ᎤᎭ ᏭᏪᏙᎢ ᎬᏔᏅᎯ ᎾᏍᎩ ᏂᎨᏒᎾ ᎾᏍᎩ ᎤᏩᏒ ᎾᏍᎩᎾᎢ ᎤᏓᏅᏘ ᏧᎾᎵᏃᎮᏗ, ᎾᏍᎩᎾᎢ ᎬᏂᎨᏒ ᎢᎬᏁᏗ, ᎠᎴ ᎾᏍᎩᎾᎢ ᏗᏙᎳᎩ & ᏗᏟᎶᏍᏗᏍᎩ ᏗᏛᎪᏔᏅ, ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᎤᏁᏉᏨᎯ ᎾᏍᎩᎾᎢ [[propaganda|ᎤᏬᎯᏳᏒ]]. 
    
-ᏥᏄᏍᏗ ᎡᎶᎯ ᎥᎦᏔᎲᎢ ᎤᎭ ᎦᎷᏨ ᎾᏀᎢ [[globalisation|ᎡᏆ ᎢᎨᏍᏙᏗ ᏚᏓᏂᏴᏒ]], ᎤᎾᏤᎵ ᎡᎯᏯᎢ ᏗᎧᏃᎩᏛ ᎦᏃᏢᎩ ᏧᎾᏣᏅᏙᏗ ᎤᎭ ᎢᏳᏓᎵᎭ ᎧᏁᎢᏍᏙᏗ ᎾᏀᎢ ᎢᏤ ᏧᎾᏣᏅᏙᏗ. ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎯᎠ ᏌᏊᎭ ᎧᏃᎮᎭ [[bluegrass music|ᏌᎪᏂᎨ ᎧᏁᏍᎦ]] ᎠᏣᏅᏗ ᎢᎦᎢ ᎨᏐ ᎢᏧᏓᎴᎩ ᏂᏛᎴᏅᏓ Anglo-ᎦᏁᎳ, ᎦᏁᎳ, ᎦᏁᎳ, ᎠᏓᏥ ᎠᎴ ᎢᎦᏛ African-ᏴᏩᏁᎬ ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ ᎠᎴ ᎠᎣᎵ ᎤᏃᏴᎬ ᎧᏃᎮᎸᎯ, ᎦᏙ ᎤᏍᏗ ᎨᏒᎩ ᏰᎵᏆ ᎢᏯᏛᏁᏗ ᎤᎾᏓᏟᏌᏅ ᎭᏫᎾᏗᏢ ᎯᎠ ᎢᏧᎳ ᎠᏴ' multi-ᎦᎵᏓᏍᏛ "ᎤᎦᎾᏭ ᏧᎳᏍᎩ" ᎤᎾᏙᏢᎯ.
+ᏥᏄᏍᏗ ᎡᎶᎯ ᎥᎦᏔᎲᎢ ᎤᎭ ᎦᎷᏨ ᎾᏀᎢ [[globalization|ᎡᏆ ᎢᎨᏍᏙᏗ ᏚᏓᏂᏴᏒ]], ᎤᎾᏤᎵ ᎡᎯᏯᎢ ᏗᎧᏃᎩᏛ ᎦᏃᏢᎩ ᏧᎾᏣᏅᏙᏗ ᎤᎭ ᎢᏳᏓᎵᎭ ᎧᏁᎢᏍᏙᏗ ᎾᏀᎢ ᎢᏤ ᏧᎾᏣᏅᏙᏗ. ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎯᎠ ᏌᏊᎭ ᎧᏃᎮᎭ [[bluegrass music|ᏌᎪᏂᎨ ᎧᏁᏍᎦ]] ᎠᏣᏅᏗ ᎢᎦᎢ ᎨᏐ ᎢᏧᏓᎴᎩ ᏂᏛᎴᏅᏓ Anglo-ᎦᏁᎳ, ᎦᏁᎳ, ᎦᏁᎳ, ᎠᏓᏥ ᎠᎴ ᎢᎦᏛ African-ᏴᏩᏁᎬ ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ ᎠᎴ ᎠᎣᎵ ᎤᏃᏴᎬ ᎧᏃᎮᎸᎯ, ᎦᏙ ᎤᏍᏗ ᎨᏒᎩ ᏰᎵᏆ ᎢᏯᏛᏁᏗ ᎤᎾᏓᏟᏌᏅ ᎭᏫᎾᏗᏢ ᎯᎠ ᎢᏧᎳ ᎠᏴ' multi-ᎦᎵᏓᏍᏛ "ᎤᎦᎾᏭ ᏧᎳᏍᎩ" ᎤᎾᏙᏢᎯ.
 
 ᏀᎾᎢ ᎨᏒᎢ ᎠᏓᏩᏛᎯᏙᎯ ᏗᎧᏃᎩᏛ ᏗᏓᎴᎾᏔᏅ ᏗᎦᏘᏌᏅᎩ, ᎤᎪᏗᏗ ᎦᏙ ᎤᏍᏗ ᎦᏂᏴᏛ ᎦᎸᎳᏗᏢ ᎭᏫᎾᏗᏢ ᎯᎠ ᏗᎪᏏᏐᏗ ᎦᏬᎯᎸᏙᏗ ᎯᎠ ᏩᏎᏍᏗ ᏀᎾ ᏗᎧᏃᎩᏛ. ᏄᎾᏛᏅ ᎯᎠ ᎤᏔᏂᎢᏍᏗ ᎾᏍᎩ ᎯᎠ ᎨᏒᎢ ᎯᎠ ᎠᏰᏗ ᎢᏳᏓᏛ ᎠᏰᎵ [[European classical music|ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᏗᎧᏃᎩᏛ]] (ᎠᎴ "ᏗᏟᎶᏍᏙᏗ" ᏗᎧᏃᎩᏛ), ᎠᎴ [[popular music|ᎤᏂᎸᏉᏗ ᏗᎧᏃᎩᏛ]] (ᎠᎴ ᎠᏓᎾᏅᏗ ᏗᎧᏃᎩᏛ - ᎠᏠᏯᏍᏗᏍᎩ [[rock and roll|ᏅᏯ ᎠᎴ ᎠᏲᏛᎯ]], [[country music|ᏙᏱᏗᏢ ᎦᏚᎲ ᏗᎧᏃᎩᏛ]], ᎠᎴ [[pop music|ᎠᎧᏁᏍᏗ ᏗᎧᏃᎩᏛ]]).  ᎢᎦᏛ ᎠᏂᎶᏁᏍᎬ ᎫᏢᎥᏍᎬ't ᏰᎵ ᎢᎩᏛ ᎤᏓᏅᎦᎸᏓ ᎾᏀᎢ ᏌᏊ ᎾᏍᎩ ᎯᎠ "ᎡᏆ ᏔᎵ" ᏗᏓᎴᎾᏔᏅ ᏗᎦᏘᏌᏅᎩ, (ᏯᏛᎿ ᏥᏄᏍᏗ [[folk music|ᎠᏍᎦᏯᎠ ᏗᎧᏃᎩᏛ]], ᎡᎶᎯ ᏗᎧᏃᎩᏛ, ᎠᎴ [[jazz]] ᏗᎧᏃᎩᏛ). 
 
@@ -36,8 +31,7 @@
 ᏀᎾᎢ ᎨᏒᎢ ᎢᏳᏓᎵᎭ ᏓᏓᏁᏤᎸ ᎦᏬᎯᎸᏙᏗ ᎦᏙ ᎤᏍᏗ ᎪᏪᎳᏅ ᎠᎪᎵᏰᏗ "ᎤᏙᎯᏳ ᎾᏍᎩ" ᏗᎧᏃᎩᏛ: ᎣᏂᏱᏳ-ᎠᎴᏫᏍᏙᏗ [[Ludwig van Beethoven|Beethoven]] ᏧᏠᎯᏍᏗ ᏅᎩ ᎢᏯᏂᎢ, [[Igor Stravinsky|Stravinsky]] ᏓᎾᏛᏁᎵᏍᎬ ᎤᏍᏆᏗᏍᏗ, [[serialism|ᎦᏯᎢᏒ]], [[bebop]]-ᏗᏓᎴᏂᏍᎬ [[jazz]], [[Hip hop music|ᎠᎧᏍᎨᏂ ᎠᏓᎾᏫᏗᏍᎬ]], [[punk rock|ᏔᏩᎵ ᏅᏯ]], ᎠᎴ [[electronica]] ᎤᎭ ᏂᎦᏛ ᏭᏪᏙᎢ ᎠᎦᏎᏍᏔᏅ ᏗᎵᎪᏔᏅᎯ-ᏗᎧᏃᎩᏛ ᎾᎥᎢ ᎢᎦᏛ ᏗᎫᎪᏔᏅ ᎯᎳᎪ ᎢᏳ ᎤᏅᏌ ᎨᏒᎩ ᎢᎬᏱ ᎬᏂᎨᏒ ᏄᏩᏁᎸ.
 
 == ᎠᎴᏂᏙᎲ ==
-{{main|Aspects of music}}
-
+[[File:The Beatles (with Jimmy Nicol) 1964 001.png|thumb|220px|Ꮎ Beatles, [[quartet|ᏅᎩ ᎢᏯᏂᎢ]], 1964]]
 ᎯᎠ ᎧᏃᎮᎸᎯ ᎠᎴ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ European [[aspects of music|ᎠᎴᏂᏙᎲ  ᏗᎧᏃᎩᏛ]] ᎢᏳᏓᎵᎭ ᏙᎪᏩᎸ ᎾᏍᎩ ᎢᏧᏓᎴᎩ ᎠᏓᏁᎸ ᎤᎾᏤᎵᏛ ᎭᏫᎾᏗᏢ European-ᎾᏓᏛᏂᏌᏁᎲ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᏗᎧᏃᎩᏛ: [[melody|ᎠᏟᎶᏍᏗ]], [[harmony|ᏅᏩᏙᎯᏯᏛ]], [[rhythm|ᎪᏪᎵ ᎠᏔᏲᎯᎯ]], [[Timbre|ᎤᏃᏴᎬ ᏗᎧᏃᏗ ᎠᎴ ᎠᏙᎯ]], ᎠᎴ [[Musical form|ᎤᏙᏢᏒ]]. ᎤᏟ ᎢᎦᎢ ᏂᎦᏛ ᏙᎪᏩᎸ ᎨᏒᎢ ᎠᏓᏁᎸ ᎾᎥᎢ ᎧᏃᎮᎸᏍᎬ ᎯᎠ ᎠᎴᏂᏙᎲ ᎤᏃᏴᎬ: [[Pitch (music)|ᎠᏗᏅᏗ]], [[timbre|ᎠᏙᎯ]], [[loudness|ᎠᏍᏓᏯ]], ᎠᎴ [[duration|ᎠᎴᏰᏑ]].<ref>Owen, 2000: 6</ref> ᎾᏍᎩ ᎯᎠ ᎠᎴᏂᏙᎲ ᎦᏟᏌᏅ ᎪᏢᏗ ᎡᎳᏗᏢ ᎦᏙᎩ ᎠᎴᏂᏙᎲ ᎠᏠᏯᏍᏗᏍᎩ [[structure|ᎠᏛᎯᏍᏙᏗ]], [[texture (music)|ᎤᏐᏅ]] ᎠᎴ ᎠᏣᏅᏗ. ᏐᎢ ᏧᏣᏔᏊ ᎠᏠᏯᏍᏔᏅ ᎠᎴᏂᏙᎲ ᎠᏠᏯᏍᏛ ᎯᎠ ᎠᏂᏁᏉᎬ ᎦᎷᎯᏍᏗ ᎠᎴ ᎯᎠ ᎠᏓᏅᏏᏙᎠ ᎭᏫᎾᏗᏢ ᎤᏜᏅᏛ ᏚᏃᏴᎬ, ᎠᏓᏎᎮᏗ, ᎠᎴ ᎠᎳᏍᎩᏓ. 
 [[Silence|ᎡᎷᏪᎢ]] ᎤᎭ ᎦᏅᎯᏓ ᏭᏪᏙᎢ  ᎠᎦᏎᏍᏔᏅ ᎤᏔᏂᏗ ᎦᏙᎯ ᏗᎧᏃᎩᏛ, ᎤᏃᏴᎬ ᏂᏛᎴᏅᏓ ᎯᎠ ᎤᎾᏛᏁᎵᏗ ᎠᎴᏫᏍᏙᏗ ᎭᏫᎾᏗᏢ ᎢᏰᎵᏍᏗᎢ-ᏗᏓᎴᏂᏍᎬ ᎾᏛᏁᎸ ᎯᎠ ᎾᏛᏁᎸ-ᎾᏛᏁᎸ ᎬᏙᏗ ᎡᎷᏪᎢ ᏥᏄᏍᏗ ᏗᏟᎶᏍᏗᏍᎩ ᎧᏃᎮᎸᎯ ᎭᏫᎾᏗᏢ 20th ᏍᎪᎯᏧᏈ ᏧᏕᏘᏴᏗ ᏧᏂᎸᏫᏍᏓᏁᏗ ᏯᏛᎿ ᏥᏄᏍᏗ [[John Cage|ᏣᏂ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ]] ᎤᏤᎵ ''[[4'33]]."''ᏣᏂ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ ᎠᎦᏎᏍᏙᏗ ᎠᎴᏰᏑ ᎯᎠ ᎢᎬᏱ ᎠᎴᏅᏗ ᎤᏔᏂᏗ ᎦᏙᎯ ᏗᎧᏃᎩᏛ ᎢᎬᏂᏏᏍᎩ ᎾᏍᎩ ᎨᏒᎢ ᎯᎠ ᎾᏍᎩ ᎤᏩᏒ ᎤᏔᏂᏗ ᎦᏙᎯ ᏧᏣᏔᏊ ᎢᏧᎳ "ᎤᏃᏴᎬ" ᎠᎴ "ᎡᎷᏪᎢ."
 
@@ -46,7 +40,6 @@
 [[pulse (music)|ᏧᏩᏚᏃᎯ]] ᎨᏒᎢ ᎢᏳᏊ ᏂᎦᎵᏍᏗ ᎠᎩᏒᎯ ᏥᏄᏍᏗ ᎢᎬᏩᎾᏓᎴᎩ, ᎩᎳ ᏀᎾᎢ ᎬᏂᎨᏒ ᏄᏍᏗ ᎠᏏᏴᏫ ᎧᏃᎩᏍᎩ ᎠᎣᎵ ᎤᏃᏴᎬ ᎠᎴ ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ ᎠᏂᎶᏁᏍᎬ ᎬᏙᏗ ᎠᏎᏊᎢ, ᎤᎵᏍᏓ ᏗᎫᎪᏙᏗ ᎪᏪᎵ ᎠᏔᏲᎯᎯ ᎬᏙᏗ Ꮭ ᎤᏠᏱᎭ ᏧᏩᏚᏃᎯ;<ref>ᏣᏂ ᎤᏪᏥ, 2002</ref> ᏌᏊ ᏱᏓᏟᎶᏍᏔᏅ ᎨᏒᎢ ᎯᎠ [[alap]] ᏀᎾ ᎨᏒ [[Hindustani music|ᎤᏐᏅᎢ ᏗᎧᏃᎩᏛ]] ᎾᎾᏛᏁᎲ. ᎧᎵ ᏗᏙᎳᎩ Dane Harwood, "ᎢᏧᎳ ᎠᏎ ᎠᏓᏛᏙᏗ ᎢᏳᏃ ᏓᏓᎿᏩᏍᏛ-ᎥᎦᏔᎲᎢ ᏗᎧᏃᎩᏛ ᎦᏃᏢᎩ ᎢᎬᏩᎾᏓᎴᎩ ᎨᏒᎢ ᎾᏍᏋ ᎠᏩᏛᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᏗᎧᏃᎩᏛ ᎤᏩᏌᏊ (ᎢᏳᏍᏗᏊ Ꮝ ᎠᏛᎯᏍᏙᏗ ᎠᎴ ᎤᏯᎾᏛᏁᏗ) ᎠᎴ ᎯᎠ ᎦᎶᎯᏍᏗ ᎭᏫᎾᏗᏢ ᎦᏙ ᎤᏍᏗ ᏗᎧᏃᎩᏛ ᎨᏒᎢ ᎪᏢᏅᎯ. ᎾᎥᎢ 'ᏗᎧᏃᎩᏛ-ᎠᏃᏢᏍᎬ,' ᎠᏯ ᏃᎵᏍᎬ ᎾᏍᎩ ᏂᎨᏒᎾ ᎾᏍᎩ ᎤᏩᏒ ᎤᏙᎯᏳᏒ ᎾᎾᏛᏁᎲ ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᎯᎳᎪ ᏗᎧᏃᎩᏛ ᎨᏒᎢ ᎤᎾᏛᎦᏅ, ᎤᏬᎳᏨᎩ, ᎢᏧᎳᎭ ᎤᏕᎶᏆᎥ." <ref>Harwood, 1976: 522</ref>
 
 == ᎠᏛᎯᏍᏙᏗ ==
-{{main|Music industry}}
 ᏗᎧᏃᎩᏛ ᎨᏒᎢ ᎪᏪᎶᏗ ᎠᎴ ᏄᏛᏁᎸ ᎾᏍᎩᎾᎢ ᎤᎪᏗᏗ ᏂᏚᏰᎸᏛᎢ, ᎤᏃᏴᎬ ᏂᏛᎴᏅᏓ ᎤᏓᏅᏖᎢᏌᏛ ᎠᎵᎮᎵᏥᏓᏍᏗ, ᏧᏁᎸᏗᏯ ᎠᎴ ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᏂᏚᏰᎸᏛᎢ, ᎠᎴ ᏥᏄᏍᏗ ᎤᏓᏅᏘ ᏧᎾᎵᏃᎮᏗ ᎤᏛᏒᎯ ᎾᏍᎩᎾᎢ ᎯᎠ ᎤᏂᎾᏗᏅᏗ. [[Amateur|ᎠᎴᏂᏍᎩ]] ᏗᎧᏃᎩᏛ ᎪᏪᎶᏗ ᎠᎴ ᎢᏯᏛᏁᏗ ᏗᎧᏃᎩᏛ ᎾᏍᎩᎾᎢ ᎤᎾᏤᎵ ᎣᏤᎵ ᎠᎵᎮᎵᏥᏓᏍᏗ, ᎠᎴ ᎤᏅᏌ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏁᎸᏙᏗ ᏗᎫᎪᏔᏅ ᎤᎾᏤᎵ ᎤᎷᏤᎯ ᏂᏛᎴᏅᏓ ᏗᎧᏃᎩᏛ. ᎢᏳᏍᏗ ᎢᏯᏛᏁᎯ [[musicians|ᏗᎧᏃᎩᏛ]] ᎠᏥᎾᏝᎢ ᎾᎥᎢ ᎠᏍᏓᏅᏅ ᏓᎾᏕᏲᎲᏍᎬ ᎠᎴ ᏧᎾᏙᏢᎯ, ᎠᏠᏯᏍᏗᏍᎩ ᎧᏃᎨᏂ ᎠᏂᏌᏙᏯᏍᎩ, ᏧᏂᎳᏫᏍᏗ ᎠᎴ synagogues, ᎾᏛᏁᎸ ᏗᏂᏃᎩᏍᏗᏍᎩ, ᎠᏗᎦᎴᏯᏍᏗ ᎠᎴ ᎠᏠᏗ ᎠᏛᎯᏍᏙᏗ ᏚᎾᏓᏡᎬᎢ, ᎠᎴ ᏗᎧᏃᎩᏛ ᏧᎾᏕᎶᏆᏍᏗ. ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ, ᎢᏳᏍᏗ ᎢᏯᏛᏁᎯ ᏗᎧᏃᎩᏛ ᏗᎦᎸᏫᏍᏓᏁᏗ ᏥᏄᏍᏗ ᏙᎯ ᎠᏕᏗ, ᎤᎪᎲᎢ ᏚᎾᏓᏁᏤᎸ ᎠᎴ ᏗᏓᏙᎳᏤᏗᏱ ᎭᏫᎾᏗᏢ ᏧᏓᎴᏅᏓ ᎦᏟᏌᏅ ᏗᏫᏍᏗ. 
 
 ᎾᏍᎩ ᎤᏁᎳᎩ ᎠᎴᏂᏍᎩ ᏗᎧᏃᎩᏛ ᏚᏓᎴᎿᎥ ᏂᏛᎴᏅᏓ ᎢᏳᏍᏗ ᎢᏯᏛᏁᎯ ᏗᎧᏃᎩᏛ ᎭᏫᎾᏗᏢ Ꮎ ᎠᎴᏂᏍᎩ ᏗᎧᏃᎩᏛ ᎤᎭ ᏗᎵᎪᏔᏅᎯ-ᏗᎧᏃᎩᏛ ᎦᏃᏢᎩ ᏗᏓᎴᎲᏍᎬ ᎤᎷᏤᎯ, ᏀᎾᎢ ᎢᏳᏓᎵᎭ ᎤᎪᏗᏗ ᏗᏕᎬᏔᏛ ᎠᏰᎵ ᎠᎴᏂᏍᎩ ᎠᎴ ᎢᏳᏍᏗ ᎢᏯᏛᏁᎯ ᏗᎧᏃᎩᏛ. ᎠᏓᎴᏂᏍᎬ ᎠᎴᏂᏍᎩ ᏗᎧᏃᎩᏛ ᎠᎩᏍᏗ ᎤᎾᏕᎶᏆᏍᏗ ᎬᏙᏗ ᎢᏳᏍᏗ ᎢᏯᏛᏁᎯ ᏗᎧᏃᎩᏛ. ᎭᏫᎾᏗᏢ ᎾᎥ ᏄᎾᏓᎸ ᏗᏫᏍᏗ, ᎠᏓᏌᎳᏙᏗ ᎠᎴᏂᏍᎩ ᏗᎧᏃᎩᏛ ᎢᏯᏛᏁᏗ ᎬᏙᏗ ᎢᏳᏍᏗ ᎢᏯᏛᏁᎯ ᏗᎧᏃᎩᏛ ᎭᏫᎾᏗᏢ ᏧᏓᎴᏅᏓ ᎦᏟᏌᏅ ᏂᎦᏛ ᎠᎴ ᏗᏂᏃᎩᏍᏗᏍᎩ. ᎭᏫᎾᏗᏢ ᎢᎦᏛ ᎢᏳᏓᎵᎭ ᏕᎦᎸᏛ ᎧᏁᏌᎢ, ᎠᎴᏂᏍᎩ ᏗᎧᏃᎩᏛ ᏂᎦᏥᏙᎲ ᎢᏳᏍᏗ ᎢᏯᏛᏁᎯ ᎤᏩᎾᏕᏍᎩ ᏰᎵᏊ, ᎠᎴ ᎤᏅᏌ ᏰᎵᏆ ᎢᏯᏛᏁᏗ ᎢᏯᏛᏁᏗ ᎭᏫᎾᏗᏢ ᎢᏳᏍᏗ ᎢᏯᏛᏁᎯ ᎾᎾᏛᏁᎲ ᏗᏫᏍᏗ.
@@ -54,9 +47,7 @@
 ᎤᎾᏤᎵᏛ ᎨᏒᎢ ᎢᏳᏓᎵᎭ ᎪᏢᏅᎯ ᎠᏰᎵ ᏗᎧᏃᎩᏛ ᏄᏛᏁᎸ ᎾᏍᎩᎾᎢ ᎯᎠ ᎤᎵᏍᏕᎸᏙᏗ ᎠᎴᏂᏓᏍᏗ ᎤᎾᏛᏓᏍᏗ ᎠᎴ ᏗᎧᏃᎩᏛ Ꮎ ᎨᏒᎢ ᏄᏛᏁᎸ ᎾᏍᎩᎾᎢ ᎯᎠ ᎤᏰᎸᏛᎢ ᎠᎴᏂᏙᎲ ᎪᏪᎳᏅᎯ ᎠᎴ ᎠᏗᎦᎴᏴ ᏗᎬᏩᎶᏒ ᎯᎠ ᏗᎧᏃᎩᏛ ᎤᏍᏗ ᎠᏓᎾᏅ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎠᎴ ᎯᎠ ᎠᏗᎦᎴᏯᏍᏗ ᎢᏯᏛᏁᎵᏓᏍᏗ. ᏱᏂᎬᏛᎾ, ᏀᎾᎢ ᎾᏍᎩ ᎾᏍᏇ ᎤᎪᏗᏗ ᏕᎦᎸᏛ ᎧᏁᏌᎢ ᎭᏢᏃ ᎠᎴᏂᏓᏍᏗ ᎾᎾᏛᏁᎲ ᎭᏫᎾᏗᏢ ᎢᎬᏱᏗᏢ ᎤᎾᏛᏓᏍᏗ ᎨᏒᎢ ᎪᏪᎳᏅᎯ ᎠᎴ ᎠᏗᎦᎴᏴ (ᎠᎴ ᎠᏗᎦᎴᏯᏍᏗ).     
 
 === ᎾᎾᏛᏁᎲ ===
-{{main|Performance}}
-
-[[File:Naxi Musicians I.jpg|thumb|Chinese [[Nakhi|Naxi]] ᏗᎧᏃᎩᏛ]]
+[[File:Naxi Musicians I.jpg|thumb|220px|Chinese [[Nakhi|Naxi]] ᏗᎧᏃᎩᏛ]]
 
 ᎩᎶ ᎠᏏᏴᏫ ᎦᎪ ᎢᏯᏛᏁᏗ, ᎪᏪᎶᏗ, ᎠᎴ ᎾᏛᏁᎲ ᏗᎧᏃᎩᏛ ᎨᏒᎢ ᏗᎧᏃᎩᏛ. ᏗᎧᏃᎩᏛ ᎢᏯᏛᏁᏗ ᏗᎧᏃᎩᏛ ᎾᏍᎩᎾᎢ ᏧᏓᎴᏅᏓ ᎦᏟᏌᏅ ᎠᎾᏓᏅᏖᏍᎬ. ᎢᎦᏛ ᏗᏟᎶᏍᏙᏗ ᎢᎦᏪᏍᏗ ᎤᎾᏤᎵ ᎤᎾᏒᎾᏍᏗᏱ ᎭᏫᎾᏗᏢ ᏗᎧᏃᎩᏛ.  ᎢᏯᏛᏁᏗ ᏗᎧᏃᎩᏛ ᎨᏒᎢ ᎤᎵᎮᎵᏍᏗ ᎠᎵᏂᎬᏁᏗᎢ ᎾᏍᎩᎾᎢ ᎠᎴᏂᏍᎩ ᎠᎴ ᎢᏳᏍᏗ ᎢᏯᏛᏁᎯ ᏗᎧᏃᎩᏛ, ᎠᎴ ᎾᏍᎩ ᎨᏒᎢ ᎢᏳᏓᎵᎭ ᎠᏍᏆᏛᎯ ᎾᏍᎩᎾᎢ ᎯᎠ ᎤᎵᏍᏕᎸᏙᏗ ᎤᎾᏛᏓᏍᏗ, ᎦᎪ ᎨᏒᎢ ᏗᎫᎪᏔᏅ ᎢᎦᏛ ᎤᏓᏅᏖᎢᏌᏛ, ᎠᎾᏓᏟᏏᏍᎬ, ᏧᏁᎸᏗᏯ, ᎠᎴ ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᏧᎬᏩᎶᏗ ᏂᏛᎴᏅᏓ ᎯᎠ ᎾᎾᏛᏁᎲ. ᎢᎦᏛ ᎯᎠ ᏄᏍᏛ ᏓᏄᎪᏗᏍᎬ ᎾᏍᎩᎾᎢ ᎢᏳᏍᏗ ᎢᏯᏛᏁᎯ ᎢᏯᏛᏁᏗ ᎨᏒᎢ Ꮎ ᎤᏅᏌ ᏗᎫᎪᏔᏅ ᎤᎾᏤᎵ ᎤᎷᏤᎯ ᏂᏛᎴᏅᏓ ᎠᏃᏢᏍᎬ ᏗᎧᏃᎩᏛ. ᎾᏍᎩ ᏂᎨᏒᎾ ᎾᏍᎩ ᎤᏩᏒ ᎨᏒᎢ ᎾᏍᎩ ᎤᎷᏤᎯ ᏗᎫᎪᏔᏅ ᏄᏍᏛ ᏓᏄᎪᏗᏍᎬ, ᏗᎧᏃᎩᏛ ᎤᎭ ᏗᏙᎳᎩ ᎢᎦᏛ ᎥᎴᏂᏙᎲ ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ ᎤᎾᏙᏢᎯ.  ᎠᎵᏍᎪᎸᏙᏗ ᏌᏊ ᎾᏍᏋ ᎠᏓᎦᎳᏍᏓᏗᏍᏗ ᏗᎬᏩᎶᏒ ᎣᏩᏒ ᎠᎴᏂᏙᎲ ᏄᏍᏛ ᏓᏄᎪᏗᏍᎬ ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ, ᏥᏄᏍᏗ ᎧᏁᎬᎢ ᎡᎪᎢ "ᎾᏍᎩᎾᎢ ᎯᎠ ᎬᎨᏳᎢ ᏗᎧᏃᎩᏛ."  ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ, ᏗᎧᏃᎩᏛ ᎨᏒᎢ ᏄᏛᏁᎸ ᎭᏫᎾᏗᏢ ᎯᎠ ᏄᏍᏗᏓᏅ ᎠᎵᏏᏀᎢᏍᏙᏗ, ᏥᏄᏍᏗ ᎦᎶᎯᏍᏗ ᎠᏙᎷᏩᏘᏍᎬ ᏗᎧᏃᎩᏛ ᎦᏃᏢᎩ ᎠᏏᎾᏒᎢ. ᎤᎪᏗᏗ ᏗᎧᏃᎩᏛ ᎾᏍᎩ ᎾᏍᏇ ᎨᎳᏗᏓᏍᏗ ᎭᏫᎾᏗᏢ [[music competition|ᏗᎧᏃᎩᏛ ᎠᏓᎪᏅᏙᏗᏱ]]ᏥᏄᏍᏗ ᎦᎶᎯᏍᏗ ᎠᎾᏕᎶᏆᏍᎬ ᎬᏩᏚᏫᏛ ᎯᎠ ᏗᎦᎸᏫᏍᏓᏁᏗ ᏐᎢ ᎢᏯᏛᏁᏗ ᎠᎴ ᎠᏓᎦᎳᏍᏓᏗᏍᏗ ᎤᏅᏌ ᏂᎦᏥᏙᎲ ᎦᎸᎳᏗᎨᏍᏙᏗ ᎤᏩᎾᏕᏍᎩ ᎾᎾᏛᏁᎲ.
 
@@ -66,9 +57,7 @@
 [[Chamber music|ᎤᏂᏴᏍᏗ ᏗᎧᏃᎩᏛ]], ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᏗᎧᏃᎩᏛ ᎾᏍᎩᎾᎢ ᎤᏍᏗ ᏂᎦᏛ ᎬᏙᏗ Ꮭ ᎤᏟ ᎢᎦᎢ ᎬᎾᏬᏍᎬ ᏌᏊ ᎠᏂᏏᏴᏫᎭ ᏗᎦᎪᏗ ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ, ᎨᏒᎢ ᎢᏳᏓᎵᎭ ᎠᎪᎲᎢ ᏥᏄᏍᏗ ᎤᏟ ᎢᎦᎢ ᎧᏁᎢᏍᏙᏗ ᎬᎾᏬᏍᎬ [[symphonic]] ᏧᏂᎸᏫᏍᏓᏁᏗ. ᎢᏯᏛᏁᏗ ᎨᏒᎢ ᎤᏯᏅᎲ [[musician|ᏗᎧᏃᎩᏛ]] ᎠᎴ ᎧᏃᎩᏍᏗ, ᎠᎴ ᎤᏅᏌ ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᎢᎦᏛ [[musical ensemble|ᏗᎧᏃᎩᏛ ᎦᏃᏢᎩ ᏂᎦᏛ]] ᏯᏛᎿ ᏥᏄᏍᏗ [[rock band|ᏅᏯ ᏗᏂᏤᎷᎯᏍᎩ]] ᎠᎴ ᎾᏛᏁᎸ [[orchestra|ᏗᏂᏃᎩᏍᏗᏍᎩ]].
 
 === Aural ᎧᏃᎮᎸᎯ ᎠᎴ ᎠᏅᏓᏗᏍᏙᏗ ᎪᏪᎶᏗ ===
-{{main|Musical notation}}
-
-[[File:Claves.png|thumb|ᏗᎧᏃᎩᏛ ᎦᏃᏢᎩ ᎠᏅᏓᏗᏍᏙᏗ ᎪᏪᎶᏗ]]
+[[File:Claves.png|thumb|220px|ᏗᎧᏃᎩᏛ ᎦᏃᏢᎩ ᎠᏅᏓᏗᏍᏙᏗ ᎪᏪᎶᏗ]]
 
 ᏗᎧᏃᎩᏛ ᎨᏒᎢ ᎢᏳᏓᎵᎭ ᎠᏍᏆᏂᎪᏙᏗ ᎭᏫᎾᏗᏢ ᎠᏅᏓᏗᏍᏗ ᎠᎴ ᎾᎾᏛᏁᎲ ᎾᏍᎩ ᎤᏩᏒ, ᏭᏓᏁᎸᎩ ᎡᎳᏗ [[oral history|ᎠᎴ]], ᎠᎴ aurally ("ᎾᎥᎢ ᎦᎴᏂ"). ᎯᎳᎪ ᎢᏳ ᎯᎠ ᎪᏪᎶᏗ ᏗᎧᏃᎩᏛ ᎨᏒᎢ Ꮭ ᎦᏅᎯᏓᎨ ᎤᎾᏅᏛ, ᎪᎯ ᏗᎧᏃᎩᏛ ᎨᏒᎢ ᎢᏳᏓᎵᎭ ᎠᏓᏁᎳᏅᎯ ᏥᏄᏍᏗ "ᎧᏃᎮᎸᎯ". ᏄᏓᎴᎿᎥ ᏗᎧᏃᎩᏛ ᎦᏃᏢᎩ ᎧᏃᎮᎸᎯ ᎤᎭ ᏄᏓᎴᎿᎥ ᏄᏍᏛ ᎣᏓᏅᏛ ᏫᏂᏚᏳᎪᏛ ᎯᎳᎪ ᎠᎴ ᎭᏢᏃ ᎪᏢᏗ ᏗᎦᏁᏟᏴᏍᏗ ᎯᎠ ᎠᎴᏅᏗᏍᎬ ᏗᏓᎴᎲᏍᎬ ᏭᏚᎸᏛ ᎬᏙᏗ, ᏂᏛᎴᏅᏓ ᎾᎥᏂᎨᏍᏙᏗ ᎠᏓᏅᏖᎢᏌᏛ, ᎾᏍᎩ ᎦᏙ ᎤᏍᏗ ᎠᏔᏲᏍᏗ [[improvisation|ᎤᎵᏍᏓ ᏗᎫᎪᏙᏗ]] ᎠᎴ ᏧᏓᎴᎿᎢ ᎯᎠ ᏗᎧᏃᎩᏛ. ᎭᏫᎾᏗᏢ ᎯᎠ Gambia, ᏭᏕᎵᎬ Africa, ᎯᎠ ᎧᏃᎮᏍᎩ ᎯᎠ ᏙᏱᏗᏢ ᎦᏚᎲ ᎨᏒᎢ ᎤᎶᏒᎩ aurally ᏗᎬᏩᎶᏒ ᎧᏃᎩᏍᏗ.
 
@@ -89,7 +78,6 @@
 ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎯᎠ "ᎦᏂ ᏗᎬᎯᏓ" ᎾᏍᎩᎾᎢ jazz ᎤᏃᏴᎬ ᎠᎾᏍᎬᏘ ᎾᏍᎩ ᎤᏩᏒ ᎠᏓᏎᎮᏗ ᎯᎠ  ᎠᏟᎶᏍᏗ ᎠᎴ ᎯᎠ ᎦᏃᏍᎩᏏᏓᏍᏗ ᏗᎦᏁᏟᏴᏍᏗ. ᎯᎠ ᎢᏯᏛᏁᏗ ᎭᏫᎾᏗᏢ ᎯᎠ jazz ᏂᎦᏛ ᎤᏚᎩ ᎤᏩᏒ ᎣᎾᏛ ᎯᎳᎪ "ᎤᏇᏓᎵ ᎠᏥᏄᎪᏫᏍᎬ" ᎪᎯ ᏄᏦᏍᏛᎾ ᎠᏛᎯᏍᏙᏗ ᎾᎥᎢ ᎦᏟᏐᏗ ᎠᏣᏅᏙ, ᎤᎵᏍᏓ ᏗᎫᎪᏙᏗ ᏗᎧᏃᎩᏛ, ᎠᎴ ᎦᏃᏍᎩᏏᏓᏍᏗ ᎦᏟᏐᏗᎩ.
 
 === ᎤᎵᏍᏓ ᏗᎫᎪᏙᏗ, ᎠᏁᎳᏙᏗ, ᎪᏪᎳᏅ ᎠᎪᎵᏰᏗ ===
-{{main|Musical composition|Musical improvisation|Free improvisation}}
 ᎤᎪᏗᏗ ᎥᎦᏔᎲᎢ ᎬᏙᏗ ᎾᎾᎢ ᎡᎳᏗᏢ ᎦᏙᎩ ᎢᎦᏛ ᎯᎠ ᎠᏓᏅᏖᏗ ᎤᎷᏅᏗ ᏗᎧᏃᎩᏛ ᎦᏃᏢᎩ ᏭᏚᎸᏛ ᎬᏙᏗ, ᎠᎴ [[musical composition|ᎪᏪᎳᏅ ᎠᎪᎵᏰᏗ]], ᏥᏄᏍᏗ ᎠᏰᎲᎩ ᎭᏫᎾᏗᏢ ᏭᏕᎵᎬᏗᏢ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᏗᎧᏃᎩᏛ. ᎢᏧᎳᎭ ᎯᎳᎪ ᎢᏳ ᏗᎧᏃᎩᏛ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᎧᎵᏬ ᏗᏙᎳᎩ, ᏀᎾᎢ ᏙᎢ ᎤᎪᏗᏗ ᏧᏚᎪᏔᏅ Ꮎ ᎢᏯᏛᏁᏗ ᎤᎭ ᎪᏢᏗ. ᎯᎠ ᏧᎵᎬᏩᎳᏅᎯ ᎢᏯᏛᏁᏗ ᏗᎫᎪᏙᏗ ᎯᎳᎪ ᎢᏯᏛᏁᏗ ᏗᎧᏃᎩᏛ Ꮎ ᎤᎭ ᏭᏪᏙᎢ ᏧᏩᎫᏔᏅᏒ ᎪᏪᎶᏗ ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᎨᏒᎢ ᎠᎴᏂᏍᎬ [[interpretation|ᎠᏁᎳᏙᏗ]]. 
 
 ᏄᏓᎴᎿᎥ ᎢᏯᏛᏁᏗ' ᎠᏁᎳᏙᏗ ᎯᎠ ᎤᏠᏱ ᏗᎧᏃᎩᏛ ᏰᎵᏇ ᏧᏓᎴᏀᎢ ᎠᏯᏖᎾ. ᎪᏪᎶᏗ ᎠᎴ ᎧᏃᎩᏍᏗ ᎠᏃᏪᎵᏍᎩ ᎦᎪ ᎡᏙᎠ ᎤᎾᏤᎵ ᎣᏤᎵ ᏗᎧᏃᎩᏛ ᎠᏁᎳᏙᏗ, ᎣᏍᏛ ᏥᏄᏍᏗ ᎤᏣᏘ ᏥᏄᏍᏗ ᎾᏍᎩ ᎦᎪ ᎢᏯᏛᏁᏗ ᎯᎠ ᏗᎧᏃᎩᏛ ᎠᏂᏐᎢ ᎠᎴ ᎠᏍᎦᏯᎠ ᏗᎧᏃᎩᏛ. ᎯᎠ ᏰᎵᏊ ᏗᏙᎳᎩ ᎠᏰᎸ ᎠᏑᏰᏛ ᎠᎴ techniques ᎡᏙᎠ ᎾᎾᎢ ᎠᏓᏁᎸ ᎠᎴᏰᏑ ᎠᎴ ᎠᏓᏁᎸ ᏀᎾᎢ ᎨᏒᎢ ᏩᏎᎸᎯ ᏥᏄᏍᏗ [[performance practice|ᎾᎾᏛᏁᎲ ᎠᎵᏏᏀᎢᏍᏙᏗ]], ᎭᏢᏃ ᏥᏄᏍᏗ ᎠᏁᎳᏙᏗ ᎨᏒᎢ ᏂᎦᎥᏊ ᎬᏔᏅᎯ ᎤᏁᎫᏥᏛ ᎢᏳᏍᏗᏊ ᎠᏂᏏᏴᏫᎭ ᎠᏑᏰᏛ ᎢᏯᏛᏁᏗ, ᎠᎴ ᎤᏔᏂᏗ ᎦᏙᎯ ᏗᎧᏃᎩᏛ ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᏧᎸᏌᏓ, ᎠᎴ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎤᎭ "ᏰᎵᏊ ᏗᏙᎳᎩ" ᎠᏁᎳᏙᏗ.
@@ -106,9 +94,7 @@
 ᎯᎳᎪ ᎢᏳ ᎠᎬᎭᎸᏓ ᎦᎾᏄᎪᎦ ᎤᎭ ᎦᏁᏟᏴᏍᎬ [[time|ᎠᎴᏰᏑ]]-ᎠᏒᎾᏍᏗ, ᎾᏍᎩ ᎨᏒᎢ ᎠᎦᏎᏍᏔᏅ ᎾᏍᏋ ᎭᏫᎾᏗᏢ [[rubato]] ᎠᎴᏰᏑ, [[Italian language|ᎾᏍᎩ]] ᎢᎦᏪᏛ Ꮎ ᎠᎾᏓᏎᎮ Ꮎ ᎯᎠ [[tempo]] ᎯᎠ ᎠᎬᎭᎸᏓ ᏗᎦᏁᏟᏴᏍᏗ ᎦᏚ ᏗᏄᏬ ᎯᎠ ᎢᎦᏪᏍᏗ ᎢᏰᎵᏍᏗ ᎯᎠ ᎢᏯᏛᏁᏗ. ᎢᏧᎳᎭ ᎤᏍᏆᏂᎪᏗ ᏀᎾᎢ ᎤᏍᏆᏂᎪᏗ ᏚᏃᏴᎬ, ᎦᏙ ᎤᏍᏗ ᏄᎵᏍᏔᏅ ᎭᏫᎾᏗᏢ [[musical montage|ᏗᎧᏃᎩᏛ ᎦᏃᏢᎩ montage]], ᏄᎵᏍᏔᏅ ᎭᏫᏂᏗᏢ ᎢᎦᏛ ᎤᏓᏅᏗ [[time|ᎠᎴᏰᏑ]], ᎠᎴ ᎯᎠ ᎢᏴ ᎠᏓᎾᏢᏗ [[time|ᎠᎴᏰᏑ]] ᏥᏄᏍᏗ ᏗᎧᏃᎩᏛ ᎦᏃᏢᎩ ᏑᏓᎴᎩ.
 
 == ᏛᏓᏓᏂᎸᎬ ᎠᎴ ᎠᏛᎩᏍᎬ ==
-{{main|Hearing (sense)}}
-
-[[File:Mozarteum grosser saal buehne mit orchester.jpg|thumb|ᏓᏂᏃᎩᏍᏗᏍᎬ ᎭᏫᎾᏗᏢ ᎯᎠ Mozarteum, Salzburg]]
+[[File:Mozarteum grosser saal buehne mit orchester.jpg|thumb|220px|ᏓᏂᏃᎩᏍᏗᏍᎬ ᎭᏫᎾᏗᏢ ᎯᎠ Mozarteum, Salzburg]]
 
 ᎯᎠ ᏠᎨᏏ [[music cognition|ᏗᎧᏃᎩᏛ ᎥᎦᏔᎲᎢ]] ᎠᏓᏠᏯᏍᏙᏗ ᎯᎠ ᎠᎦᏎᏍᏙᏗ ᎤᎪᏗᏗ ᎠᎴᏂᏙᎲ ᏗᎧᏃᎩᏛ ᎠᏠᏯᏍᏗᏍᎩ ᎯᎳᎪ ᎾᏍᎩ ᎨᏒᎢ ᏧᎵᎬᏩᎳᏅᎯ ᎾᎥᎢ ᏍᎨ. 
 
@@ -138,7 +124,7 @@
 
 ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎥᎦᏔᎲᎢ, ᏀᎾᎢ ᎨᏒᎢ ᎦᏲᎵᎨ ᎤᎾᏤᎵᏛ ᎠᏰᎵ ᎢᏯᏛᏁᏗ ᎠᎴ ᏍᎨ ᏗᎧᏃᎩᏛ, ᏥᏄᏍᏗ ᎬᏂᎨᏒ ᏄᏍᏛᎢ ᏂᎦᏛ ᎨᏒᎢ ᎤᏠᏯᏍᏔᏅ ᎭᏫᎾᏗᏢ ᎢᎦᏛ ᏗᏑᏰᏍᏗ ᏗᎧᏃᎩᏛ ᎦᏃᏢᎩ ᎠᎵᏂᎬᏁᏗᎢ, ᎢᏳᏓᎵᎭ ᎤᏔᏂᏗ ᎦᏙᎯ. ᎭᏫᎾᏗᏢ ᏧᏂᎸᏫᏍᏓᏁᏗ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ, ᏍᎨ ᏗᎧᏃᎩᏛ ᏗᎬᏩᎶᏒ ᎪᏪᎳᏅᎯ ᎤᏙᏢᏒ, ᏯᏛᎿ ᏥᏄᏍᏗ [[sound recording|ᎤᏃᏴᎬ ᎪᏪᎸ]] ᎠᎴ ᎠᎦᎦᏎᏍᏗ [[music video|ᏗᎧᏃᎩᏛ video]], ᎠᏓᏁᏟᏴᏍᏗ ᎤᏟ ᎢᎦᎢ ᏧᏣᏔᏊ ᎬᎾᏬᏍᎬ ᎤᎦᏙᎲᏒ ᎠᎴᏂᏓᏍᏗ ᎾᎾᏛᏁᎲ, ᎤᏐᏅ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏰᎵ ᎯᎠ 20th ᏍᎪᎯᏧᏈ ᏧᏕᏘᏴᏗ. 
 
-ᎢᏳᏊ ᏂᎦᎵᏍᏗ, ᎠᎴᏂᏓᏍᏗ [[performance|ᎾᎾᏛᏁᎲ]]ᎠᏙᏢᏗ ᎪᏪᎸ ᏚᏃᏴᎬ. ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, [[DJ]] ᎬᏔᏂᏓᏍᏗ [[gramophone record|ᏙᏯᏗᏢ ᎪᏪᎸ]] ᎾᏍᎩᎾᎢ [[scratching|ᏗᏜᎪᏍᏗ]], ᎠᎴ ᎢᎦᏛ 20th-ᏍᎪᎯᏧᏈ ᏧᏕᏘᏴᏗ ᏧᏂᎸᏫᏍᏓᏁᏗ ᎤᎭ ᎠᏏᏴᏫ ᎧᏃᎩᏍᎩ ᎾᏍᎩᎾᎢ ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ ᎠᎴ ᎧᏁᎬ ᎤᏲᏴᎬ Ꮎ ᎨᏒᎢ ᏄᏛᏁᎸ ᎨᎳᏛᏍᏗ ᎬᏙᏗ ᏗᎧᏃᎩᏛ Ꮎ ᎨᏒᎢ ᎪᏪᎸ onto ᎠᏍᏓᏅᏅ. [[Computers|ᎡᎵᏍ]] ᎠᎴ ᎤᎪᏗᏗ [[keyboards|ᏍᏚᎢᏍᏗ ᏒᏓᎷᎦ]] ᏰᎵᏇ ᎾᏍᏋ ᏙᎪᏩᎸ ᎠᏛᎯᏍᏙᏗ ᎠᎴ ᏗᏁᎶᏗ [[MIDI]] ᏗᎧᏃᎩᏛ. ᎤᎾᏛᏓᏍᏗ ᏰᎵᏇ ᎾᏍᎩ ᎾᏍᏇ ''ᏗᏙᎳᎩ'' ᎯᎠ ᎢᏯᏛᏁᏗ ᎾᎥᎢ ᎬᏗᏍᎬᎢ [[Karaoke]], ᎪᎷᏩᏛᏗ ᎾᎥᎢ ᎯᎠ Japanese, ᎦᏙ ᎤᏍᏗ ᎬᏔᏂᏓᏍᏗ ᏗᎧᏃᎩᏛ video ᎠᎴ ᎤᏔᏏᏅᏱ ᏄᏠᏯᏍᏛᎾ ᎧᏁᎬ ᎤᏲᏴᎬ, ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎯᎠ ᎢᏯᏛᏁᏗ ᏰᎵᏇ ᎦᏟᏐᏗ ᎤᎾᏤᎵ ᎧᏁᎬ ᎤᏲᏴᎬ ᎯᎠ ᎠᎬᎭᎸᏓ.
+ᎢᏳᏊ ᏂᎦᎵᏍᏗ, ᎠᎴᏂᏓᏍᏗ [[performance|ᎾᎾᏛᏁᎲ]] ᎠᏙᏢᏗ ᎪᏪᎸ ᏚᏃᏴᎬ. ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, [[DJ]] ᎬᏔᏂᏓᏍᏗ [[gramophone record|ᏙᏯᏗᏢ ᎪᏪᎸ]] ᎾᏍᎩᎾᎢ [[scratching|ᏗᏜᎪᏍᏗ]], ᎠᎴ ᎢᎦᏛ 20th-ᏍᎪᎯᏧᏈ ᏧᏕᏘᏴᏗ ᏧᏂᎸᏫᏍᏓᏁᏗ ᎤᎭ ᎠᏏᏴᏫ ᎧᏃᎩᏍᎩ ᎾᏍᎩᎾᎢ ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ ᎠᎴ ᎧᏁᎬ ᎤᏲᏴᎬ Ꮎ ᎨᏒᎢ ᏄᏛᏁᎸ ᎨᎳᏛᏍᏗ ᎬᏙᏗ ᏗᎧᏃᎩᏛ Ꮎ ᎨᏒᎢ ᎪᏪᎸ onto ᎠᏍᏓᏅᏅ. [[Computers|ᎡᎵᏍ]] ᎠᎴ ᎤᎪᏗᏗ [[keyboards|ᏍᏚᎢᏍᏗ ᏒᏓᎷᎦ]] ᏰᎵᏇ ᎾᏍᏋ ᏙᎪᏩᎸ ᎠᏛᎯᏍᏙᏗ ᎠᎴ ᏗᏁᎶᏗ [[MIDI]] ᏗᎧᏃᎩᏛ. ᎤᎾᏛᏓᏍᏗ ᏰᎵᏇ ᎾᏍᎩ ᎾᏍᏇ ''ᏗᏙᎳᎩ'' ᎯᎠ ᎢᏯᏛᏁᏗ ᎾᎥᎢ ᎬᏗᏍᎬᎢ [[Karaoke]], ᎪᎷᏩᏛᏗ ᎾᎥᎢ ᎯᎠ Japanese, ᎦᏙ ᎤᏍᏗ ᎬᏔᏂᏓᏍᏗ ᏗᎧᏃᎩᏛ video ᎠᎴ ᎤᏔᏏᏅᏱ ᏄᏠᏯᏍᏛᎾ ᎧᏁᎬ ᎤᏲᏴᎬ, ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎯᎠ ᎢᏯᏛᏁᏗ ᏰᎵᏇ ᎦᏟᏐᏗ ᎤᎾᏤᎵ ᎧᏁᎬ ᎤᏲᏴᎬ ᎯᎠ ᎠᎬᎭᎸᏓ.
 
 == ᏗᏕᎶᏆᏍᏗ ==
 
@@ -151,7 +137,6 @@
 ᎯᎠ PhD, ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎧᏁᏨ ᎢᏯᏛᏁᏗ ᎾᏍᎩᎾᎢ ᏙᎾᏕ ᎶᏆᏍᎩ ᎦᎪ ᎠᏚᎳᏗ ᏗᎦᎸᏫᏍᏓᏁᏗ ᏥᏄᏍᏗ ᏗᏕᎶᏆᏍᏗ ᎪᎯᏳᏙᏗ ᎭᏫᎾᏗᏢ musicology, ᏗᎧᏃᎩᏛ ᎧᏃᎮᏍᎩ, ᎠᎴ ᏗᎧᏃᎩᏛ ᎪᎷᏩᏛᏗ, ᎠᎩᏍᎪᎢ ᏦᎢ ᎯᏍᎩ ᏧᏕᏘᏴᏓ ᎠᎦᏎᏍᏙᏗ ᎤᎶᏐᏅ ᎯᎠ ᏄᎬᏫᏳᏌᏕᎩ ᎤᏤᎵ ᎢᎦᎢ ᎢᎦᏘ, ᏀᎢᏳᎨᏒ ᎦᏙ ᎤᏍᏗ ᎠᎴᏰᏑ ᎯᎠ ᏕᏕᎶᏆᏍᎩ ᏫᎵ ᎧᎵᏬᎯ ᎠᏓᏌᎳᏙᏗ ᏫᏂᏚᏳᎪᏛ ᎠᎴ ᎠᏁᎸᏙᏗ ᏅᎠᏯᏍᏗ ᎾᏍᎩᎾᎢ ᎧᏃᎮᏍᎩ. ᎯᎠ ᎦᎾᎦᏘ ᏗᎧᏃᎩᏛ ᎦᏃᏢᎩ ᏗᎾᏟᎶᏍᏗᏍᎩ, ᎠᎴ DMA ᎨᏒᎢ ᏗᎦᏃᏢᎩ ᎢᏤ ᎢᎦᎢ ᎢᎦᏘ Ꮎ ᏥᏄᏍᏛᎩ ᎪᏢᏅᎯ ᎠᏓᏁᎳᏁᏗ ᎪᎯᏳᏙ ᎾᏍᎩᎾᎢ ᎢᏳᏍᏗ ᎢᏯᏛᏁᎯ ᎢᏯᏛᏁᏗ ᎠᎴ ᎪᏪᎶᏗ Ꮎ ᎠᏚᎳᏗ ᏗᎦᎸᏫᏍᏓᏁᏗ ᏥᏄᏍᏗ ᏗᏕᎶᏆᏍᏗ ᎪᎯᏳᏙᏗ ᎭᏫᎾᏗᏢ ᏗᎧᏃᎩᏛ ᎦᏃᏢᎩ ᎾᎾᏛᏁᎲ ᎠᎴ ᎪᏪᎳᏅ ᎠᎪᎵᏰᏗ. ᎯᎠ DMA ᎠᎩᏍᎪᎢ ᏦᎢ ᎯᏍᎩ ᏧᏕᏘᏴᏓ ᎤᎶᏐᏅ ᏄᎬᏫᏳᏌᏕᎩ ᎤᏤᎵ ᎢᎦᎢ ᎢᎦᏘ, ᎠᎴ ᎠᏠᏯᏍᏗ ᎠᏓᏌᎳᏙᏗ ᏫᏂᏚᏳᎪᏛ, ᎠᏎᎸᎯ, ᎠᎴ ᎾᎾᏛᏁᎲ. 
 
 === ᏗᎧᏃᎩᏛ ᏥᏄᏍᏗ ᎢᎦᏛ ᏂᎦᎥ ᏗᏕᎶᏆᏍᏗ ===
-{{main|Music education}}
 ᎯᎠ ᎠᏙᏢᏗ ᏗᎧᏃᎩᏛ ᎠᎨᏲᎲᏍᎬ ᏂᏛᎴᏅᏓ [[preschool|ᏗᏕᎶᏆᏍᏗ]] postsecondary ᏗᏕᎶᏆᏍᏗ ᎨᏒᎢ ᏧᏣᏔᏊ ᎭᏫᎾᏗᏢ ᎤᏴᏢ ᎠᎺᎵᎨ ᎠᎴ Europe, ᎢᎬᏂᏏᏍᎩ ᎤᏠᏯᏍᏔᏅ ᎭᏫᎾᏗᏢ ᏗᎧᏃᎩᏛ ᎨᏒᎢ ᏁᎵᏒ ᏕᏕᏲᏗ ᏄᏦᏍᏛᎾ ᎠᏏᎾᏒᎢ ᏯᏛᎿ ᏥᏄᏍᏗ ᎤᏓᏂᏝᏅ, [[counting|ᏛᏎᎯᎯ]], ᏍᎨ, ᎠᎴ [[cooperation|ᎠᎵᎪᏒ]] ᏀᎢᏳᎢ ᎾᏍᎩ ᎾᏍᏇ ᎧᏁᏉᏍᏗ ᎪᎵᏍᏗᏱ [[language|ᎦᏬᏂᎯᏍᏗ]], ᎪᏢᎯᏏᏍᎬ ᎯᎠ ᏅᏏᎾᏒ [[memory|ᏅᎠᏥᏯᏃᏗ]] ᎠᏓᏃᎯᏎᏗ, ᎠᎴ ᎪᏢᏗ ᏄᏍᏗᏓᏅ ᎤᏟ ᎢᎦᎢ ᎾᏛᏁᎲ ᎠᎾᏕᎶᏆᏍᎬ ᎭᏫᎾᏗᏢ ᏐᎢ ᎡᏍᎦᏂ. <ref>ᎠᏓ ᏂᎦᏛ ᎠᎴ Ziembroski, 2002</ref> ᎭᏫᎾᏗᏢ ᏑᏓᎴᎩ ᏂᏓᏳᏓᎴᏅ ᏧᎾᏕᎶᏆᏍᏗ, ᏗᏂᏲᎵ ᎢᏳᏓᎵᎭ ᎠᏕᎶᏆᏍᏗ ᏗᏁᎶᏗ ᎪᎱᏍᏗ ᏗᎬᏔᏂᏓᏍᏗ ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎠ ᎪᏪᎵᏍᎩ, ᎧᏃᎩᏍᏗ ᎭᏫᎾᏗᏢ ᎤᏍᏗ ᏗᏂᏃᎩᏍᎩ, ᎠᎴ ᎠᏕᎶᏆᏍᏗ ᎬᏩᏚᏫᏛ ᎯᎠ ᎧᏃᎮᏍᎩ ᏭᏕᎵᎬᏗᏢ ᏗᏟᎶᏍᏙᏗ ᏗᎧᏃᎩᏛ. ᎭᏫᎾᏗᏢ ᎡᎳᏗᏢ ᎦᏙᎩ ᏧᎾᏕᎶᏆᏍᏗ ᏙᎾᏕ ᎶᏆᏍᎩ ᎠᎾᏍᎬᏘ ᎤᎭ ᎯᎠ ᎠᏓᏜᏅᏓᏕᎲ ᎢᏯᏛᏁᏗ ᎢᎦᏛ ᏗᎦᎪᏗ ᏗᎧᏃᎩᏛ ᎦᏃᏢᎩ ᏂᎦᏛ, ᏯᏛᎿ ᏥᏄᏍᏗ [[choirs|ᏗᏂᏃᎩᏍᎩ]], [[marching bands|ᎠᎾᏱᎵᏒ ᏗᏂᏤᎷᎯᏍᎩ]], [[concert band|ᏓᏂᏃᎩᏍᏗᏍᎬ ᏗᏂᏤᎷᎯᏍᎩ]], [[jazz band|jazz ᏗᏂᏤᎷᎯᏍᎩ]], ᎠᎴ [[orchestras|ᏗᏂᏃᎩᏍᏗᏍᎩ]], ᎠᎴ ᎭᏫᎾᏗᏢ ᎢᎦᏛ ᏗᏕᎶᏆᏍᏗ ᎢᏯᏛᏁᎵᏓᏍᏗ, ᏗᎧᏃᎩᏛ ᏚᎾᎵᎪᏒ ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᏰᎵ ᎠᏩᏛᏗ.
 
 ᎾᎾᎢ ᎯᎠ [[university|ᏗᏕᎶᏆᏍᏗ]] ᎤᏩᎾᏕᏍᎩ, ᏙᎾᏕ ᎶᏆᏍᎩ ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᏗᎾᏟᎶᏍᏗᏍᎩ ᎠᎴ ᏴᏫ ᎠᏁᎲ ᎢᏗᏛᏁᏗ ᏰᎵᏇ ᎠᎩᏍᏗ ᎠᏓᏚᏗ ᎾᏍᎩᎾᎢ ᎠᎩᏍᎬᎢ ᏗᎧᏃᎩᏛ ᏫᏂᏚᏳᎪᏛ, ᎦᏙ ᎤᏍᏗ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎠᎩᏍᏗ ᎯᎠ ᎤᏙᏢᏒ ᎦᏬᎯᎸᏙᏗ ᏗᎧᏃᏗᎢ ᏫᏚᏳᎪᏛ ᏀᎾ ᎯᎠ ᎧᏃᎮᏍᎩ ᏗᎧᏃᎩᏛ, ᎠᎴ [[music appreciation|ᏗᎧᏃᎩᏛ ᎠᏓᎵᎮᎵᏤᏗᏱ]] ᏫᏚᏳᎪᏛ Ꮎ ᎠᏰᎵ ᏀᎾ ᏍᎨ ᏗᎧᏃᎩᏛ ᎠᎴ ᎠᎾᏕᎶᏆᏍᎬ ᎬᏩᏚᏫᏛ ᏄᏓᎴᎿᎥ ᏗᎧᏃᎩᏛ ᎦᏃᏢᎩ ᏧᎾᏣᏅᏙᏗ. ᎭᏫᎾᏗᏢ ᎦᏟᏐᏗᎩ, ᎤᎪᏗᏗ ᎤᏴᏢ ᏴᏩᏁᎬ ᎠᎴ European ᏗᏕᎶᏆᏍᏗ ᎤᎭ ᎢᎦᏛ ᏗᎦᎪᏗ ᏗᎧᏃᎩᏛ ᎦᏃᏢᎩ ᏂᎦᏛ Ꮎ ᏗᎵᎪᏔᏅᎯ-ᏗᎧᏃᎩᏛ ᏙᎾᏕ ᎶᏆᏍᎩ ᏰᎵᏆ ᎢᏯᏛᏁᏗ ᎨᎳᏗᏓᏍᏗ ᎭᏫᎾᏗᏢ, ᏯᏛᎿ ᏥᏄᏍᏗ ᏗᏂᏃᎩᏍᎩ, ᎠᎾᏱᎵᏒ ᏗᏂᏤᎷᎯᏍᎩ, ᎠᎴ ᏗᏂᏃᎩᏍᏗᏍᎩ.
@@ -161,8 +146,6 @@
 ᎢᏧᎳ ᎠᎴᏂᏍᎩ ᎠᎴ ᎢᏳᏍᏗ ᎢᏯᏛᏁᎯ ᏗᎧᏃᎩᏛ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎠᎩᏍᏗ [[music lessons|ᏗᎧᏃᎩᏛ ᎤᎾᏕᎶᏆᏍᏗ]], ᏍᏆᎳᎢ ᎤᏤᎵᏓ ᏓᏂᎳᏫᎥ ᎬᏙᏗ ᎠᏂᏏᏴᏫᎭ ᏗᏕᏲᎲᏍᎩ. ᎠᎴᏂᏍᎩ ᏗᎧᏃᎩᏛ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎠᎩᏍᏗ ᎤᎾᏕᎶᏆᏍᏗ ᎠᏕᎶᏆᏍᏗ ᏗᎧᏃᎩᏛ ᎦᏃᏢᎩ ᎠᏓᎴᏂᏍᎬ ᎠᎴ ᏕᏕᎶᏆᏍᎩ- ᎤᏁᎫᏥᏛ-ᎤᏩᎾᏕᏍᎩ ᏗᎧᏃᎩᏛ ᎦᏃᏢᎩ techniques.
 
 === ᎠᎦᏎᏍᏙᏗ ===
-{{main|musicology|music theory}}
-
 ᎤᎪᏗᏗ ᏴᏫ ᎾᏍᎩ ᎾᏍᏇ ᎠᎦᏎᏍᏙᏗ ''ᎬᏩᏚᏫᏛ'' ᏗᎧᏃᎩᏛ ᎭᏫᎾᏗᏢ ᎯᎠ ᏠᎨᏏ [[musicology]]. ᎯᎠ ᎢᎬᏱᏗᏢᏍᏗ ᏩᏎᏍᏗ ᏀᎾ [[musicology]] ᎧᏁᎢᏍᏔᏅᎯ ᏦᎢ ᎡᎳᏗᏢ ᎦᏙᎩ-ᏓᏕᏲᎲᏍᎬ: [[systematic musicology|ᎠᏓᏅᏍᏗ musicology]], [[historical musicology|ᎧᏃᎮᏍᎩ ᏄᎵᏍᏔᏅ musicology]], ᎠᎴ [[comparative musicology|ᎢᎦᎢ ᎢᎦᏘ musicology]]. ᎭᏫᎾᏗᏢ ᎠᎵᎪᏁᏗ ᏛᏕᎶᏆᏍᎬ, ᏌᏊ ᎨᏒᎢ ᎤᏟ ᎢᎦᎢ ᏄᏓᎷᎸᎾ ᏗᏠᎯᏍᏗ ᎠᏰᏗ ᎢᏳᏓᏛ ᎯᎠ ᏓᏕᏲᎲᏍᎬ ᎾᏀᎢ [[music theory|ᏗᎧᏃᎩᏛ ᎪᎷᏩᏛᏗ]], [[music history|ᏗᎧᏃᎩᏛ ᎧᏃᎮᏍᎩ]], ᎠᎴ [[ethnomusicology]]. ᏅᎠᏯᏍᏗ ᎭᏫᎾᏗᏢ musicology ᎤᎭ ᎢᏳᏓᎵᎭ ᏭᏪᏙᎢ ᎪᏢᎯᏐᏗ ᎾᎥᎢ ᏓᏓᎿᏩᏍᏛ-disciplinary ᏗᎦᎸᏫᏍᏓᏁᏗ, ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ ᎭᏫᎾᏗᏢ ᎯᎠ ᏠᎨᏏ [[psychoacoustics]]. ᎯᎠ ᎠᎦᏎᏍᏙᏗ ᏗᎧᏃᎩᏛ ᏗᎵᎪᏔᏅᎯ-ᏭᏕᎵᎬᏗᏢ ᎥᎦᏔᎲᎢ, ᎠᎴ ᎯᎠ ᎥᎦᏔᎲᎢ ᎠᎦᏎᏍᏙᏗ ᏗᎧᏃᎩᏛ, ᎨᏒᎢ ᎤᏯᏅᎲ [[ethnomusicology]]. 
 
 ᎭᏫᎾᏗᏢ [[Medieval|ᎠᎦᏴᎵ]] ᎠᎴᏰᏑ, ᎯᎠ ᎠᎦᏎᏍᏙᏗ ᏗᎧᏃᎩᏛ ᏥᏄᏍᏛᎩ ᏌᏊ ᎯᎠ [[Quadrivium]] ᎯᎠ ᎦᎵᏉᎩ [[Liberal Arts|ᏄᎨᏳᎿᎲᎾ ᏗᎾᏟᎶᏍᏗᏍᎩ]] ᎠᎴ ᎠᎦᏎᏍᏔᏅ ᏭᎵᏍᎨᏗᏴᎢ ᎦᎸᎳᏗᎨᏍᏙᏗ ᎠᎾᏕᎶᏆᏍᎬ. ᎭᏫᏂᏗᏢ ᎯᎠ ᎢᎦᎢ [[Quadrivium]], ᏗᎧᏃᎩᏛ, ᎠᎴ ᎤᏟ ᎢᎦᎢ ᎧᎵ ᏗᏙᎳᎩ [[harmonics|ᎠᏟᎶᏍᏗ]], ᏥᏄᏍᏛᎩ ᎯᎠ ᎠᎦᏎᏍᏙᏗ ᏎᏍᏗ ᎢᎦᏘᎭ. 
@@ -185,50 +168,31 @@ Rhodian ᎠᏟᏰᏗ, ᎭᏫᎾᏗᏢ [3483]Philostratus, ᎯᎳᎪ ᎢᏳ Apoll
 ᎥᏳᎩ ᎾᎥᎢ ᏗᎧᏃᎩᏛ ᎤᏩᏒ: ᏥᏄᏍᏗ ᎾᏊ ᎤᏅᏌ ᎿᏛᎦ ᎾᏍᎩ, saith [3485]Bodine, Ꮎ 
 ᎤᏦᎠᏎᏗ ᎬᏙᏗ ᏒᎯᏰᏱ. Vitus ᎤᏤᎵ ᎠᏓᏅᏍᏗ ᎠᎳᏍᎩᏓ. [http://www.gutenberg.org/files/10800/10800-8.txt]<blockquote></ref> <ref>[http://www.med.mun.ca/munmed/84/crellin.htm "Humanities are the Hormones: A Tarantella Comes to Newfoundland. What should we do about it?"] ᎾᎥᎢ ᏗᏕᎶᏆᏍᎩ. ᏣᏂ Crellin, MUNMED, ᏗᏤᎢ ᎩᎶ ᏂᏓᏳᏅᏅ ᎪᏪᎵ ᎯᎠ ᏗᎾᏕᏲᎲᏍᎩ ᏅᏬᏘ, ᎠᏅᏓᏗᏍᏙᏗ ᏗᏕᎶᏆᏍᏗ ᎦᎾᏝᎢ, 1996.</ref> <ref>Aung, Steven K.H., ᎣᏂᏯᎨᏍᏙᏗ, ᎠᏯᏖᏃ ᎦᏅᏗ ᎦᎷᏯᏍᏗ H.M., "ᏗᎧᏃᎩᏛ, ᏚᏃᏴᎬ, ᏅᏬᏘ, ᎠᎴ ᏁᎵᏒ: ᏂᎦᏛ ᎤᎾᏄᎪᎢᏍᏗ ᎯᎠ ᎧᏅᏬᏗ ᏗᎾᏟᎶᏍᏗᏍᎩ", ᎠᏓᏁᏟᏴᏍᏗᎭ & ᎠᏂᏔᎵ ᎾᎾᏛᏁᎲ Therapies, Oct 2004, Vol. 10, Ꮭ. 5: 266-270. [http://www.liebertonline.com/doi/abs/10.1089/act.2004.10.266?journalCode=act]</ref>
 
-ᎭᏫᎾᏗᏢ ᏅᏓᏕᏆ 2006, ᏗᏕᎶᏆᏍᎩ. Michael J. ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ ᏗᎦᏐᎯᏍᏗ <ref>[http://www1.imperial.ac.uk/medicine/people/m.crawford/ Dr. Michael J. Crawford page] ᎾᎾᎢ [[Imperial College London|ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ ᎦᎸᎳᏗᏴ ᏧᎾᏕᎶᏆᏍᏗ London]], ᏗᎾᏕᏲᎲᏍᎩ ᏅᏬᏘ, ᏗᎦᎸᏫᏍᏓᏁᏗ ᎣᏓᏅᏛ ᏅᏬᏘ.</ref> ᎠᎴ ᎤᏤᎵ ᎤᎾᏓᏡᎩ ᎾᏍᎩ ᎾᏍᏇ ᎠᏩᏛᏗ Ꮎ [[music therapy|ᏗᎧᏃᎩᏛ therapy]] ᎤᎵᏍᏕᎸᎲᎩ [[schizophrenia|schizophrenic]] ᎤᏢᎩ. <ref>
-{{cite journal| quotes = Music therapy may provide a means of improving mental health among people with schizophrenia, but its effects in acute psychoses have not been explored | last = Crawford | first = Mike J. | authorlink = | coauthors = Talwar, Nakul, et al. | year = 2006 | month = November | title = Music therapy for in-patients with schizophrenia: Exploratory randomised controlled trial | journal = The British Journal of Psychiatry (2006)  | volume = 189 | pages = 405-409 | url = http://bjp.rcpsych.org/cgi/content/abstract/189/5/405}} </ref>
+ᎭᏫᎾᏗᏢ ᏅᏓᏕᏆ 2006, ᏗᏕᎶᏆᏍᎩ. Michael J. ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ ᏗᎦᏐᎯᏍᏗ <ref>[http://www1.imperial.ac.uk/medicine/people/m.crawford/ Dr. Michael J. Crawford page] ᎾᎾᎢ [[Imperial College London|ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ ᎦᎸᎳᏗᏴ ᏧᎾᏕᎶᏆᏍᏗ London]], ᏗᎾᏕᏲᎲᏍᎩ ᏅᏬᏘ, ᏗᎦᎸᏫᏍᏓᏁᏗ ᎣᏓᏅᏛ ᏅᏬᏘ.</ref> ᎠᎴ ᎤᏤᎵ ᎤᎾᏓᏡᎩ ᎾᏍᎩ ᎾᏍᏇ ᎠᏩᏛᏗ Ꮎ [[music therapy|ᏗᎧᏃᎩᏛ therapy]] ᎤᎵᏍᏕᎸᎲᎩ [[schizophrenia|schizophrenic]] ᎤᏢᎩ. <ref>"Music therapy may provide a means of improving mental health among people with schizophrenia, but its effects in acute psychoses have not been explored."  Crawford, Mike J., Talwar, Nakul, et al. [http://bjp.rcpsych.org/cgi/content/abstract/189/5/405 "Music therapy for in-patients with schizophrenia: Exploratory randomised controlled trial."] ''The British Journal of Psychiatry.'' #189, ᏅᏓᏕᏆ 2006: 405-409</ref>
 
 ᎭᏫᎾᏗᏢ ᎠᎵᏍᏕᎸᏗ ᏓᎳᏏᏛ, ᎠᏓᏅᏖᏗᏱ ᎠᏓᏂᎶᎯᏍᏗ ᎨᏒᎩ ᎠᏓᏁᎸᎯ ᎬᏙᏗ ᏗᎧᏃᎩᏛ.
 
 == ᏓᏓᏚᎬ ᎪᏪᎵ ==
+<references/>
 
 == ᎪᏪᎵ ==
 Harwood, Dane (1976). "ᎢᎬᏩᎾᏓᎴᎩ ᎭᏫᎾᏗᏢ ᏗᎧᏃᎩᏛ: ᎦᎾᏄᎪᏨᎢ ᏂᏛᎴᏅᏓ ᎥᎦᏔᎲᎢ ᎣᏓᏅᏛ", ''Ethnomusicology'' 20, Ꮭ. 3:521-33.
 * ᏣᏂ ᎤᏪᏥ, Julian (2002). ''ᎦᎪ ᎤᏚᎸᏗ ᏄᎾᏛᏅ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᏗᎧᏃᎩᏛ?: ᎥᎦᏔᎲᎢ ᎠᏑᏰᏛ ᎠᎴ ᏗᎧᏃᎩᏛ ᎦᏃᏢᎩ ᏧᎬᏩᎶᏗ''. Oxford ᏗᏕᎶᏆᏍᏗ ᏗᏂᎴᏱᏗᏍᎩ. ISBN 0-19-514681-6.
 * Kertz-Welzel, Alexandra. "ᎤᏔᏅ ᏗᎧᏃᎩᏍᏗ ᎤᎵᏍᏓ ᏗᎫᎪᏙᏗ ᎤᏙᎷᏬᏗ ᏗᎧᏃᎩᏛ." ''Orff-ᎤᏃᏴᎬ ᏂᏓᏳᏨᏓ'' XXXVII Ꮭ. 1 (2004): 11-14.
-* Kertz-Welzel, Alexandra. "ᎯᎠ ᏓᏂᏃᎩᏍᎬ ᏁᎵᏒ: ᏦᎢ ᏍᎪᎯᏧᏈ ᏧᏕᏘᏴᏗ ᏗᎧᏃᎩᏛ ᏗᏕᎶᏆᏍᏗ ᎭᏫᎾᏗᏢ Germany." ᏕᎪᏪᎸ ᎧᏃᎮᏍᎩ ᏄᎵᏍᏔᏅ ᏅᎠᏯᏍᏗ ᎭᏫᎾᏗᏢ ᏗᎧᏃᎩᏛ ᏗᏕᎶᏆᏍᏗ XXVI Ꮭ. 1 (2004): 8-27.
+* Kertz-Welzel, Alexandra. "ᎯᎠ ᏓᏂᏃᎩᏍᎬ ᏁᎵᏒ: ᏦᎢ ᏍᎪᎯᏧᏈ ᏧᏕᏘᏴᏗ ᏗᎧᏃᎩᏛ ᏗᏕᎶᏆᏍᏗ ᎭᏫᎾᏗᏢ [[Germany|ᎠᏂᏛᏥ]]." ᏕᎪᏪᎸ ᎧᏃᎮᏍᎩ ᏄᎵᏍᏔᏅ ᏅᎠᏯᏍᏗ ᎭᏫᎾᏗᏢ ᏗᎧᏃᎩᏛ ᏗᏕᎶᏆᏍᏗ XXVI Ꮭ. 1 (2004): 8-27.
 * Kertz-Welzel, Alexandra. "Didaktik ᏗᎧᏃᎩᏛ: ᎠᏓᏥ ᎠᏓᏅᏖᏗ ᎠᎴ Ꮝ ᎤᏠᏱ ᎾᎬᏁᎲ ᏴᏩᏁᎬ ᏗᎧᏃᎩᏛ Pedagogy." ᎠᏰᎵ ᏚᎾᏙᏢᏒ ᏕᎪᏪᎸ ᏗᎧᏃᎩᏛ ᏗᏕᎶᏆᏍᏗ (ᎠᎵᏏᏀᎢᏍᏙᏗ) 22 Ꮭ. 3 (2004): 277-286. 
-* Kertz-Welzel, Alexandra. "ᏂᎦᎥ ᏗᎧᏃᎩᏛ ᏗᏕᎶᏆᏍᏗ ᎭᏫᎾᏗᏢ Germany ᎪᎯ ᎢᎦ: ᎭᎦᏔ ᎾᎾᎢ ᎯᎳᎪ ᎤᏂᎸᏉᏗ ᏗᎧᏃᎩᏛ ᎨᏒᎢ ᏗᏓᏁᏤᏗ ᏙᎾᏕ ᎶᏆᏍᎩ." ᏂᎦᎥ ᏗᎧᏃᎩᏛ ᎪᎯ ᎢᎦ 18 Ꮭ. 2 (ᎪᎳ 2005): 14-16. 
+* Kertz-Welzel, Alexandra. "ᏂᎦᎥ ᏗᎧᏃᎩᏛ ᏗᏕᎶᏆᏍᏗ ᎭᏫᎾᏗᏢ [[Germany|ᎠᏂᏛᏥ]] ᎪᎯ ᎢᎦ: ᎭᎦᏔ ᎾᎾᎢ ᎯᎳᎪ ᎤᏂᎸᏉᏗ ᏗᎧᏃᎩᏛ ᎨᏒᎢ ᏗᏓᏁᏤᏗ ᏙᎾᏕ ᎶᏆᏍᎩ." ᏂᎦᎥ ᏗᎧᏃᎩᏛ ᎪᎯ ᎢᎦ 18 Ꮭ. 2 (ᎪᎳ 2005): 14-16. 
 * Molino, Jean (1975). "ᎥᎦᏔᎲᎢ ᏗᎧᏃᎩᏛ ᎦᏃᏢᎩ ᎠᏃᏪᎵᏍᎬ sémiologue ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ ᏗᏓᏓᏂᎸᏣᏘ musique", ''Musique ᎠᏓᏄᎪᏫᏍᏗ Jeu'', Ꮭ. 17:37-62.
 * Nattiez, Jean-Jacques (1987). ''ᏗᎧᏃᎩᏛ ᎠᎴ ᏫᏚᏳᎪᏛ: ᏫᏚᏳᎪᏛ ᎠᏓᏎᎮᏗ ᏗᎧᏃᎩᏛ'' (''Musicologie générale ᎠᏃᏪᎵᏍᎬ sémiologue'', 1987). ᎠᏁᏢᏙᏗ ᎾᎥᎢ Carolyn Abbate (1979). ISBN 0-691-02714-5.
 * Owen, Harold (2000). ''ᏗᎧᏃᎩᏛ ᎪᎷᏩᏛᏗ ᏗᏓᎴᎲᏍᎬ ᎪᏪᎵ''. Oxford ᏗᏕᎶᏆᏍᏗ ᏗᏂᎴᏱᏗᏍᎩ. ISBN 0-19-511539-2.
 * ᎠᏓ ᏂᎦᏛ, ᎳᏆᎠ ᎠᎴ ᏇᏂᏓ Ziembroski, (2002). [http://www.songsforteaching.com/lb/literacymusic.htm Promoting Literacy Through Music].
 
-== ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᎾᏍᏇ ==
-
-=== ᏙᎪᏩᎸ ===
-: ''ᏄᎬᏫᏳᏒ ᏙᎪᏩᎸ: [[List of music topics|ᏙᎪᏩᎸ ᏗᎧᏃᎩᏛ ᎢᏳᏍᏗ ᎧᏃᎮᏗ]] ᎠᎴ [[List of basic music topics|ᏙᎪᏩᎸ ᏄᏦᏍᏛᎾ ᏗᎧᏃᎩᏛ ᎢᏳᏍᏗ ᎧᏃᎮᏗ]]''
-* [[List of music arrangers|ᏙᎪᏩᎸ ᏗᎧᏃᎩᏛ ᎠᏓᏁᎶᏗ]]
-* [[List of music genres|ᏙᎪᏩᎸ ᏗᎧᏃᎩᏛ ᎠᏂᎶᏁᏍᎬ]]
-* [[List of music prodigies|ᏙᎪᏩᎸ ᏗᎧᏃᎩᏛ ᏗᏙᎳᎩ]]
-* [[List of musicians|ᏙᎪᏩᎸ ᏗᎧᏃᎩᏛ]]
-* [[List of musical events|ᏙᎪᏩᎸ ᏗᎧᏃᎩᏛ ᎦᏃᏢᎩ ᏂᏕᎦᎵᏍᏔᏂᏙᎲ]]
-* [[List of musical forms|ᏙᎪᏩᎸ ᏗᎧᏃᎩᏛ ᎦᏃᏢᎩ ᏚᏙᏢᏒ]]
-* [[List of musical instruments|ᏙᎪᏩᎸ ᏗᎧᏃᎩᏛ ᎦᏃᏢᎩ ᎪᎱᏍᏗ ᏗᎬᏔᏂᏓᏍᏗ]]
-* [[List of musical intervals|ᏙᎪᏩᎸ ᏗᎧᏃᎩᏛ ᎦᏃᏢᎩ ᏰᎵ ᏚᏝᏅᏛ]]
-* [[List of musical movements|ᏙᎪᏩᎸ ᏗᎧᏃᎩᏛ ᎦᏃᏢᎩ ᎠᏓᏅᏏᏙᎠ]]
-
-=== ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ ᎢᏳᏍᏗ ᎧᏃᎮᏗ ===
-* [[:Category:Art|Art category]]
-* [[:Category:Culture|Culture category]]
-* [[Wikipedia:Wikiportal/Music|Music portal]]
-* [[Music and mathematics|ᏗᎧᏃᎩᏛ ᎠᎴ ᏗᏎᏍᏗ ᎤᎬᏩᎵ]]
-* [[Music on Demand|ᏗᎧᏃᎩᏛ ᏀᎾ ᎠᏔᏲᏍᏗ]]
-* [[Digital Audio Player|ᏎᏍᏗ Audio ᏗᏁᎶᏗ]]
-* [[Music terminology|ᏗᎧᏃᎩᏛ terminology]]
-
-==ᏫᏓᏎᏄᎢ==
-<references/>
+== ᎯᎪᏩᏔ ᎾᏍᎦ ᎾᏍᏇ  ==
+*[[alto|ᎦᎸᎾᏗ ᎪᏃᎩᏗ]]
+*[[bass|ᎤᏔᏅ ᎧᏃᎩᏍᏗ]]
+*[[choir|ᏗᏂᏃᎩᏍᎩ]]
+*[[orchestra|ᏗᏂᏃᎩᏍᏗᏍᎩ]]
+*[[musical instruments|ᏗᎧᏃᎩᏛ ᎪᎱᏍᏗ ᏗᎬᏔᏂᏓᏍᏗ]]
 
 == ᎤᏓᏎᎦᏤᏗ ᏗᏕᎬᏔᏛ ==
 * [http://www.music.vt.edu/musicdictionary/ The Virginia Tech Multimedia Music Dictionary], ᎬᏙᏗ ᏩᏎᏍᏗ ᏀᎾ, ᎧᏁᎬ ᎤᏲᏴᎬ, ᏱᏓᏟᎶᏍᏔᏅ, quizzes ᎠᎴ ᏗᏟᎶᏍᏔᏅ
