--- a/ᎠᎦᎷᎦ.mw
+++ b/ᎠᎦᎷᎦ.mw
@@ -3,7 +3,7 @@
 
 ᎠᎦᎷᎦ ᏰᎵᏇ ᎾᏍᏋ ᎯᎠ ᎤᎪᏗᏗ ᎤᏲᏨᎯ ᎦᏃᎸᏍᎩ ᎠᎦᏍᎩ ᎾᎿ ᎡᎶᎯ. ᎤᎪᏗᏗ ᎤᎭ ᏅᎩᏨᎴ 110&nbsp;mph (175&nbsp;km/h) ᎠᎴ ᎦᏲᎵᎨ, ᎠᎴ ᎾᎥᏂᎨᏍᏙᏗᏇ 250&nbsp;ᏧᎾᎳᏏᏕᎾ (75&nbsp;ᎠᏎᎯᎯ) ᏗᎦᎾᏗᎯᏍᏗ, ᎠᎴ ᎡᏙᎵᏙᎲ ᎦᏲᎵ ᎢᏳᏟᎶᏛ (ᎯᎸᏍᎩ kilometers) ᎤᏓᎷᎸ dissipating. ᏱᏂᎬᏛᎾ, ᎢᎦᏛ ᎠᎦᎷᎦ ᏰᎵᏇ ᎤᎭ ᏅᎩᏨᎴ ᎤᏟ ᎢᎦᎢ ᎬᎾᏬᏍᎬ 300&nbsp;mph (480&nbsp;km/h), ᎾᏍᏋ ᎤᏟ ᎢᎦᎢ ᎬᎾᏬᏍᎬ ᏑᏟᎶᏛ (1.6&nbsp;km) ᏗᎦᎾᏗᎯᏍᏗ, ᎠᎴ ᎡᏙᎠ ᎾᎿ ᎯᎠ ᎦᏙᎯ ᎾᏍᎩᎾᎢ ᏔᎳᏚ ᎢᏳᏟᎶᏛ (ᎤᏟ ᎢᎦᎢ ᎬᎾᏬᏍᎬ 100&nbsp;kilometers).<ref name="fastest wind">Williams, Jack [http://www.usatoday.com/weather/tornado/wtwur318.htm "Doppler radar measures 318 mph [[wind|ᎤᏃᎴ]] ᎠᎦᎷᎦ-Ꭿ." ''ᎠᎹᏰᏟ ᎪᎯ ᎢᎦ.'' 1999 (2006-09-08)</ref><ref name="widest ᎠᎦᎷᎦ">[http://www.crh.noaa.gov/oax/archive/hallam/hallam.php "Hallam [[Nebraska|ᏎᎷᏱ]] ᎠᎦᎷᎦ." (2006-09-08) Omaha/Valley, NE ᎤᏁᎳᏅ ᎤᏬᏢᏅ Forecast Office. 2005-10-02</ref><ref name="SPC FAQ"> [http://www.spc.noaa.gov/faq/tornado "The Online ᎠᎦᎷᎦ FAQ." (2006-09-08) Edwards, Roger.| 2006-04-04. ''[[Storm Prediction Center|ᎦᏃᎸᏍᎩ ᎠᎦᏍᎩ ᎤᏚᎩ ᎬᏒ ᎠᏰᎵ]]''</ref>
 
-ᎤᏅᏌ ᎤᎭ ᏭᏪᏙᎢ ᎠᎦᏎᏍᏔᏅ ᎾᎿ ᏂᎦᎥᎢ ᎡᏆ ᎦᏙᎯ ᎾᏍᎩ ᎤᏩᏒ [[Antarctica|ᏧᏁᏍᏓᎸ]]; ᏱᏂᎬᏛᎾ, ᎦᏛᎬᎢ ᏎᏍᏗ ᎯᎠ ᎡᎶᎯ ᎤᏤᎵ ᎠᎦᎷᎦ ᏄᎵᏍᏔᏅ ᎭᏫᎾᏗᏢ ᎯᎠ [[United States|ᎠᎹᏰᏟ]].<ref name="Science News 1">Perkins, Sid.  "[http://www.sciencenews.org/articles/20020511/bob9.asp ᎠᎦᎷᎦ Alley, ᎠᎹᏰᏟ]."  ''[http://www.sciencenews.org/ Science News]''. ᎠᎾᏍᎬᏘ 11, 2002.</ref>  ᎪᎯ ᎨᏒᎢ ᎾᏍᎩ ᎤᎪᏗᏗ ᎤᏍᏆᎸᎲ ᎯᎠ ᏧᏓᎴᎿᎢ ᎠᏓᏕᏲᎲᏍᎩ ᎡᎶᎯ ᎯᎠ ᏙᏱᏗᏢ ᎦᏚᎲ, ᎦᏙ ᎤᏍᏗ ᎠᎵᏍᎪᎸᏙᏗ ᎯᎠ ᏄᏍᏗᏓᏅ ᎦᏙ ᎤᏍᏗ ᎠᏂᏁᏉᎬ ᎤᎳᏂᎩᏓ, ᎦᏅᎯᏓ-ᎠᎴᏂᏙᎸ ᎦᏃᎸᏍᎩ ᎠᎦᏍᎩ ᏄᎵᏍᏔᏅ ᎤᎪᏗᏗ [[times|ᎢᏧᏩᎪᏗ]] ᏑᏕᏘᏴᏓ.  ᏐᎢ ᎡᏍᎦᏂ ᎦᏙ ᎤᏍᏗ ᎢᏳᏓᎵᎭ ᎤᎦᏙᎲᏒ ᎠᎦᎷᎦ ᎠᎴ ᎤᎦᎾᏭ-ᎠᏰᎵ [[Canada|ᎨᎾᏓ]], ᎤᏕᎵᎬᏗᏢ ᎤᏴᏢ [[Europe|ᏳᎳᏛ]], ᎧᎸᎬ-ᎠᏰᎵ [[South America|ᏧᎦᎾᏮ ᎠᎹᏰᎵ]], [[South Africa|ᏧᎦᎾᏮ ᎬᎿᎦᏍᏛ]], ᎠᎴ ᎤᎦᎾᏭ-ᎠᏰᎵ [[Asia|ᏓᎶᏂᎦᏍᏛ]].<ref name="EB article"> "[http://www.britannica.com/eb/article-218357 ᎠᎦᎷᎦ]." ''[http://www.britannica.com/eb/ Encyclopædia Britannica]''. 2006.</ref>.
+ᎤᏅᏌ ᎤᎭ ᏭᏪᏙᎢ ᎠᎦᏎᏍᏔᏅ ᎾᎿ ᏂᎦᎥᎢ ᎡᏆ ᎦᏙᎯ ᎾᏍᎩ ᎤᏩᏒ [[Antarctica|ᏧᏁᏍᏓᎸ]]; ᏱᏂᎬᏛᎾ, ᎦᏛᎬᎢ ᏎᏍᏗ ᎯᎠ ᎡᎶᎯ ᎤᏤᎵ ᎠᎦᎷᎦ ᏄᎵᏍᏔᏅ ᎭᏫᎾᏗᏢ ᎯᎠ [[United States|ᎠᎹᏰᏟ]].<ref name="Science News 1">Perkins, Sid.  "[http://www.sciencenews.org/articles/20020511/bob9.asp ᎠᎦᎷᎦ Alley, ᎠᎹᏰᏟ]."  ''[http://www.sciencenews.org/ Science News]''. ᎠᎾᏍᎬᏘ 11, 2002.</ref>  ᎪᎯ ᎨᏒᎢ ᎾᏍᎩ ᎤᎪᏗᏗ ᎤᏍᏆᎸᎲ ᎯᎠ ᏧᏓᎴᎿᎢ ᎠᏓᏕᏲᎲᏍᎩ ᎡᎶᎯ ᎯᎠ ᏙᏱᏗᏢ ᎦᏚᎲ, ᎦᏙ ᎤᏍᏗ ᎠᎵᏍᎪᎸᏙᏗ ᎯᎠ ᏄᏍᏗᏓᏅ ᎦᏙ ᎤᏍᏗ ᎠᏂᏁᏉᎬ ᎤᎳᏂᎩᏓ, ᎦᏅᎯᏓ-ᎠᎴᏂᏙᎸ ᎦᏃᎸᏍᎩ ᎠᎦᏍᎩ ᏄᎵᏍᏔᏅ ᎤᎪᏗᏗ [[times|ᎢᏧᏩᎪᏗ]] ᏑᏕᏘᏴᏓ.  ᏐᎢ ᎡᏍᎦᏂ ᎦᏙ ᎤᏍᏗ ᎢᏳᏓᎵᎭ ᎤᎦᏙᎲᏒ ᎠᎦᎷᎦ ᎠᎴ ᎤᎦᎾᏭ-ᎠᏰᎵ [[Canada|ᎨᎾᏓ]], ᎤᏕᎵᎬᏗᏢ ᎤᏴᏢ [[Europe|ᏳᎳᏛ]], ᎧᎸᎬ-ᎠᏰᎵ [[South America|ᏧᎦᎾᏮ ᎠᎹᏰᎵ]], [[South Africa|ᏧᎦᎾᏮ ᎬᎿᎦᏍᏛ]], ᎠᎴ ᎤᎦᎾᏭ-ᎠᏰᎵ [[Asia|ᏓᎶᏂᎦᏍᏛ]].<ref name="EB article"> "[http://www.britannica.com/eb/article-218357 ᎠᎦᎷᎦ]." ''[http://www.britannica.com/eb/ Encyclopædia Britannica]''. 2006.</ref>
 
 == ᎧᏁᏨ ==
 ᎯᎠ ᎧᏁᏨ "ᎤᏃᎴ" ᎦᎷᎦ ᏂᏛᎴᏅᏓ ᎯᎠ [[Spanish language|ᏍᏆᏂ]] ᎧᏁᏨ ''tronada''<ref>[http://www.etymonline.com/index.php?term=tornado Online Etymology Dictionary]</ref> ("ᎠᎾᎵᏖᎸᎲᏍᎬ ᎦᏁᏰᎩ"), ᎠᏲᎶᎬ ᎾᎥᎢ ᎯᎠ [[folk etymology|ᎠᏍᎦᏯᎭ ᎧᏁᏨ]] ''tornar'' ("ᎠᎦᏔᎲᏍᏗ").
