/* ᏗᎧᏃᎩᏛ ᎪᎱᏍᏗ ᏗᎬᏔᏂᏓᏍᏗ ᏙᎪᏪᎸ */ +wikilink

--- a/ᏗᎧᏃᎩᏛ_ᎬᏔᏂᏓᏍᏗ.mw
+++ b/ᏗᎧᏃᎩᏛ_ᎬᏔᏂᏓᏍᏗ.mw
@@ -3,7 +3,7 @@
 
 ==ᏗᎧᏃᎩᏛ ᎪᎱᏍᏗ ᏗᎬᏔᏂᏓᏍᏗ ᏙᎪᏪᎸ==
 [[File:Cwy turtleshell rattle.jpg|thumb|280px|Ꭰ[[ᏣᎳᎩ]] [[terrapin shell|ᏓᎩᏏ ᎤᎤᏍᎦ]] [[ᎤᏦᎾᏔ]], [[Tommy Wildcat]]]]
-[[File:Boesendorfer fluegel3036.jpg|thumb|280px|Boesendorfer fluegel ᎤᏔᎾ ᏗᎧᏃᎩᏍᏗ]]
+[[File:Boesendorfer fluegel3036.jpg|thumb|280px|Boesendorfer fluegel [[ᎤᏔᎾ ᏗᎧᏃᎩᏍᏗ]]]]
 
 *[[drum|ᎠᎱᎵ]]<!--fiddle or violin --><ref name=cn>Cowen ᎠᎴ Noble 104-5</ref>
 *[[fiddle|ᎠᏟᏰᏗ]]<ref name=cn/>
