--- a/ᏗᎧᏃᎩᏛ.mw
+++ b/ᏗᎧᏃᎩᏛ.mw
@@ -178,7 +178,7 @@ Rhodian ᎠᏟᏰᏗ, ᎭᏫᎾᏗᏢ [3483]Philostratus, ᎯᎳᎪ ᎢᏳ Apoll
 == ᎪᏪᎵ ==
 Harwood, Dane (1976). "ᎢᎬᏩᎾᏓᎴᎩ ᎭᏫᎾᏗᏢ ᏗᎧᏃᎩᏛ: ᎦᎾᏄᎪᏨᎢ ᏂᏛᎴᏅᏓ ᎥᎦᏔᎲᎢ ᎣᏓᏅᏛ", ''Ethnomusicology'' 20, Ꮭ. 3:521-33.
 * ᏣᏂ ᎤᏪᏥ, Julian (2002). ''ᎦᎪ ᎤᏚᎸᏗ ᏄᎾᏛᏅ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᏗᎧᏃᎩᏛ?: ᎥᎦᏔᎲᎢ ᎠᏑᏰᏛ ᎠᎴ ᏗᎧᏃᎩᏛ ᎦᏃᏢᎩ ᏧᎬᏩᎶᏗ''. Oxford ᏗᏕᎶᏆᏍᏗ ᏗᏂᎴᏱᏗᏍᎩ. ISBN 0-19-514681-6.
-* Kertz-Welzel, Alexandra. "ᎤᏔᏅ ᏗᎧᏃᎩᏍᏗ ᎤᎵᏍᏓ ᏗᎫᎪᏙᏗ ᎤᏙᎷᏬᏗ ᏗᎧᏃᎩᏛ." ''Orff-ᎤᏃᏴᎬ ᏂᏓᏳᏨᏓ'' XXXVII Ꮭ. 1 (2004): 11-14.
+* Kertz-Welzel, Alexandra. "[[ᎤᏔᏅ ᏗᎧᏃᎩᏍᏗ]] ᎤᎵᏍᏓ ᏗᎫᎪᏙᏗ ᎤᏙᎷᏬᏗ ᏗᎧᏃᎩᏛ." ''Orff-ᎤᏃᏴᎬ ᏂᏓᏳᏨᏓ'' XXXVII Ꮭ. 1 (2004): 11-14.
 * Kertz-Welzel, Alexandra. "ᎯᎠ ᏓᏂᏃᎩᏍᎬ ᏁᎵᏒ: ᏦᎢ ᏍᎪᎯᏧᏈ ᏧᏕᏘᏴᏗ ᏗᎧᏃᎩᏛ ᏗᏕᎶᏆᏍᏗ ᎭᏫᎾᏗᏢ [[Germany|ᎠᏂᏛᏥ]]." ᏕᎪᏪᎸ ᎧᏃᎮᏍᎩ ᏄᎵᏍᏔᏅ ᏅᎠᏯᏍᏗ ᎭᏫᎾᏗᏢ ᏗᎧᏃᎩᏛ ᏗᏕᎶᏆᏍᏗ XXVI Ꮭ. 1 (2004): 8-27.
 * Kertz-Welzel, Alexandra. "Didaktik ᏗᎧᏃᎩᏛ: ᎠᏓᏥ ᎠᏓᏅᏖᏗ ᎠᎴ Ꮝ ᎤᏠᏱ ᎾᎬᏁᎲ ᏴᏩᏁᎬ ᏗᎧᏃᎩᏛ Pedagogy." ᎠᏰᎵ ᏚᎾᏙᏢᏒ ᏕᎪᏪᎸ ᏗᎧᏃᎩᏛ ᏗᏕᎶᏆᏍᏗ (ᎠᎵᏏᏀᎢᏍᏙᏗ) 22 Ꮭ. 3 (2004): 277-286. 
 * Kertz-Welzel, Alexandra. "ᏂᎦᎥ ᏗᎧᏃᎩᏛ ᏗᏕᎶᏆᏍᏗ ᎭᏫᎾᏗᏢ [[Germany|ᎠᏂᏛᏥ]] ᎪᎯ ᎢᎦ: ᎭᎦᏔ ᎾᎾᎢ ᎯᎳᎪ ᎤᏂᎸᏉᏗ ᏗᎧᏃᎩᏛ ᎨᏒᎢ ᏗᏓᏁᏤᏗ ᏙᎾᏕ ᎶᏆᏍᎩ." ᏂᎦᎥ ᏗᎧᏃᎩᏛ ᎪᎯ ᎢᎦ 18 Ꮭ. 2 (ᎪᎳ 2005): 14-16. 
