--- a/ᏒᎳᏗᏝ.mw
+++ b/ᏒᎳᏗᏝ.mw
@@ -14,6 +14,8 @@
 | ᏚᎬᏫᏳᎯ ᏂᎰᏂ = 
 | ᎠᏕᎳ = ᏒᎳᏗᏝ ᎠᏕᎳ
 }}
+[[File:Alan Dargin 2003.jpg|thumb|[[Alan Dagin]] (1967—2008), ᎡᎯᏯᎢ ᏗᎧᏃᎩᏍᏗᎩ]]
+[[File:LenWaters.jpg|thumb|[[Len Waters]] (1924–1993) ᎢᎬᏱ ᎡᎯᏯᎢ [[military|ᎠᏂᏯᏫᏍᎩ]] [[aviator|ᎦᏃᎯᎵᏙᎯ]] ᏖᎳᏗᏝ-Ꭿ ᎨᏒᎢ.]]
 '''ᏒᎳᏗᏝ''' [[ᎡᏆ ᎦᏙᎯ]], [[ᏍᎦᏚᎩ]] ᎠᎴ Ꮎ ᎤᏔᏂᎢᏍᏗ [[ᎠᎽᏰᎵ]]. ᏒᎳᏗᏝ, ᏍᎦᏚᎩ, ᎠᏠᏯᏍᏗ [[Tasmania|ᏔᏍᎺᏂᎠ]] ᎠᎴ ᎯᎸᏍᏗ ᎠᏲᎵᎨ ᎠᎹᏰᎵ. 
 
 ==ᎧᏃᎮᎭ ᎠᎴ ᎿᎾ ᎨᏒ==
@@ -64,3 +66,201 @@
 :*[http://www.australia.com/index.aspx ᎠᏁᏙᎵᏙᎲ ᏒᎳᏗᏢ-Ꭿ]
 [[Category:ᎡᏆ ᎦᏙᎯ]]
 [[Category:ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ]]
+
+[[ace:Australia]]
+[[af:Australië]]
+[[als:Australien]]
+[[am:አውስትራልያ]]
+[[ang:Australia]]
+[[ar:أستراليا]]
+[[an:Australia]]
+[[arc:ܐܘܣܛܪܠܝܐ (ܐܬܪܐ)]]
+[[roa-rup:Australia]]
+[[frp:Ôstralie]]
+[[ast:Australia]]
+[[az:Avstraliya]]
+[[bm:Ostralia]]
+[[bn:অস্ট্রেলিয়া]]
+[[zh-min-nan:Australia]]
+[[ba:Австралия]]
+[[bar:Australien]]
+[[be:Аўстралія]]
+[[be-x-old:Аўстралія]]
+[[bcl:Australya]]
+[[bg:Австралия]]
+[[bi:Ostrelia]]
+[[bo:ཨོ་སེ་ཐེ་ལི་ཡ།]]
+[[br:Aostralia]]
+[[bs:Australija]]
+[[ca:Austràlia]]
+[[ceb:Awstralya]]
+[[chr:ᏒᎳᏗᏝ]]
+[[co:Australia]]
+[[cs:Austrálie]]
+[[cv:Австрали]]
+[[cy:Awstralia]]
+[[da:Australien]]
+[[pdc:Australie]]
+[[de:Australien]]
+[[dv:އޮސްޓަރުލިޔާ]]
+[[nv:Nahatʼeʼiitsoh Bikéyah]]
+[[dsb:Awstralska]]
+[[dz:ཨས་ཊེཡེ་ལི་ཡ]]
+[[el:Αυστραλία]]
+[[en:Australia]]
+[[eo:Aŭstralio]]
+[[es:Australia]]
+[[et:Austraalia]]
+[[ext:Austrália]]
+[[eu:Australia]]
+[[ee:Australia]]
+[[fa:استرالیا]]
+[[hif:Australia]]
+[[fo:Avstralia]]
+[[fr:Australie]]
+[[fy:Austraalje (lân)]]
+[[fur:Australie]]
+[[ga:An Astráil]]
+[[gv:Yn Austrail]]
+[[gd:Astràilia]]
+[[gl:Australia]]
+[[gan:澳大利亞]]
+[[gu:ઑસ્ટ્રેલિયા]]
+[[hak:Àu-thai-li-â]]
+[[xal:Австралмудин Ниицән]]
+[[ko:오스트레일리아]]
+[[ha:Asturaliya]]
+[[haw:‘Aukekulelia]]
+[[hy:Ավստրալիա]]
+[[hi:ऑस्ट्रेलिया]]
+[[hsb:Awstralska]]
+[[hr:Australija]]
+[[io:Australia]]
+[[ig:Ostraliya]]
+[[bpy:অস্ট্রেলিয়া]]
+[[id:Australia]]
+[[ia:Australia]]
+[[ie:Australia]]
+[[iu:ᐊᔅᑦᕌᓕᐊ/astraalia]]
+[[os:Австрали]]
+[[zu:I-Ostreliya]]
+[[is:Ástralía]]
+[[it:Australia]]
+[[he:אוסטרליה]]
+[[jv:Australia]]
+[[kl:Australia]]
+[[kn:ಆಸ್ಟ್ರೇಲಿಯ]]
+[[pam:Australia]]
+[[krc:Австралия]]
+[[ka:ავსტრალია]]
+[[kk:Австралия Одағы]]
+[[kw:Ostrali]]
+[[ky:Австралия]]
+[[sw:Australia]]
+[[kv:Австралия]]
+[[kg:Australia]]
+[[ht:Ostrali]]
+[[ku:Awistralya]]
+[[lo:ປະເທດອົດສະຕາລີ]]
+[[la:Australia]]
+[[lv:Austrālija]]
+[[lb:Australien]]
+[[lt:Australija]]
+[[lij:Australia]]
+[[li:Australië]]
+[[jbo:sralygu'e]]
+[[lmo:Aüstralia]]
+[[hu:Ausztrália]]
+[[mk:Австралија]]
+[[mg:Aostralia]]
+[[ml:ഓസ്ട്രേലിയ]]
+[[mt:Awstralja]]
+[[mi:Ahitereiria]]
+[[mr:ऑस्ट्रेलिया]]
+[[arz:اوستراليا]]
+[[ms:Australia]]
+[[cdo:Ó̤-ciŭ]]
+[[mwl:Oustrália]]
+[[mdf:Австралие]]
+[[mn:Австрали]]
+[[my:ဩစတြေးလျနိုင်ငံ]]
+[[nah:Australia]]
+[[na:Otereiriya]]
+[[nl:Australië (land)]]
+[[ne:अष्ट्रेलिया]]
+[[ja:オーストラリア]]
+[[pih:Ostrielya]]
+[[no:Australia]]
+[[nn:Australia]]
+[[nrm:Australie]]
+[[nov:Australia]]
+[[oc:Austràlia]]
+[[mhr:Австралий]]
+[[om:Australia]]
+[[uz:Avstraliya Hamjamiyati]]
+[[pa:ਆਸਟ੍ਰੇਲੀਆ]]
+[[pnb:آسٹریلیا]]
+[[ps:آسټراليا]]
+[[km:អូស្ត្រាលី]]
+[[pms:Australia]]
+[[tpi:Ostrelia]]
+[[nds:Australien]]
+[[pl:Australia]]
+[[pnt:Αυστραλία]]
+[[pt:Austrália]]
+[[crh:Avstraliya]]
+[[ty:Autereraria]]
+[[ro:Australia]]
+[[rm:Australia]]
+[[qu:Awstralya]]
+[[ru:Австралия]]
+[[sah:Аустралиа]]
+[[se:Austrália]]
+[[sm:Ausetalia]]
+[[sa:आस्ट्रेलिया]]
+[[sg:Ostralïi]]
+[[sco:Australie]]
+[[stq:Australien (Lound)]]
+[[sq:Australia]]
+[[scn:Australia]]
+[[simple:Australia]]
+[[sk:Austrália (štát)]]
+[[cu:Аѵстралі́ꙗ]]
+[[sl:Avstralija]]
+[[szl:Australijo]]
+[[so:Australia]]
+[[ckb:ئۆسترالیا]]
+[[sr:Аустралија]]
+[[sh:Australija]]
+[[su:Australia]]
+[[fi:Australia]]
+[[sv:Australien]]
+[[tl:Australya]]
+[[ta:ஆஸ்திரேலியா]]
+[[tt:Австралия]]
+[[te:ఆస్ట్రేలియా]]
+[[tet:Austrália]]
+[[th:ประเทศออสเตรเลีย]]
+[[tg:Австралия]]
+[[tr:Avustralya]]
+[[tk:Awstraliýa]]
+[[uk:Австралійський Союз]]
+[[ur:آسٹریلیا]]
+[[ug:ئاۋستىرالىيە]]
+[[za:Audaihleihya]]
+[[vec:Austrałia]]
+[[vi:Úc]]
+[[vo:Laustralän]]
+[[fiu-vro:Austraalia]]
+[[zh-classical:澳大利亞]]
+[[vls:Australië (land)]]
+[[war:Australya]]
+[[wo:Óstraali]]
+[[yi:אויסטראליע]]
+[[yo:Austrálíà]]
+[[zh-yue:澳洲]]
+[[diq:Awıstralya]]
+[[zea:Australië]]
+[[bat-smg:Australėjė]]
+[[zh:澳大利亚]]
+[[bjn:Australia]]
